@@ -1,25 +1,12 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.daemon.impl.quickfix;
 
 import com.intellij.codeInsight.daemon.QuickFixBundle;
 import com.intellij.codeInsight.intention.IntentionAction;
-import com.intellij.codeInspection.LocalQuickFixAndIntentionActionOnPsiElement;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.project.Project;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModPsiUpdater;
+import com.intellij.modcommand.Presentation;
+import com.intellij.modcommand.PsiUpdateModCommandAction;
 import com.intellij.psi.*;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.Nls;
@@ -29,10 +16,7 @@ import org.jetbrains.annotations.Nullable;
 import java.util.*;
 import java.util.stream.Collectors;
 
-/**
- * @author Pavel.Dolgov
- */
-public class AddAnnotationAttributeNameFix extends LocalQuickFixAndIntentionActionOnPsiElement {
+public class AddAnnotationAttributeNameFix extends PsiUpdateModCommandAction<PsiNameValuePair> {
   private final String myName;
 
   public AddAnnotationAttributeNameFix(PsiNameValuePair pair, String name) {
@@ -43,32 +27,19 @@ public class AddAnnotationAttributeNameFix extends LocalQuickFixAndIntentionActi
   @Nls
   @NotNull
   @Override
-  public String getText() {
-    return QuickFixBundle.message("add.annotation.attribute.name", myName);
-  }
-
-  @Nls
-  @NotNull
-  @Override
   public String getFamilyName() {
     return QuickFixBundle.message("add.annotation.attribute.name.family.name");
   }
 
   @Override
-  public void invoke(@NotNull Project project,
-                     @NotNull PsiFile file,
-                     @Nullable Editor editor,
-                     @NotNull PsiElement startElement,
-                     @NotNull PsiElement endElement) {
-    doFix((PsiNameValuePair)startElement, myName);
+  protected void invoke(@NotNull ActionContext context, @NotNull PsiNameValuePair element, @NotNull ModPsiUpdater updater) {
+    doFix(element, myName);
   }
 
   @Override
-  public boolean isAvailable(@NotNull Project project,
-                             @NotNull PsiFile file,
-                             @NotNull PsiElement startElement,
-                             @NotNull PsiElement endElement) {
-    return super.isAvailable(project, file, startElement, endElement) && startElement instanceof PsiNameValuePair;
+  protected @Nullable Presentation getPresentation(@NotNull ActionContext context, @NotNull PsiNameValuePair element) {
+    return Presentation.of(QuickFixBundle.message("add.annotation.attribute.name", myName))
+      .withFixAllOption(this);
   }
 
   @NotNull
@@ -79,7 +50,7 @@ public class AddAnnotationAttributeNameFix extends LocalQuickFixAndIntentionActi
     }
 
     final Collection<String> methodNames = getAvailableAnnotationMethodNames(pair);
-    return ContainerUtil.map2List(methodNames, name -> new AddAnnotationAttributeNameFix(pair, name));
+    return ContainerUtil.map(methodNames, name -> new AddAnnotationAttributeNameFix(pair, name).asIntention());
   }
 
   public static void doFix(@NotNull PsiNameValuePair annotationParameter, @NotNull String name) {
@@ -111,8 +82,7 @@ public class AddAnnotationAttributeNameFix extends LocalQuickFixAndIntentionActi
     final PsiAnnotationMemberValue value = pair.getValue();
     if (value != null && pair.getName() == null) {
       final PsiElement parent = pair.getParent();
-      if ((parent instanceof PsiAnnotationParameterList)) {
-        final PsiAnnotationParameterList parameterList = (PsiAnnotationParameterList)parent;
+      if ((parent instanceof PsiAnnotationParameterList parameterList)) {
         final PsiClass annotationClass = getAnnotationClass(parameterList);
 
         if (annotationClass != null) {
@@ -120,8 +90,7 @@ public class AddAnnotationAttributeNameFix extends LocalQuickFixAndIntentionActi
 
           final Collection<PsiMethod> availableMethods = Arrays.stream(annotationClass.getMethods())
             .filter(PsiAnnotationMethod.class::isInstance)
-            .filter(psiMethod -> !usedNames.contains(psiMethod.getName()))
-            .collect(Collectors.toList());
+            .filter(psiMethod -> !usedNames.contains(psiMethod.getName())).toList();
 
           if (!availableMethods.isEmpty()) {
             final PsiType valueType = CreateAnnotationMethodFromUsageFix.getAnnotationValueType(value);
