@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.project;
 
 import com.intellij.codeHighlighting.Pass;
@@ -18,13 +18,10 @@ import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.impl.source.PsiFileImpl;
-import com.intellij.testFramework.HeavyPlatformTestCase;
-import com.intellij.testFramework.LeakHunter;
-import com.intellij.testFramework.PlatformTestUtil;
-import com.intellij.testFramework.ServiceContainerUtil;
+import com.intellij.testFramework.*;
 import com.intellij.testFramework.fixtures.impl.CodeInsightTestFixtureImpl;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import static com.intellij.testFramework.RunAll.runAll;
 
@@ -32,8 +29,8 @@ public class LoadProjectTest extends HeavyPlatformTestCase {
   @Override
   protected void setUpProject() throws Exception {
     String projectPath = PathManagerEx.getTestDataPath() + "/model/model.ipr";
-    myProject = PlatformTestUtil.loadAndOpenProject(Paths.get(projectPath), getTestRootDisposable());
-    ServiceContainerUtil.registerComponentImplementation(myProject, FileEditorManager.class, FileEditorManagerImpl.class);
+    myProject = PlatformTestUtil.loadAndOpenProject(Path.of(projectPath), getTestRootDisposable());
+    ServiceContainerUtil.registerServiceInstance(myProject, FileEditorManager.class, new FileEditorManagerImpl(myProject, myProject.getCoroutineScope()));
   }
 
   @Override
@@ -65,6 +62,7 @@ public class LoadProjectTest extends HeavyPlatformTestCase {
     fileA.navigate(true);
     Editor editorA = FileEditorManager.getInstance(getProject()).openTextEditor(new OpenFileDescriptor(getProject(), a), true);
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+    EditorTestUtil.waitForLoading(editorA);
 
     assertNotNull(editorA);
     CodeInsightTestFixtureImpl.instantiateAndRun(fileA, editorA, new int[] {Pass.EXTERNAL_TOOLS}, false);
@@ -82,6 +80,5 @@ public class LoadProjectTest extends HeavyPlatformTestCase {
 
     FileEditor[] allEditors = FileEditorManager.getInstance(getProject()).getAllEditors();
     assertEquals(2, allEditors.length);
-
   }
 }
