@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.diff.impl;
 
 import com.intellij.codeInsight.hint.HintManager;
@@ -8,9 +8,13 @@ import com.intellij.diff.*;
 import com.intellij.diff.FrameDiffTool.DiffViewer;
 import com.intellij.diff.actions.impl.*;
 import com.intellij.diff.impl.DiffSettingsHolder.DiffSettings;
+import com.intellij.diff.impl.ui.DiffToolChooser;
 import com.intellij.diff.lang.DiffIgnoredRangeProvider;
 import com.intellij.diff.requests.*;
 import com.intellij.diff.tools.ErrorDiffTool;
+import com.intellij.diff.tools.external.ExternalDiffSettings;
+import com.intellij.diff.tools.external.ExternalDiffSettings.ExternalTool;
+import com.intellij.diff.tools.external.ExternalDiffSettings.ExternalToolGroup;
 import com.intellij.diff.tools.external.ExternalDiffTool;
 import com.intellij.diff.tools.util.DiffDataKeys;
 import com.intellij.diff.tools.util.PrevNextDifferenceIterable;
@@ -24,6 +28,7 @@ import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.ex.ActionUtil;
 import com.intellij.openapi.actionSystem.ex.ComboBoxAction;
+import com.intellij.openapi.actionSystem.impl.ActionButton;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
@@ -32,8 +37,6 @@ import com.intellij.openapi.diff.DiffBundle;
 import com.intellij.openapi.diff.impl.DiffUsageTriggerCollector;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.LogicalPosition;
-import com.intellij.openapi.keymap.Keymap;
-import com.intellij.openapi.keymap.KeymapManager;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.DumbAware;
@@ -50,13 +53,17 @@ import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
 import com.intellij.ui.*;
 import com.intellij.ui.components.JBPanelWithEmptyText;
 import com.intellij.ui.components.panels.Wrapper;
-import com.intellij.ui.mac.TouchbarDataKeys;
-import com.intellij.ui.mac.UpdatableDefaultActionGroup;
+import com.intellij.ui.mac.touchbar.Touchbar;
 import com.intellij.ui.scale.JBUIScale;
+import com.intellij.util.EventDispatcher;
+import com.intellij.util.ObjectUtils;
 import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.JBUI;
+import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.UIUtil;
+import com.intellij.util.ui.components.BorderLayoutPanel;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -64,38 +71,54 @@ import org.jetbrains.annotations.Nullable;
 import javax.swing.*;
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 
-public abstract class DiffRequestProcessor implements Disposable {
+import static com.intellij.diff.util.DiffUtil.recursiveRegisterShortcutSet;
+import static com.intellij.util.ObjectUtils.chooseNotNull;
+
+public abstract class DiffRequestProcessor implements CheckedDisposable {
   private static final Logger LOG = Logger.getInstance(DiffRequestProcessor.class);
+
+  private static final DataKey<DiffTool> ACTIVE_DIFF_TOOL = DataKey.create("active_diff_tool");
 
   private boolean myDisposed;
 
-  @Nullable private final Project myProject;
-  @NotNull private final DiffContext myContext;
+  private final @Nullable Project myProject;
+  private final @NotNull DiffContext myContext;
 
-  @NotNull private final DiffSettings mySettings;
-  @NotNull private final List<DiffTool> myAvailableTools = new ArrayList<>();
-  @NotNull private final List<DiffTool> myToolOrder = new ArrayList<>();
-  @Nullable private final DiffTool myForcedDiffTool;
+  private final @NotNull DiffSettings mySettings;
+  private @NotNull List<DiffTool> myToolOrder = Collections.emptyList(); // stores non-FrameDiffTool to keep the ordering
+  private final @Nullable FrameDiffTool myForcedDiffTool;
 
-  @NotNull private final DefaultActionGroup myToolbarGroup;
-  @NotNull private final DefaultActionGroup myPopupActionGroup;
-  @NotNull private final UpdatableDefaultActionGroup myTouchbarActionGroup;
+  private final @NotNull DefaultActionGroup myToolbarGroup;
+  private final @NotNull DefaultActionGroup myRightToolbarGroup;
+  private final @NotNull DefaultActionGroup myPopupActionGroup;
+  private final @NotNull DefaultActionGroup myTouchbarActionGroup;
 
-  @NotNull private final JPanel myPanel;
-  @NotNull private final MyPanel myMainPanel;
-  @NotNull protected final Wrapper myContentPanel;
-  @NotNull private final ActionToolbar myToolbar;
-  @NotNull protected final Wrapper myToolbarWrapper;
-  @NotNull private final Wrapper myToolbarStatusPanel;
-  @NotNull private final MyProgressBar myProgressBar;
+  private final @NotNull JPanel myPanel;
+  private final @NotNull MyPanel myMainPanel;
+  private final @NotNull Wrapper myContentPanel;
+  private final @NotNull JPanel myTopPanel;
+  private final @NotNull ActionToolbar myToolbar;
+  private final @NotNull ActionToolbar myRightToolbar;
+  protected final @NotNull Wrapper myToolbarWrapper;
+  protected final @NotNull Wrapper myDiffInfoWrapper;
+  protected final @NotNull Wrapper myRightToolbarWrapper;
+  private final @NotNull Wrapper myToolbarStatusPanel;
+  private final @NotNull MyProgressBar myProgressBar;
 
-  @NotNull private DiffRequest myActiveRequest;
+  private final @NotNull EventDispatcher<DiffRequestProcessorListener> myEventDispatcher =
+    EventDispatcher.create(DiffRequestProcessorListener.class);
 
-  @NotNull private ViewerState myState;
+  private @NotNull DiffRequest myActiveRequest;
+
+  private @NotNull ViewerState myState;
+
+  private @Nullable ScrollToPolicy myCurrentScrollToPolicy;
+
+  private final boolean myIsNewToolbar;
 
   public DiffRequestProcessor(@Nullable Project project) {
     this(project, new UserDataHolderBase());
@@ -112,42 +135,54 @@ public abstract class DiffRequestProcessor implements Disposable {
     myActiveRequest = new LoadingDiffRequest();
 
     mySettings = DiffSettings.getSettings(myContext.getUserData(DiffUserDataKeys.PLACE));
-    myForcedDiffTool = myContext.getUserData(DiffUserDataKeysEx.FORCE_DIFF_TOOL);
+    myForcedDiffTool = ObjectUtils.tryCast(myContext.getUserData(DiffUserDataKeysEx.FORCE_DIFF_TOOL), FrameDiffTool.class);
 
-    updateAvailableDiffTools();
+    myIsNewToolbar = DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_NEW_TOOLBAR, myContext);
+
+    readToolOrderFromSettings();
     DiffTool.EP_NAME.addChangeListener(() -> {
-      updateAvailableDiffTools();
+      readToolOrderFromSettings();
       updateRequest(true);
     }, this);
     DiffToolSubstitutor.EP_NAME.addChangeListener(() -> updateRequest(true), this);
     DiffIgnoredRangeProvider.EP_NAME.addChangeListener(() -> updateRequest(true), this);
 
     myToolbarGroup = new DefaultActionGroup();
+    myRightToolbarGroup = new DefaultActionGroup();
     myPopupActionGroup = new DefaultActionGroup();
-    myTouchbarActionGroup = new UpdatableDefaultActionGroup();
-    TouchbarDataKeys.putActionDescriptor(myTouchbarActionGroup).setReplaceEsc(false);
+    myTouchbarActionGroup = new DefaultActionGroup();
 
     // UI
 
     myMainPanel = new MyPanel();
+    Touchbar.setActions(myMainPanel, myTouchbarActionGroup);
+
     myContentPanel = new Wrapper();
     myToolbarStatusPanel = new Wrapper();
     myProgressBar = new MyProgressBar();
 
     myToolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.DIFF_TOOLBAR, myToolbarGroup, true);
+    putContextUserData(DiffUserDataKeysEx.LEFT_TOOLBAR, myToolbar);
+    if (myIsNewToolbar) {
+      myToolbar.setLayoutPolicy(ActionToolbar.NOWRAP_LAYOUT_POLICY);
+    }
     myToolbar.setTargetComponent(myMainPanel);
     myToolbarWrapper = new Wrapper(myToolbar.getComponent());
 
-    myPanel = JBUI.Panels.simplePanel(myMainPanel);
+    myRightToolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.DIFF_RIGHT_TOOLBAR, myRightToolbarGroup, true);
+    myRightToolbar.setLayoutPolicy(ActionToolbar.NOWRAP_LAYOUT_POLICY);
+    myRightToolbar.setTargetComponent(myMainPanel);
 
-    JPanel statusPanel = JBUI.Panels.simplePanel(myToolbarStatusPanel).addToLeft(myProgressBar);
-    JPanel topPanel = JBUI.Panels.simplePanel(myToolbarWrapper).addToRight(statusPanel);
-    GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+    myRightToolbarWrapper = new Wrapper(JBUI.Panels.simplePanel(myRightToolbar.getComponent()));
+
+    myPanel = JBUI.Panels.simplePanel(myMainPanel);
+    myDiffInfoWrapper = new Wrapper();
+    myTopPanel = buildTopPanel();
 
     Splitter bottomContentSplitter = new JBSplitter(true, "DiffRequestProcessor.BottomComponentSplitter", 0.8f);
     bottomContentSplitter.setFirstComponent(myContentPanel);
 
-    myMainPanel.add(topPanel, BorderLayout.NORTH);
+    myMainPanel.add(myTopPanel, BorderLayout.NORTH);
     myMainPanel.add(bottomContentSplitter, BorderLayout.CENTER);
 
     myMainPanel.setFocusTraversalPolicyProvider(true);
@@ -161,6 +196,23 @@ public abstract class DiffRequestProcessor implements Disposable {
     myContentPanel.setContent(DiffUtil.createMessagePanel(((LoadingDiffRequest)myActiveRequest).getMessage()));
   }
 
+  private @NotNull BorderLayoutPanel buildTopPanel() {
+    BorderLayoutPanel topPanel;
+    if (myIsNewToolbar) {
+      BorderLayoutPanel rightPanel = JBUI.Panels.simplePanel(myRightToolbarWrapper).addToLeft(myProgressBar);
+      topPanel = JBUI.Panels.simplePanel(myDiffInfoWrapper).addToLeft(myToolbarWrapper).addToRight(rightPanel);
+      GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+      GuiUtils.installVisibilityReferent(topPanel, myRightToolbar.getComponent());
+    }
+    else {
+      JPanel statusPanel = JBUI.Panels.simplePanel(myToolbarStatusPanel).addToLeft(myProgressBar);
+      topPanel = JBUI.Panels.simplePanel(myToolbarWrapper).addToRight(statusPanel);
+      GuiUtils.installVisibilityReferent(topPanel, myToolbar.getComponent());
+    }
+
+    return topPanel;
+  }
+
   protected boolean shouldAddToolbarBottomBorder(@NotNull FrameDiffTool.ToolbarComponents toolbarComponents) {
     return toolbarComponents.needTopToolbarBorder;
   }
@@ -168,6 +220,15 @@ public abstract class DiffRequestProcessor implements Disposable {
   //
   // Update
   //
+
+  public void addListener(@NotNull DiffRequestProcessorListener listener, @Nullable Disposable disposable) {
+    if (disposable != null) {
+      myEventDispatcher.addListener(listener, disposable);
+    }
+    else {
+      myEventDispatcher.addListener(listener);
+    }
+  }
 
   @RequiresEdt
   protected void reloadRequest() {
@@ -181,50 +242,43 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   @RequiresEdt
   public void updateRequest(boolean force) {
-    updateRequest(force, null);
+    updateRequest(force, myCurrentScrollToPolicy);
   }
 
   @RequiresEdt
   public abstract void updateRequest(boolean force, @Nullable ScrollToPolicy scrollToChangePolicy);
 
-  @NotNull
-  private FrameDiffTool getFittedTool(boolean applySubstitutor) {
-    if (myForcedDiffTool instanceof FrameDiffTool) {
-      return myForcedDiffTool.canShow(myContext, myActiveRequest)
-             ? (FrameDiffTool)myForcedDiffTool
+  private static @NotNull FrameDiffTool findFittedTool(@NotNull List<? extends DiffTool> tools,
+                                                       @NotNull DiffContext diffContext,
+                                                       @NotNull DiffRequest diffRequest,
+                                                       @Nullable FrameDiffTool forcedDiffTool) {
+    if (forcedDiffTool != null) {
+      return forcedDiffTool.canShow(diffContext, diffRequest)
+             ? forcedDiffTool
              : ErrorDiffTool.INSTANCE;
     }
 
-    List<FrameDiffTool> tools = filterFittedTools(myToolOrder);
-    FrameDiffTool tool = tools.isEmpty() ? ErrorDiffTool.INSTANCE : tools.get(0);
+    List<FrameDiffTool> fittedTools = filterFittedTools(tools, diffContext, diffRequest);
+    FrameDiffTool tool = ContainerUtil.getFirstItem(fittedTools, ErrorDiffTool.INSTANCE);
 
-    if (applySubstitutor) {
-      FrameDiffTool substitutor = findToolSubstitutor(tool);
-      if (substitutor != null) return substitutor;
-    }
+    FrameDiffTool substitutor = findToolSubstitutor(tool, diffContext, diffRequest);
+    if (substitutor != null) return substitutor;
 
     return tool;
   }
 
-  @NotNull
-  private List<FrameDiffTool> getAvailableFittedTools() {
-    return filterFittedTools(myAvailableTools);
-  }
-
-  @NotNull
-  private List<FrameDiffTool> filterFittedTools(@NotNull List<? extends DiffTool> tools) {
+  private static @NotNull List<FrameDiffTool> filterFittedTools(@NotNull List<? extends DiffTool> tools,
+                                                                @NotNull DiffContext diffContext,
+                                                                @NotNull DiffRequest diffRequest) {
     List<FrameDiffTool> result = new ArrayList<>();
     for (DiffTool tool : tools) {
       try {
         if (tool instanceof FrameDiffTool) {
-          if (tool.canShow(myContext, myActiveRequest)) {
+          if (tool.canShow(diffContext, diffRequest)) {
             result.add((FrameDiffTool)tool);
           }
-          else {
-            FrameDiffTool substitutor = findToolSubstitutor(tool);
-            if (substitutor != null) {
-              result.add((FrameDiffTool)tool);
-            }
+          else if (findToolSubstitutor(tool, diffContext, diffRequest) != null) {
+            result.add((FrameDiffTool)tool);
           }
         }
       }
@@ -239,37 +293,53 @@ public abstract class DiffRequestProcessor implements Disposable {
     return DiffUtil.filterSuppressedTools(result);
   }
 
-  private FrameDiffTool findToolSubstitutor(@NotNull DiffTool tool) {
-    DiffTool substitutor = DiffUtil.findToolSubstitutor(tool, myContext, myActiveRequest);
+  private static @Nullable FrameDiffTool findToolSubstitutor(@NotNull DiffTool tool,
+                                                             @NotNull DiffContext diffContext,
+                                                             @NotNull DiffRequest diffRequest) {
+    DiffTool substitutor = DiffUtil.findToolSubstitutor(tool, diffContext, diffRequest);
     return substitutor instanceof FrameDiffTool ? (FrameDiffTool)substitutor : null;
   }
 
-  private void updateAvailableDiffTools() {
-    myAvailableTools.clear();
-    myToolOrder.clear();
-
-    myAvailableTools.addAll(DiffManagerEx.getInstance().getDiffTools());
-    myToolOrder.addAll(getToolOrderFromSettings(myAvailableTools));
+  private static @NotNull List<DiffTool> getAllKnownTools() {
+    return DiffManagerEx.getInstance().getDiffTools();
   }
 
-  private void moveToolOnTop(@NotNull DiffTool tool) {
-    myToolOrder.remove(tool);
+  @RequiresEdt
+  private void readToolOrderFromSettings() {
+    myToolOrder = getToolOrderFromSettings(getAllKnownTools());
+  }
 
-    FrameDiffTool toolToReplace = getFittedTool(false);
+  private void switchToDiffTool(@NotNull DiffTool diffTool) {
+    if (myForcedDiffTool != null) return;
+    if (isSameToolOrSubstitutor(diffTool, myState.getActiveTool(), myContext, myActiveRequest)) return;
 
-    int index;
-    for (index = 0; index < myToolOrder.size(); index++) {
-      if (myToolOrder.get(index) == toolToReplace) break;
-    }
-    myToolOrder.add(index, tool);
+    DiffUsageTriggerCollector.logToggleDiffTool(myProject, diffTool, myContext.getUserData(DiffUserDataKeys.PLACE));
 
+    myToolOrder = moveToolToTop(diffTool, myToolOrder, myContext, myActiveRequest);
     updateToolOrderSettings(myToolOrder);
+
+    updateRequest(true);
   }
 
-  @NotNull
-  private ViewerState createState() {
-    FrameDiffTool frameTool = getFittedTool(true);
+  private static @NotNull List<DiffTool> moveToolToTop(@NotNull DiffTool tool,
+                                                       @NotNull List<DiffTool> oldOrder,
+                                                       @NotNull DiffContext diffContext,
+                                                       @NotNull DiffRequest diffRequest) {
+    List<FrameDiffTool> fittedTools = filterFittedTools(oldOrder, diffContext, diffRequest);
+    FrameDiffTool toolToReplace = ContainerUtil.getFirstItem(fittedTools);
+    if (toolToReplace == tool) return oldOrder;
 
+    List<DiffTool> newOrder = new ArrayList<>(oldOrder);
+    newOrder.remove(tool);
+
+    int index = ContainerUtil.indexOf(newOrder, it -> it == toolToReplace);
+    if (index == -1) index = newOrder.size();
+    newOrder.add(index, tool);
+
+    return newOrder;
+  }
+
+  private @NotNull ViewerState createState(@NotNull FrameDiffTool frameTool) {
     DiffViewer viewer = frameTool.createComponent(myContext, myActiveRequest);
 
     for (DiffExtension extension : DiffExtension.EP_NAME.getExtensions()) {
@@ -294,7 +364,7 @@ public abstract class DiffRequestProcessor implements Disposable {
   // Abstract
   //
 
-  @Nullable private ApplyData myQueuedApplyRequest;
+  private @Nullable ApplyData myQueuedApplyRequest;
 
   @RequiresEdt
   protected void applyRequest(@NotNull DiffRequest request, boolean force, @Nullable ScrollToPolicy scrollToChangePolicy) {
@@ -333,9 +403,11 @@ public abstract class DiffRequestProcessor implements Disposable {
       myState.destroy();
       myToolbarStatusPanel.setContent(null);
       myContentPanel.setContent(null);
-      myToolbarWrapper.setBorder(null);
+      myTopPanel.setBorder(null);
+      myDiffInfoWrapper.setContent(null);
 
       myToolbarGroup.removeAll();
+      myRightToolbarGroup.removeAll();
       myPopupActionGroup.removeAll();
       ActionUtil.clearActions(myMainPanel);
 
@@ -344,8 +416,10 @@ public abstract class DiffRequestProcessor implements Disposable {
         myActiveRequest = request;
         onAssigned(myActiveRequest, true);
 
+        FrameDiffTool frameTool = null;
         try {
-          myState = createState();
+          frameTool = findFittedTool(myToolOrder, myContext, myActiveRequest, myForcedDiffTool);
+          myState = createState(frameTool);
           try {
             myState.init();
           }
@@ -356,11 +430,13 @@ public abstract class DiffRequestProcessor implements Disposable {
         }
         catch (Throwable e) {
           LOG.error(e);
-          myState = new ErrorState(new ErrorDiffRequest(DiffBundle.message("error.cant.show.diff.message")), getFittedTool(true));
+          myState = new ErrorState(new ErrorDiffRequest(DiffBundle.message("error.cant.show.diff.message"), e), frameTool);
           myState.init();
         }
       });
     });
+
+    myEventDispatcher.getMulticaster().onViewerChanged();
   }
 
   protected void setWindowTitle(@NotNull @NlsContexts.DialogTitle String title) {
@@ -373,8 +449,7 @@ public abstract class DiffRequestProcessor implements Disposable {
   protected void onDispose() {
   }
 
-  @Nullable
-  public <T> T getContextUserData(@NotNull Key<T> key) {
+  public @Nullable <T> T getContextUserData(@NotNull Key<T> key) {
     return myContext.getUserData(key);
   }
 
@@ -382,18 +457,25 @@ public abstract class DiffRequestProcessor implements Disposable {
     myContext.putUserData(key, value);
   }
 
-  @NotNull
-  protected List<AnAction> getNavigationActions() {
-    return Arrays.asList(new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(), Separator.getInstance(),
-                         new MyPrevChangeAction(), new MyNextChangeAction());
+  protected @NotNull List<AnAction> getNavigationActions() {
+    List<AnAction> actions = List.of(
+      new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(),
+      Separator.getInstance(),
+      new MyPrevChangeAction(), new MyNextChangeAction());
+
+    AnAction goToChangeAction = createGoToChangeAction();
+    if (goToChangeAction != null) {
+      actions = ContainerUtil.append(actions, goToChangeAction);
+    }
+
+    return actions;
   }
 
-  @NotNull
-  private List<AnAction> getTouchbarActions() {
-    final DefaultActionGroup left = new DefaultActionGroup(new MyPrevDifferenceAction(), new MyNextDifferenceAction());
-    final DefaultActionGroup main = new DefaultActionGroup(new MyPrevChangeAction(), new MyNextChangeAction());
-    TouchbarDataKeys.putActionDescriptor(main).setShowText(true).setShowImage(false).setMainGroup(true);
-    return Arrays.asList(left, main);
+  /**
+   * @see com.intellij.openapi.vcs.changes.actions.diff.PresentableGoToChangePopupAction
+   */
+  protected @Nullable AnAction createGoToChangeAction() {
+    return null;
   }
 
   //
@@ -407,17 +489,22 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   private boolean isFocusedInWindow() {
     return DiffUtil.isFocusedComponentInWindow(myContentPanel) ||
-           DiffUtil.isFocusedComponentInWindow(myToolbar.getComponent());
+           DiffUtil.isFocusedComponentInWindow(myToolbar.getComponent()) ||
+           (myIsNewToolbar && DiffUtil.isFocusedComponentInWindow(myRightToolbar.getComponent()));
   }
 
   private void requestFocusInWindow() {
     DiffUtil.requestFocusInWindow(getPreferredFocusedComponent());
   }
 
-  @NotNull
-  protected List<DiffTool> getToolOrderFromSettings(@NotNull List<? extends DiffTool> availableTools) {
+  protected @NotNull List<DiffTool> getToolOrderFromSettings(@NotNull List<? extends DiffTool> availableTools) {
+    return getToolOrderFromSettings(getSettings(), availableTools);
+  }
+
+  public static @NotNull List<DiffTool> getToolOrderFromSettings(@NotNull DiffSettings diffSettings,
+                                                                 @NotNull List<? extends DiffTool> availableTools) {
     List<DiffTool> result = new ArrayList<>();
-    List<String> savedOrder = getSettings().getDiffToolsOrder();
+    List<String> savedOrder = diffSettings.getDiffToolsOrder();
 
     for (final String clazz : savedOrder) {
       DiffTool tool = ContainerUtil.find(availableTools, t -> t.getClass().getCanonicalName().equals(clazz));
@@ -451,8 +538,10 @@ public abstract class DiffRequestProcessor implements Disposable {
       myState.destroy();
       myToolbarStatusPanel.setContent(null);
       myContentPanel.setContent(null);
+      myDiffInfoWrapper.setContent(null);
 
       myToolbarGroup.removeAll();
+      myRightToolbarGroup.removeAll();
       myPopupActionGroup.removeAll();
       ActionUtil.clearActions(myMainPanel);
 
@@ -463,15 +552,28 @@ public abstract class DiffRequestProcessor implements Disposable {
     });
   }
 
+  private static final boolean SHOW_VIEWER_ACTIONS_IN_TOUCHBAR = Boolean.getBoolean("touchbar.diff.show.viewer.actions");
+
   protected void collectToolbarActions(@Nullable List<? extends AnAction> viewerActions) {
     myToolbarGroup.removeAll();
 
+    boolean oldToolbar = !myIsNewToolbar;
     List<AnAction> navigationActions = new ArrayList<>(getNavigationActions());
-    navigationActions.add(new MyChangeDiffToolAction());
+    if (oldToolbar) {
+      navigationActions.add(new MyChangeDiffToolComboBoxAction());
+    }
+    else {
+      myRightToolbarGroup.add(new MyDiffToolChooser());
+    }
     DiffUtil.addActionBlock(myToolbarGroup,
                             navigationActions);
 
-    DiffUtil.addActionBlock(myToolbarGroup, viewerActions);
+    if (oldToolbar) {
+      DiffUtil.addActionBlock(myToolbarGroup, viewerActions, true);
+    }
+    else {
+      DiffUtil.addActionBlock(myRightToolbarGroup, viewerActions, false);
+    }
 
     List<AnAction> requestContextActions = myActiveRequest.getUserData(DiffUserDataKeys.CONTEXT_ACTIONS);
     DiffUtil.addActionBlock(myToolbarGroup, requestContextActions);
@@ -479,23 +581,28 @@ public abstract class DiffRequestProcessor implements Disposable {
     List<AnAction> contextActions = myContext.getUserData(DiffUserDataKeys.CONTEXT_ACTIONS);
     DiffUtil.addActionBlock(myToolbarGroup, contextActions);
 
-    DiffUtil.addActionBlock(myToolbarGroup,
-                            new ShowInExternalToolAction(),
-                            ActionManager.getInstance().getAction(IdeActions.ACTION_CONTEXT_HELP));
+    if (oldToolbar) {
+      DiffUtil.addActionBlock(myToolbarGroup,
+                              new ShowInExternalToolActionGroup(),
+                              ActionManager.getInstance().getAction(IdeActions.ACTION_CONTEXT_HELP));
+    }
 
-    myTouchbarActionGroup.replaceAll(getTouchbarActions());
+    if (SystemInfo.isMac) { // collect touchbar actions
+      myTouchbarActionGroup.removeAll();
+      myTouchbarActionGroup.addAll(
+        new MyPrevDifferenceAction(), new MyNextDifferenceAction(), new MyOpenInEditorAction(), Separator.getInstance(),
+        new MyPrevChangeAction(), new MyNextChangeAction()
+      );
+      if (SHOW_VIEWER_ACTIONS_IN_TOUCHBAR && viewerActions != null) {
+        myTouchbarActionGroup.addAll(viewerActions);
+      }
+    }
   }
 
   protected void collectPopupActions(@Nullable List<? extends AnAction> viewerActions) {
     myPopupActionGroup.removeAll();
 
-    List<AnAction> selectToolActions = new ArrayList<>();
-    for (DiffTool tool : getAvailableFittedTools()) {
-      FrameDiffTool substitutor = findToolSubstitutor(tool);
-      if (tool == myState.getActiveTool() || substitutor == myState.getActiveTool()) continue;
-      selectToolActions.add(new DiffToolToggleAction(tool));
-    }
-    DiffUtil.addActionBlock(myPopupActionGroup, selectToolActions);
+    DiffUtil.addActionBlock(myPopupActionGroup, new MyChangeDiffToolActionGroup());
 
     DiffUtil.addActionBlock(myPopupActionGroup, viewerActions);
   }
@@ -505,12 +612,16 @@ public abstract class DiffRequestProcessor implements Disposable {
 
     ((ActionToolbarImpl)myToolbar).clearPresentationCache();
     myToolbar.updateActionsImmediately();
+    recursiveRegisterShortcutSet(myToolbarGroup, myMainPanel, null);
 
-    ActionUtil.recursiveRegisterShortcutSet(myToolbarGroup, myMainPanel, null);
+    if (myIsNewToolbar) {
+      ((ActionToolbarImpl)myRightToolbar).clearPresentationCache();
+      myRightToolbar.updateActionsImmediately();
+      recursiveRegisterShortcutSet(myRightToolbarGroup, myMainPanel, null);
+    }
   }
 
-  @NotNull
-  public ActionToolbar getToolbar() {
+  public @NotNull ActionToolbar getToolbar() {
     return myToolbar;
   }
 
@@ -530,13 +641,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   // Getters
   //
 
-  @NotNull
-  public JComponent getComponent() {
+  public @NotNull JComponent getComponent() {
     return myPanel;
   }
 
-  @Nullable
-  public JComponent getPreferredFocusedComponent() {
+  public @NotNull JComponent getPreferredFocusedComponent() {
     JComponent component = myState.getPreferredFocusedComponent();
     JComponent fallback = myToolbar.getComponent();
     if (component == null || !component.isFocusable()) return fallback;
@@ -544,23 +653,19 @@ public abstract class DiffRequestProcessor implements Disposable {
     return component;
   }
 
-  @Nullable
-  public Project getProject() {
+  public @Nullable Project getProject() {
     return myProject;
   }
 
-  @Nullable
-  public DiffRequest getActiveRequest() {
+  public @Nullable DiffRequest getActiveRequest() {
     return myActiveRequest;
   }
 
-  @NotNull
-  public DiffContext getContext() {
+  public @NotNull DiffContext getContext() {
     return myContext;
   }
 
-  @Nullable
-  public DiffViewer getActiveViewer() {
+  public @Nullable DiffViewer getActiveViewer() {
     if (myState instanceof DefaultState) {
       return ((DefaultState)myState).myViewer;
     }
@@ -570,11 +675,11 @@ public abstract class DiffRequestProcessor implements Disposable {
     return null;
   }
 
-  @NotNull
-  protected DiffSettings getSettings() {
+  protected @NotNull DiffSettings getSettings() {
     return mySettings;
   }
 
+  @Override
   public boolean isDisposed() {
     return myDisposed;
   }
@@ -584,24 +689,17 @@ public abstract class DiffRequestProcessor implements Disposable {
   //
 
   private class ShowInExternalToolAction extends DumbAwareAction {
-    ShowInExternalToolAction() {
-      ActionUtil.copyFrom(this, "Diff.ShowInExternalTool");
-    }
+    private final @NotNull ExternalDiffSettings.ExternalTool myExternalTool;
 
-    @Override
-    public void update(@NotNull AnActionEvent e) {
-      if (!ExternalDiffTool.isEnabled()) {
-        e.getPresentation().setEnabledAndVisible(false);
-        return;
-      }
-      e.getPresentation().setEnabled(ExternalDiffTool.canShow(myActiveRequest));
-      e.getPresentation().setVisible(true);
+    private ShowInExternalToolAction(ExternalDiffSettings.@NotNull ExternalTool externalTool) {
+      super(DiffBundle.message("action.use.external.tool.text", externalTool.getName()));
+      myExternalTool = externalTool;
     }
 
     @Override
     public void actionPerformed(@NotNull AnActionEvent e) {
       try {
-        ExternalDiffTool.showRequest(e.getProject(), myActiveRequest);
+        ExternalDiffTool.showRequest(e.getProject(), myActiveRequest, myExternalTool);
       }
       catch (ProcessCanceledException ex) {
         throw ex;
@@ -612,23 +710,109 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
-  private class MyChangeDiffToolAction extends ComboBoxAction implements DumbAware {
-    // TODO: add icons for diff tools, show only icon in toolbar - to reduce jumping on change ?
+  private class ShowInExternalToolActionGroup extends ActionGroup implements DumbAware {
+    private ShowInExternalToolActionGroup() {
+      ActionUtil.copyFrom(this, "Diff.ShowInExternalTool");
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      getShowActions().get(0).actionPerformed(e);
+    }
 
     @Override
     public void update(@NotNull AnActionEvent e) {
       Presentation presentation = e.getPresentation();
+      if (!ExternalDiffTool.isEnabled()) {
+        presentation.setEnabledAndVisible(false);
+        return;
+      }
 
-      DiffTool activeTool = myState.getActiveTool();
-      presentation.setText(activeTool.getName());
+      List<ShowInExternalToolAction> actions = getShowActions();
+
+      presentation.setEnabled(ExternalDiffTool.canShow(myActiveRequest));
+      presentation.setPerformGroup(actions.size() == 1);
+      presentation.putClientProperty(ActionButton.HIDE_DROPDOWN_ICON, presentation.isPerformGroup());
+      presentation.setPopupGroup(true);
+      presentation.setVisible(true);
+    }
+
+    @Override
+    public AnAction @NotNull [] getChildren(@Nullable AnActionEvent e) {
+      List<ShowInExternalToolAction> actions = getShowActions();
+      if (actions.size() <= 1) return AnAction.EMPTY_ARRAY;
+
+      return actions.toArray(AnAction.EMPTY_ARRAY);
+    }
+
+    private @NotNull List<ShowInExternalToolAction> getShowActions() {
+      Map<ExternalToolGroup, List<ExternalTool>> externalTools = ExternalDiffSettings.getInstance().getExternalTools();
+      List<ExternalTool> diffTools = externalTools.getOrDefault(ExternalToolGroup.DIFF_TOOL, Collections.emptyList());
+
+      return ContainerUtil.map(diffTools, ShowInExternalToolAction::new);
+    }
+  }
+
+  private class MyDiffToolChooser extends DiffToolChooser {
+    private MyDiffToolChooser() {
+      super(chooseNotNull(myProject, myContext.getProject()));
+    }
+
+    @Override
+    public void onSelected(@NotNull Project project, @NotNull DiffTool diffTool) {
+      switchToDiffTool(diffTool);
+    }
+
+    @Override
+    public @NotNull List<DiffTool> getTools() {
+      return new ArrayList<>(filterFittedTools(getAllKnownTools(), myContext, myActiveRequest));
+    }
+
+    @Override
+    public @NotNull DiffTool getActiveTool() {
+      return myState.getActiveTool();
+    }
+
+    @Override
+    public @Nullable DiffTool getForcedDiffTool() {
+      return myForcedDiffTool;
+    }
+  }
+
+  private class MyChangeDiffToolComboBoxAction extends ComboBoxAction implements DumbAware {
+    // TODO: add icons for diff tools, show only icon in toolbar - to reduce jumping on change ?
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.BGT;
+    }
+
+    @Override
+    public void update(@NotNull AnActionEvent e) {
+      Presentation presentation = e.getPresentation();
 
       if (myForcedDiffTool != null) {
         presentation.setEnabledAndVisible(false);
         return;
       }
 
-      for (DiffTool tool : getAvailableFittedTools()) {
-        if (tool != activeTool) {
+      DiffTool activeTool = e.getData(ACTIVE_DIFF_TOOL);
+      DiffContext diffContext = e.getData(DiffDataKeys.DIFF_CONTEXT);
+      DiffRequest diffRequest = e.getData(DiffDataKeys.DIFF_REQUEST);
+      if (activeTool == null || diffContext == null || diffRequest == null) {
+        presentation.setEnabledAndVisible(false);
+        return;
+      }
+
+      //noinspection DialogTitleCapitalization
+      presentation.setText(activeTool.getName());
+
+      for (DiffTool tool : filterFittedTools(getAllKnownTools(), diffContext, diffRequest)) {
+        if (!isSameToolOrSubstitutor(tool, activeTool, diffContext, diffRequest)) {
           presentation.setEnabledAndVisible(true);
           return;
         }
@@ -637,11 +821,14 @@ public abstract class DiffRequestProcessor implements Disposable {
       presentation.setEnabledAndVisible(false);
     }
 
-    @NotNull
     @Override
-    protected DefaultActionGroup createPopupActionGroup(JComponent button) {
+    protected @NotNull DefaultActionGroup createPopupActionGroup(@NotNull JComponent button, @NotNull DataContext context) {
+      DiffContext diffContext = context.getData(DiffDataKeys.DIFF_CONTEXT);
+      DiffRequest diffRequest = context.getData(DiffDataKeys.DIFF_REQUEST);
+      if (diffContext == null || diffRequest == null) return new DefaultActionGroup();
+
       DefaultActionGroup group = new DefaultActionGroup();
-      for (DiffTool tool : getAvailableFittedTools()) {
+      for (DiffTool tool : filterFittedTools(getAllKnownTools(), diffContext, diffRequest)) {
         group.add(new DiffToolToggleAction(tool));
       }
 
@@ -649,12 +836,57 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
+  private class MyChangeDiffToolActionGroup extends ActionGroup implements DumbAware {
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.BGT;
+    }
+
+    @Override
+    public AnAction @NotNull [] getChildren(@Nullable AnActionEvent e) {
+      if (e == null) return AnAction.EMPTY_ARRAY;
+
+      if (myForcedDiffTool != null) {
+        return AnAction.EMPTY_ARRAY;
+      }
+
+      DiffTool activeTool = e.getData(ACTIVE_DIFF_TOOL);
+      DiffContext diffContext = e.getData(DiffDataKeys.DIFF_CONTEXT);
+      DiffRequest diffRequest = e.getData(DiffDataKeys.DIFF_REQUEST);
+      if (activeTool == null || diffContext == null || diffRequest == null) {
+        return AnAction.EMPTY_ARRAY;
+      }
+
+      List<AnAction> actions = new ArrayList<>();
+      for (DiffTool tool : filterFittedTools(getAllKnownTools(), diffContext, diffRequest)) {
+        if (isSameToolOrSubstitutor(tool, activeTool, diffContext, diffRequest)) continue;
+        actions.add(new DiffToolToggleAction(tool));
+      }
+      return actions.toArray(AnAction.EMPTY_ARRAY);
+    }
+  }
+
+  private static boolean isSameToolOrSubstitutor(@NotNull DiffTool tool,
+                                                 @NotNull DiffTool activeTool,
+                                                 @NotNull DiffContext diffContext,
+                                                 @NotNull DiffRequest diffRequest) {
+    if (tool == activeTool) return true;
+    if (findToolSubstitutor(tool, diffContext, diffRequest) == activeTool) return true;
+    return false;
+  }
+
   private final class DiffToolToggleAction extends AnAction implements DumbAware {
-    @NotNull private final DiffTool myDiffTool;
+    private final @NotNull DiffTool myDiffTool;
 
     private DiffToolToggleAction(@NotNull DiffTool tool) {
+      //noinspection DialogTitleCapitalization
       super(tool.getName());
       myDiffTool = tool;
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.BGT;
     }
 
     @Override
@@ -664,18 +896,18 @@ public abstract class DiffRequestProcessor implements Disposable {
 
     @Override
     public void actionPerformed(@NotNull AnActionEvent e) {
-      if (myState.getActiveTool() == myDiffTool) return;
-
-      DiffUsageTriggerCollector.trigger(e.getProject(), "toggle.diff.tool", myDiffTool, myContext.getUserData(DiffUserDataKeys.PLACE));
-      moveToolOnTop(myDiffTool);
-
-      updateRequest(true);
+      switchToDiffTool(myDiffTool);
     }
   }
 
   private class ShowActionGroupPopupAction extends DumbAwareAction {
     ShowActionGroupPopupAction() {
       ActionUtil.copyFrom(this, "Diff.ShowSettingsPopup");
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -698,7 +930,7 @@ public abstract class DiffRequestProcessor implements Disposable {
 
   private enum IterationState {NEXT, PREV, NONE}
 
-  @NotNull private IterationState myIterationState = IterationState.NONE;
+  private @NotNull IterationState myIterationState = IterationState.NONE;
 
   @RequiresEdt
   protected boolean hasNextChange(boolean fromUpdate) {
@@ -710,10 +942,16 @@ public abstract class DiffRequestProcessor implements Disposable {
     return false;
   }
 
+  /**
+   * @see #goToNextChangeImpl(boolean, Runnable)
+   */
   @RequiresEdt
   protected void goToNextChange(boolean fromDifferences) {
   }
 
+  /**
+   * @see #goToPrevChangeImpl(boolean, Runnable)
+   */
   @RequiresEdt
   protected void goToPrevChange(boolean fromDifferences) {
   }
@@ -723,9 +961,47 @@ public abstract class DiffRequestProcessor implements Disposable {
     return false;
   }
 
+  protected void goToNextChangeImpl(boolean fromDifferences, @NotNull Runnable navigationTask) {
+    runWithScrollPolicy(fromDifferences, ScrollToPolicy.FIRST_CHANGE, navigationTask);
+  }
+
+  protected void goToPrevChangeImpl(boolean fromDifferences, @NotNull Runnable navigationTask) {
+    runWithScrollPolicy(fromDifferences, ScrollToPolicy.LAST_CHANGE, navigationTask);
+  }
+
+  /**
+   * This is a workaround for use cases, when {@code navigationTask} updates some external state (ex: selection in JTree),
+   * and this update triggers an uncontrollable listener that calls {@link #updateRequest()}
+   * without knowledge about requested {@link ScrollToPolicy}.
+   * <p>
+   * Thus, we make sure any synchronous {@link #updateRequest} calls from {@code navigationTask} will use specified scroll policy.
+   */
+  private void runWithScrollPolicy(boolean fromDifferences, @NotNull ScrollToPolicy lastChange, @NotNull Runnable navigationTask) {
+    if (fromDifferences) {
+      assert myCurrentScrollToPolicy == null;
+      myCurrentScrollToPolicy = lastChange;
+      try {
+        navigationTask.run();
+        updateRequest();
+      }
+      finally {
+        myCurrentScrollToPolicy = null;
+      }
+    }
+    else {
+      navigationTask.run();
+      updateRequest();
+    }
+  }
+
   protected class MyNextDifferenceAction extends NextDifferenceAction {
 
     public MyNextDifferenceAction() {
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -767,12 +1043,18 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
 
       goToNextChange(true);
+      myIterationState = IterationState.NONE;
     }
   }
 
   protected class MyPrevDifferenceAction extends PrevDifferenceAction {
 
     public MyPrevDifferenceAction() {
+    }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -814,11 +1096,16 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
 
       goToPrevChange(true);
+      myIterationState = IterationState.NONE;
     }
   }
 
   private void notifyMessage(@NotNull AnActionEvent e, boolean next) {
-    if (!myContentPanel.isShowing()) return;
+    notifyMessage(e, myContentPanel, next);
+  }
+
+  public static void notifyMessage(@NotNull AnActionEvent e, @NotNull JComponent contentPanel, boolean next) {
+    if (!contentPanel.isShowing()) return;
     Editor editor = e.getData(DiffDataKeys.CURRENT_EDITOR);
 
     // TODO: provide "change" word in chain UserData - for tests/etc
@@ -828,15 +1115,15 @@ public abstract class DiffRequestProcessor implements Disposable {
                                                                         DiffUtil.getSettingsConfigurablePath()));
 
     final LightweightHint hint = new LightweightHint(HintUtil.createInformationLabel(message));
-    Point point = new Point(myContentPanel.getWidth() / 2, next ? myContentPanel.getHeight() - JBUIScale.scale(40) : JBUIScale.scale(40));
+    Point point = new Point(contentPanel.getWidth() / 2, next ? contentPanel.getHeight() - JBUIScale.scale(40) : JBUIScale.scale(40));
 
-    if (editor == null) {
+    if (editor == null || editor.isDisposed()) {
       final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
-      final HintHint hintHint = createNotifyHint(myContentPanel, point, next);
-      hint.show(myContentPanel, point.x, point.y, owner instanceof JComponent ? (JComponent)owner : null, hintHint);
+      final HintHint hintHint = createNotifyHint(contentPanel, point, next);
+      hint.show(contentPanel, point.x, point.y, owner instanceof JComponent ? (JComponent)owner : null, hintHint);
     }
     else {
-      int x = SwingUtilities.convertPoint(myContentPanel, point, editor.getComponent()).x;
+      int x = SwingUtilities.convertPoint(contentPanel, point, editor.getComponent()).x;
 
       JComponent header = editor.getHeaderComponent();
       int shift = editor.getScrollingModel().getVerticalScrollOffset() - (header != null ? header.getHeight() : 0);
@@ -859,12 +1146,12 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
-  @NotNull
-  private static HintHint createNotifyHint(@NotNull JComponent component, @NotNull Point point, boolean above) {
+  private static @NotNull HintHint createNotifyHint(@NotNull JComponent component, @NotNull Point point, boolean above) {
     return new HintHint(component, point)
       .setPreferredPosition(above ? Balloon.Position.above : Balloon.Position.below)
       .setAwtTooltip(true)
-      .setFont(UIUtil.getLabelFont().deriveFont(Font.BOLD))
+      .setFont(StartupUiUtil.getLabelFont().deriveFont(Font.BOLD))
+      .setBorderColor(HintUtil.getHintBorderColor())
       .setTextBg(HintUtil.getInformationColor())
       .setShowImmediately(true);
   }
@@ -872,10 +1159,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   // Iterate requests
 
   protected class MyNextChangeAction extends NextChangeAction {
-    public MyNextChangeAction() {
-      if (DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_IN_EDITOR, getContext())) {
-        patchShortcutSet(this, IdeActions.ACTION_NEXT_TAB, IdeActions.ACTION_NEXT_EDITOR_TAB);
-      }
+    public MyNextChangeAction() { }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -903,10 +1191,11 @@ public abstract class DiffRequestProcessor implements Disposable {
   }
 
   protected class MyPrevChangeAction extends PrevChangeAction {
-    public MyPrevChangeAction() {
-      if (DiffUtil.isUserDataFlagSet(DiffUserDataKeysEx.DIFF_IN_EDITOR, getContext())) {
-        patchShortcutSet(this, IdeActions.ACTION_PREVIOUS_TAB, IdeActions.ACTION_PREVIOUS_EDITOR_TAB);
-      }
+    public MyPrevChangeAction() { }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
@@ -933,26 +1222,6 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
-  protected static void patchShortcutSet(@NotNull AnAction action,
-                                         @NotNull @NonNls String originalActionId,
-                                         @Nullable @NonNls String replacementActionId) {
-    //noinspection ConstantConditions
-    Keymap keymap = KeymapManager.getInstance().getActiveKeymap();
-    Shortcut[] originalShortcuts = keymap.getShortcuts(originalActionId);
-
-    Shortcut[] shortcuts = action.getShortcutSet().getShortcuts();
-    Set<Shortcut> newShortcuts = ContainerUtil.set(shortcuts);
-    boolean hadOriginalShortcut = ContainerUtil.removeAll(newShortcuts, originalShortcuts);
-    if (!hadOriginalShortcut) return;
-
-    if (replacementActionId != null) {
-      Shortcut[] replacementShortcuts = keymap.getShortcuts(replacementActionId);
-      ContainerUtil.addAll(newShortcuts, replacementShortcuts);
-    }
-
-    action.registerCustomShortcutSet(new CustomShortcutSet(newShortcuts.toArray(Shortcut.EMPTY_ARRAY)), null);
-  }
-
   //
   // Helpers
   //
@@ -968,9 +1237,14 @@ public abstract class DiffRequestProcessor implements Disposable {
     }
   }
 
-  private class MyPanel extends JBPanelWithEmptyText implements DataProvider {
+  @ApiStatus.Internal
+  public class MyPanel extends JBPanelWithEmptyText implements DataProvider {
     MyPanel() {
       super(new BorderLayout());
+    }
+
+    public @NotNull DiffRequestProcessor getProcessor() {
+      return DiffRequestProcessor.this;
     }
 
     @Override
@@ -980,9 +1254,8 @@ public abstract class DiffRequestProcessor implements Disposable {
       return new Dimension(Math.max(windowSize.width, size.width), Math.max(windowSize.height, size.height));
     }
 
-    @Nullable
     @Override
-    public Object getData(@NotNull @NonNls String dataId) {
+    public @Nullable Object getData(@NotNull @NonNls String dataId) {
       Object data;
 
       DataProvider contentProvider = DataManagerImpl.getDataProviderEx(myContentPanel.getTargetComponent());
@@ -997,10 +1270,13 @@ public abstract class DiffRequestProcessor implements Disposable {
       else if (DiffDataKeys.DIFF_REQUEST.is(dataId)) {
         return myActiveRequest;
       }
+      else if (ACTIVE_DIFF_TOOL.is(dataId)) {
+        return myState.getActiveTool();
+      }
       else if (CommonDataKeys.PROJECT.is(dataId)) {
         return myProject;
       }
-      else if (PlatformDataKeys.HELP_ID.is(dataId)) {
+      else if (PlatformCoreDataKeys.HELP_ID.is(dataId)) {
         if (myActiveRequest.getUserData(DiffUserDataKeys.HELP_ID) != null) {
           return myActiveRequest.getUserData(DiffUserDataKeys.HELP_ID);
         }
@@ -1010,9 +1286,6 @@ public abstract class DiffRequestProcessor implements Disposable {
       }
       else if (DiffDataKeys.DIFF_CONTEXT.is(dataId)) {
         return myContext;
-      }
-      else if (TouchbarDataKeys.ACTIONS_KEY.is(dataId)) {
-        return myTouchbarActionGroup;
       }
 
       data = myState.getData(dataId);
@@ -1057,20 +1330,18 @@ public abstract class DiffRequestProcessor implements Disposable {
     @Override
     public final Component getDefaultComponent(final Container focusCycleRoot) {
       JComponent component = DiffRequestProcessor.this.getPreferredFocusedComponent();
-      if (component == null) return null;
       return IdeFocusTraversalPolicy.getPreferredFocusedComponent(component, this);
     }
 
-    @Nullable
     @Override
-    protected Project getProject() {
+    protected @Nullable Project getProject() {
       return myProject;
     }
   }
 
   private class MyDiffContext extends DiffContextEx {
-    @NotNull private final UserDataHolder myInitialContext;
-    @NotNull private final UserDataHolder myOwnContext = new UserDataHolderBase();
+    private final @NotNull UserDataHolder myInitialContext;
+    private final @NotNull UserDataHolder myOwnContext = new UserDataHolderBase();
 
     MyDiffContext(@NotNull UserDataHolder initialContext) {
       myInitialContext = initialContext;
@@ -1101,9 +1372,8 @@ public abstract class DiffRequestProcessor implements Disposable {
       setTitle(title);
     }
 
-    @Nullable
     @Override
-    public Project getProject() {
+    public @Nullable Project getProject() {
       return DiffRequestProcessor.this.getProject();
     }
 
@@ -1122,9 +1392,8 @@ public abstract class DiffRequestProcessor implements Disposable {
       DiffRequestProcessor.this.requestFocusInWindow();
     }
 
-    @Nullable
     @Override
-    public <T> T getUserData(@NotNull Key<T> key) {
+    public @Nullable <T> T getUserData(@NotNull Key<T> key) {
       T data = myOwnContext.getUserData(key);
       if (data != null) return data;
       return myInitialContext.getUserData(key);
@@ -1137,9 +1406,9 @@ public abstract class DiffRequestProcessor implements Disposable {
   }
 
   private static class ApplyData {
-    @NotNull private final DiffRequest request;
+    private final @NotNull DiffRequest request;
     private final boolean force;
-    @Nullable private final ScrollToPolicy scrollToChangePolicy;
+    private final @Nullable ScrollToPolicy scrollToChangePolicy;
 
     ApplyData(@NotNull DiffRequest request, boolean force, @Nullable ScrollToPolicy scrollToChangePolicy) {
       this.request = request;
@@ -1178,7 +1447,7 @@ public abstract class DiffRequestProcessor implements Disposable {
     DiffTool getActiveTool();
   }
 
-  private static class EmptyState implements ViewerState {
+  private static final class EmptyState implements ViewerState {
     private static final EmptyState INSTANCE = new EmptyState();
 
     @Override
@@ -1189,40 +1458,30 @@ public abstract class DiffRequestProcessor implements Disposable {
     public void destroy() {
     }
 
-    @Nullable
     @Override
-    public JComponent getPreferredFocusedComponent() {
+    public @Nullable JComponent getPreferredFocusedComponent() {
       return null;
     }
 
-    @Nullable
     @Override
-    public Object getData(@NotNull @NonNls String dataId) {
+    public @Nullable Object getData(@NotNull @NonNls String dataId) {
       return null;
     }
 
-    @NotNull
     @Override
-    public DiffTool getActiveTool() {
+    public @NotNull DiffTool getActiveTool() {
       return ErrorDiffTool.INSTANCE;
     }
   }
 
   private class ErrorState implements ViewerState {
-    @Nullable private final DiffTool myDiffTool;
-    @NotNull private final MessageDiffRequest myRequest;
+    private final @Nullable DiffTool myDiffTool;
 
-    @NotNull private final DiffViewer myViewer;
-
-    ErrorState(@NotNull MessageDiffRequest request) {
-      this(request, null);
-    }
+    private final @NotNull DiffViewer myViewer;
 
     ErrorState(@NotNull MessageDiffRequest request, @Nullable DiffTool diffTool) {
       myDiffTool = diffTool;
-      myRequest = request;
-
-      myViewer = ErrorDiffTool.INSTANCE.createComponent(myContext, myRequest);
+      myViewer = ErrorDiffTool.INSTANCE.createComponent(myContext, request);
     }
 
     @Override
@@ -1237,31 +1496,33 @@ public abstract class DiffRequestProcessor implements Disposable {
     @Override
     @RequiresEdt
     public void destroy() {
-      Disposer.dispose(myViewer);
+      try {
+        Disposer.dispose(myViewer);
+      }
+      catch (Throwable e) {
+        LOG.error(e);
+      }
     }
 
-    @Nullable
     @Override
-    public JComponent getPreferredFocusedComponent() {
+    public @Nullable JComponent getPreferredFocusedComponent() {
       return null;
     }
 
-    @Nullable
     @Override
-    public Object getData(@NotNull @NonNls String dataId) {
+    public @Nullable Object getData(@NotNull @NonNls String dataId) {
       return null;
     }
 
-    @NotNull
     @Override
-    public DiffTool getActiveTool() {
+    public @NotNull DiffTool getActiveTool() {
       return myDiffTool != null ? myDiffTool : ErrorDiffTool.INSTANCE;
     }
   }
 
   private class DefaultState implements ViewerState {
-    @NotNull private final DiffViewer myViewer;
-    @NotNull private final FrameDiffTool myTool;
+    private final @NotNull DiffViewer myViewer;
+    private final @NotNull FrameDiffTool myTool;
 
     DefaultState(@NotNull DiffViewer viewer, @NotNull FrameDiffTool tool) {
       myViewer = viewer;
@@ -1275,37 +1536,45 @@ public abstract class DiffRequestProcessor implements Disposable {
       setTitle(myActiveRequest.getTitle());
 
       FrameDiffTool.ToolbarComponents toolbarComponents = myViewer.init();
-
+      FrameDiffTool.DiffInfo diffInfo = toolbarComponents.diffInfo;
+      if (diffInfo != null) {
+        myDiffInfoWrapper.setContent(diffInfo.getComponent());
+      }
+      else {
+        myDiffInfoWrapper.setContent(null);
+      }
       buildToolbar(toolbarComponents.toolbarActions);
       buildActionPopup(toolbarComponents.popupActions);
 
       myToolbarStatusPanel.setContent(toolbarComponents.statusPanel);
       if (shouldAddToolbarBottomBorder(toolbarComponents)) {
-        myToolbarWrapper.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
+        myTopPanel.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
       }
     }
 
     @Override
     @RequiresEdt
     public void destroy() {
-      Disposer.dispose(myViewer);
+      try {
+        Disposer.dispose(myViewer);
+      }
+      catch (Throwable e) {
+        LOG.error(e);
+      }
     }
 
-    @Nullable
     @Override
-    public JComponent getPreferredFocusedComponent() {
+    public @Nullable JComponent getPreferredFocusedComponent() {
       return myViewer.getPreferredFocusedComponent();
     }
 
-    @NotNull
     @Override
-    public DiffTool getActiveTool() {
+    public @NotNull DiffTool getActiveTool() {
       return myTool;
     }
 
-    @Nullable
     @Override
-    public Object getData(@NotNull @NonNls String dataId) {
+    public @Nullable Object getData(@NotNull @NonNls String dataId) {
       if (DiffDataKeys.DIFF_VIEWER.is(dataId)) {
         return myViewer;
       }
@@ -1314,10 +1583,10 @@ public abstract class DiffRequestProcessor implements Disposable {
   }
 
   private class WrapperState implements ViewerState {
-    @NotNull private final DiffViewer myViewer;
-    @NotNull private final FrameDiffTool myTool;
+    private final @NotNull DiffViewer myViewer;
+    private final @NotNull FrameDiffTool myTool;
 
-    @NotNull private final DiffViewer myWrapperViewer;
+    private final @NotNull DiffViewer myWrapperViewer;
 
     WrapperState(@NotNull DiffViewer viewer, @NotNull FrameDiffTool tool, @NotNull DiffViewerWrapper wrapper) {
       myViewer = viewer;
@@ -1340,12 +1609,11 @@ public abstract class DiffRequestProcessor implements Disposable {
 
       myToolbarStatusPanel.setContent(toolbarComponents1.statusPanel); // TODO: combine both panels ?
       if (shouldAddToolbarBottomBorder(toolbarComponents1)) {
-        myToolbarWrapper.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
+        myTopPanel.setBorder(JBUI.Borders.customLine(JBColor.border(), 0, 0, 1, 0));
       }
     }
 
-    @Nullable
-    private List<AnAction> mergeActions(@Nullable List<AnAction> actions1, @Nullable List<AnAction> actions2) {
+    private static @Nullable List<AnAction> mergeActions(@Nullable List<AnAction> actions1, @Nullable List<AnAction> actions2) {
       if (actions1 == null && actions2 == null) return null;
       if (ContainerUtil.isEmpty(actions1)) return actions2;
       if (ContainerUtil.isEmpty(actions2)) return actions1;
@@ -1366,25 +1634,27 @@ public abstract class DiffRequestProcessor implements Disposable {
     @Override
     @RequiresEdt
     public void destroy() {
-      Disposer.dispose(myViewer);
-      Disposer.dispose(myWrapperViewer);
+      try {
+        Disposer.dispose(myViewer);
+        Disposer.dispose(myWrapperViewer);
+      }
+      catch (Throwable e) {
+        LOG.error(e);
+      }
     }
 
-    @Nullable
     @Override
-    public JComponent getPreferredFocusedComponent() {
+    public @Nullable JComponent getPreferredFocusedComponent() {
       return myWrapperViewer.getPreferredFocusedComponent();
     }
 
-    @NotNull
     @Override
-    public DiffTool getActiveTool() {
+    public @NotNull DiffTool getActiveTool() {
       return myTool;
     }
 
-    @Nullable
     @Override
-    public Object getData(@NotNull @NonNls String dataId) {
+    public @Nullable Object getData(@NotNull @NonNls String dataId) {
       if (DiffDataKeys.WRAPPING_DIFF_VIEWER.is(dataId)) {
         return myWrapperViewer;
       }
