@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.offlineViewer;
 
 import com.intellij.codeInsight.daemon.impl.CollectHighlightsUtil;
@@ -23,21 +23,22 @@ import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.TextRange;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.*;
+import com.intellij.psi.impl.light.LightElement;
 import com.intellij.psi.util.PsiUtilCore;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.DocumentUtil;
+import com.intellij.util.PairProcessor;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
+
+import static com.intellij.openapi.util.Predicates.nonNull;
 
 /**
  * @author Dmitry Batkovich
@@ -73,10 +74,10 @@ public final class OfflineDescriptorResolveResult {
 
   @NotNull
   static OfflineDescriptorResolveResult resolve(@NotNull OfflineProblemDescriptor descriptor,
-                                                @NotNull InspectionToolWrapper wrapper,
+                                                @NotNull InspectionToolWrapper<?,?> wrapper,
                                                 @NotNull InspectionToolPresentation presentation) {
-    final RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
-    final CommonProblemDescriptor resolvedDescriptor =
+    RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
+    CommonProblemDescriptor resolvedDescriptor =
       ReadAction.compute(() -> createDescriptor(element, descriptor, wrapper, presentation));
     return new OfflineDescriptorResolveResult(element, resolvedDescriptor);
   }
@@ -85,29 +86,28 @@ public final class OfflineDescriptorResolveResult {
   @Nullable
   private static CommonProblemDescriptor createDescriptor(@Nullable RefEntity element,
                                                           @NotNull OfflineProblemDescriptor offlineDescriptor,
-                                                          @NotNull InspectionToolWrapper toolWrapper,
+                                                          @NotNull InspectionToolWrapper<?,?> toolWrapper,
                                                           @NotNull InspectionToolPresentation presentation) {
+    Project project = presentation.getContext().getProject();
     if (toolWrapper instanceof GlobalInspectionToolWrapper) {
-      final LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
+      LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
       if (localTool != null) {
-        final CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
+        CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
         if (descriptor != null) {
           return descriptor;
         }
       }
-      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor);
+      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor, project);
     }
-    Project project = presentation.getContext().getProject();
-    final InspectionManager inspectionManager = InspectionManager.getInstance(project);
-    if (toolWrapper instanceof LocalInspectionToolWrapper && !(toolWrapper.getTool() instanceof UnfairLocalInspectionTool)) {
+    if (Registry.is("offline.inspections.results.verify") &&
+        toolWrapper instanceof LocalInspectionToolWrapper && !(toolWrapper.getTool() instanceof UnfairLocalInspectionTool)) {
       if (element instanceof RefElement) {
-        final PsiElement psiElement = ((RefElement)element).getPsiElement();
+        PsiElement psiElement = ((RefElement)element).getPsiElement();
         if (psiElement != null) {
           ProblemDescriptor descriptor = ProgressManager.getInstance().runProcess(
             () -> runLocalTool(psiElement,
                                offlineDescriptor,
                                (LocalInspectionToolWrapper)toolWrapper,
-                               inspectionManager,
                                presentation.getContext()), new DaemonProgressIndicator());
           if (descriptor != null) return descriptor;
         }
@@ -120,7 +120,7 @@ public final class OfflineDescriptorResolveResult {
                                                                                       offlineDescriptor,
                                                                                       QuickFix.EMPTY_ARRAY,
                                                                                       project);
-    final QuickFix[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
+    QuickFix<?>[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
     if (quickFixes != null) {
       descriptor = createProblemDescriptorFromOfflineDescriptor(element,
                                                                 offlineDescriptor,
@@ -133,11 +133,10 @@ public final class OfflineDescriptorResolveResult {
   @NotNull
   private static CommonProblemDescriptor createProblemDescriptorFromOfflineDescriptor(@Nullable RefEntity element,
                                                                                       @NotNull OfflineProblemDescriptor offlineDescriptor,
-                                                                                      QuickFix @NotNull [] fixes,
+                                                                                      @NotNull QuickFix<?> @NotNull [] fixes,
                                                                                       @NotNull Project project) {
-    final InspectionManager inspectionManager = InspectionManager.getInstance(project);
-    if (element instanceof RefElement) {
-      RefElement refElement = (RefElement)element;
+    InspectionManager inspectionManager = InspectionManager.getInstance(project);
+    if (element instanceof RefElement refElement) {
       if(refElement.getPsiElement() instanceof PsiFile) {
         PsiElement targetElement = findTargetElementFromOfflineDescriptor((PsiFile)refElement.getPsiElement(), offlineDescriptor, project);
         if(targetElement != null) {
@@ -149,8 +148,10 @@ public final class OfflineDescriptorResolveResult {
     }
     else if (element instanceof RefModule) {
       return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), ((RefModule)element).getModule(), fixes);
-    } else {
-      return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), fixes);
+    }
+    else {
+      return inspectionManager.createProblemDescriptor(offlineDescriptor.getDescription(), 
+                                                       ContainerUtil.filter(fixes, f -> !(f instanceof LocalQuickFix)).toArray(QuickFix.EMPTY_ARRAY));
     }
   }
 
@@ -171,11 +172,9 @@ public final class OfflineDescriptorResolveResult {
   private static ProblemDescriptor runLocalTool(@NotNull PsiElement psiElement,
                                                 @NotNull OfflineProblemDescriptor offlineProblemDescriptor,
                                                 @NotNull LocalInspectionToolWrapper toolWrapper,
-                                                @NotNull InspectionManager inspectionManager,
                                                 @NotNull GlobalInspectionContextImpl context) {
     PsiFile containingFile = psiElement.getContainingFile();
-    final ProblemsHolder holder = new ProblemsHolder(inspectionManager, containingFile, false);
-    final LocalInspectionTool localTool = toolWrapper.getTool();
+    LocalInspectionTool localTool = toolWrapper.getTool();
     TextRange textRange = psiElement.getTextRange();
     LOG.assertTrue(textRange != null,
                    "text range must be not null here; " +
@@ -183,52 +182,51 @@ public final class OfflineDescriptorResolveResult {
                    "isPhysical = " + psiElement.isPhysical() + ", " +
                    "containingFile = " + containingFile.getName() + ", " +
                    "inspection = " + toolWrapper.getShortName());
-    final int startOffset = textRange.getStartOffset();
-    final int endOffset = textRange.getEndOffset();
-    LocalInspectionToolSession session = new LocalInspectionToolSession(containingFile, startOffset, endOffset);
-    final PsiElementVisitor visitor = localTool.buildVisitor(holder, true, session);
-    localTool.inspectionStarted(session, false);
-    final PsiElement[] elementsInRange = getElementsIntersectingRange(containingFile, startOffset, endOffset);
+    PsiElement[] elementsInRange = getElementsIntersectingRange(containingFile, textRange.getStartOffset(), textRange.getEndOffset());
+    Collection<PsiFile> injectedFiles = new HashSet<>();
     InjectedLanguageManager injectedLanguageManager = InjectedLanguageManager.getInstance(context.getProject());
     for (PsiElement element : elementsInRange) {
       List<Pair<PsiElement, TextRange>> injectedPsiFiles = injectedLanguageManager.getInjectedPsiFiles(element);
       if (injectedPsiFiles != null) {
-        for (Pair<PsiElement, TextRange> file : injectedPsiFiles) {
-          file.getFirst().accept(new PsiRecursiveElementWalkingVisitor() {
-            @Override
-            public void visitElement(@NotNull PsiElement element) {
-              element.accept(visitor);
-              super.visitElement(element);
-            }
-          });
+        for (Pair<PsiElement, TextRange> pair : injectedPsiFiles) {
+          injectedFiles.add(pair.getFirst().getContainingFile());
         }
       }
-      element.accept(visitor);
     }
-    localTool.inspectionFinished(session, holder);
-    if (holder.hasResults()) {
-      final List<ProblemDescriptor> list = holder.getResults();
-      final int idx = offlineProblemDescriptor.getProblemIndex();
-      int curIdx = 0;
-      for (ProblemDescriptor descriptor : list) {
-        final PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
-        if (psiElement instanceof PsiFile || psiElement.equals(member)) {
-          if (curIdx == idx) {
-            return descriptor;
-          }
-          curIdx++;
+    Map<LocalInspectionToolWrapper, List<ProblemDescriptor>> map =
+      InspectionEngine.inspectEx(Collections.singletonList(toolWrapper), containingFile, textRange, containingFile.getTextRange(), true,
+                                 false, true, new DaemonProgressIndicator(), PairProcessor.alwaysTrue());
+    List<ProblemDescriptor> list = new ArrayList<>();
+    map.values().forEach(problemsList -> list.addAll(problemsList));
+    for (PsiFile injectedFile : injectedFiles) {
+      Map<LocalInspectionToolWrapper, List<ProblemDescriptor>> injectedMap =
+        InspectionEngine.inspectEx(Collections.singletonList(toolWrapper), injectedFile, injectedFile.getTextRange(),
+                                   injectedFile.getTextRange(), true,
+                                   false, true, new DaemonProgressIndicator(), PairProcessor.alwaysTrue());
+      list.addAll(ContainerUtil.flatten(injectedMap.values()));
+    }
+
+    int idx = offlineProblemDescriptor.getProblemIndex();
+    int curIdx = 0;
+    for (ProblemDescriptor descriptor : list) {
+      PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
+      PsiElement element = psiElement instanceof LightElement ? psiElement.getNavigationElement() : psiElement;
+      if (psiElement instanceof PsiFile || element.equals(member)) {
+        if (curIdx == idx) {
+          return descriptor;
         }
+        curIdx++;
       }
     }
 
     return null;
   }
 
-  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, final int startOffset, final int endOffset) {
-    final FileViewProvider viewProvider = file.getViewProvider();
-    final Set<PsiElement> result = new LinkedHashSet<>();
+  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, int startOffset, int endOffset) {
+    FileViewProvider viewProvider = file.getViewProvider();
+    Set<PsiElement> result = new LinkedHashSet<>();
     for (Language language : viewProvider.getLanguages()) {
-      final PsiFile psiRoot = viewProvider.getPsi(language);
+      PsiFile psiRoot = viewProvider.getPsi(language);
       if (HighlightingLevelManager.getInstance(file.getProject()).shouldInspect(psiRoot)) {
         result.addAll(CollectHighlightsUtil.getElementsInRange(psiRoot, startOffset, endOffset, true));
       }
@@ -236,10 +234,10 @@ public final class OfflineDescriptorResolveResult {
     return PsiUtilCore.toPsiElementArray(result);
   }
 
-  private static QuickFix @Nullable [] getFixes(@NotNull CommonProblemDescriptor descriptor,
+  private static @NotNull QuickFix<?> @Nullable [] getFixes(@NotNull CommonProblemDescriptor descriptor,
                                                 RefEntity entity,
                                                 InspectionToolPresentation presentation, List<String> hints) {
-    final List<QuickFix> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
+    List<QuickFix<?>> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
     if (hints == null) {
       addFix(descriptor, entity, fixes, null, presentation);
     }
@@ -251,16 +249,15 @@ public final class OfflineDescriptorResolveResult {
     return fixes.isEmpty() ? null : fixes.toArray(QuickFix.EMPTY_ARRAY);
   }
 
-  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<? super QuickFix> fixes, String hint, InspectionToolPresentation presentation) {
+  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<? super QuickFix<?>> fixes, String hint, @NotNull InspectionToolPresentation presentation) {
     ContainerUtil.addAllNotNull(fixes, presentation.findQuickFixes(descriptor, entity, hint));
   }
 
   private static CommonProblemDescriptor createRerunGlobalToolDescriptor(@NotNull GlobalInspectionToolWrapper wrapper,
                                                                          @Nullable RefEntity entity,
-                                                                         OfflineProblemDescriptor offlineDescriptor) {
-
-
-    QuickFix rerunFix = new QuickFix() {
+                                                                         @NotNull OfflineProblemDescriptor offlineDescriptor,
+                                                                         @NotNull Project project) {
+    QuickFix<?> rerunFix = new QuickFix<>() {
       @Nls
       @NotNull
       @Override
@@ -288,21 +285,20 @@ public final class OfflineDescriptorResolveResult {
     };
     List<String> hints = offlineDescriptor.getHints();
     if (hints != null && entity instanceof RefModule) {
-      List<QuickFix> fixes =
-        hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(f -> f != null).collect(Collectors.toList());
-      return new ModuleProblemDescriptorImpl(ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix), offlineDescriptor.getDescription(), ((RefModule)entity).getModule());
+      List<QuickFix> fixes = hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(nonNull()).toList();
+      return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), ((RefModule)entity).getModule(), ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix));
     }
-    return new CommonProblemDescriptorImpl(new QuickFix[]{rerunFix}, offlineDescriptor.getDescription());
+    return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), rerunFix);
   }
 
   private static final class ProblemDescriptorBackedByRefElement implements ProblemDescriptor {
     private final RefElement myElement;
     private final OfflineProblemDescriptor myOfflineProblemDescriptor;
-    private final QuickFix[] myFixes;
+    private final QuickFix<?>[] myFixes;
 
     private ProblemDescriptorBackedByRefElement(RefElement element,
                                                 OfflineProblemDescriptor descriptor,
-                                                QuickFix[] fixes) {
+                                                @NotNull QuickFix<?> @NotNull [] fixes) {
       myElement = element;
       myOfflineProblemDescriptor = descriptor;
       myFixes = fixes;
@@ -372,7 +368,7 @@ public final class OfflineDescriptorResolveResult {
     }
 
     @Override
-    public QuickFix @Nullable [] getFixes() {
+    public @NotNull QuickFix @Nullable [] getFixes() {
       return myFixes;
     }
   }
