@@ -1,21 +1,18 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui;
 
 import com.intellij.CommonBundle;
-import com.intellij.icons.AllIcons;
+import com.intellij.diagnostic.LoadingState;
 import com.intellij.ide.HelpTooltip;
 import com.intellij.ide.actions.ActionsCollector;
-import com.intellij.ide.ui.UISettings;
 import com.intellij.idea.ActionsBundle;
 import com.intellij.internal.statistic.eventLog.FeatureUsageUiEventsKt;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.MnemonicHelper;
 import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.ex.ActionUtil;
-import com.intellij.openapi.application.Application;
-import com.intellij.openapi.application.ApplicationInfo;
-import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.*;
+import com.intellij.openapi.client.ClientDisposableProvider;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.help.HelpManager;
 import com.intellij.openapi.project.DumbAwareAction;
@@ -23,25 +20,24 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
 import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.HtmlBuilder;
+import com.intellij.openapi.util.text.HtmlChunk;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.wm.IdeFocusManager;
-import com.intellij.openapi.wm.IdeGlassPaneUtil;
 import com.intellij.openapi.wm.WindowManager;
-import com.intellij.ui.ColorUtil;
-import com.intellij.ui.JBColor;
-import com.intellij.ui.UIBundle;
+import com.intellij.ui.*;
 import com.intellij.ui.border.CustomLineBorder;
 import com.intellij.ui.components.JBOptionButton;
 import com.intellij.ui.components.JBScrollPane;
 import com.intellij.ui.components.panels.NonOpaquePanel;
-import com.intellij.ui.mac.TouchbarDataKeys;
+import com.intellij.ui.mac.touchbar.Touchbar;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.Alarm;
 import com.intellij.util.ReflectionUtil;
+import com.intellij.util.SlowOperations;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.*;
 import kotlin.Unit;
-import kotlin.jvm.functions.Function0;
 import org.intellij.lang.annotations.MagicConstant;
 import org.jetbrains.annotations.*;
 
@@ -49,7 +45,6 @@ import javax.swing.*;
 import javax.swing.border.Border;
 import javax.swing.border.CompoundBorder;
 import javax.swing.border.EmptyBorder;
-import javax.swing.plaf.UIResource;
 import java.awt.*;
 import java.awt.event.*;
 import java.beans.PropertyChangeListener;
@@ -57,6 +52,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.List;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.IntStream;
 
 import static com.intellij.openapi.util.Pair.pair;
@@ -66,8 +62,8 @@ import static javax.swing.JComponent.WHEN_ANCESTOR_OF_FOCUSED_COMPONENT;
 import static javax.swing.JComponent.WHEN_IN_FOCUSED_WINDOW;
 
 /**
- * The standard base class for modal dialog boxes. The dialog wrapper could be used only on event dispatch thread.
- * In case when the dialog must be created from other threads use
+ * The standard base class for modal dialog boxes. The dialog wrapper should be used from the event dispatch thread only.
+ * In case the dialog must be created from another thread use
  * {@link EventQueue#invokeLater(Runnable)} or {@link EventQueue#invokeAndWait(Runnable)}.
  *
  * @see <a href="http://www.jetbrains.org/intellij/sdk/docs/user_interface_components/dialog_wrapper.html">DialogWrapper on SDK DevGuide</a>
@@ -75,22 +71,19 @@ import static javax.swing.JComponent.WHEN_IN_FOCUSED_WINDOW;
 public abstract class DialogWrapper {
   private static final Logger LOG = Logger.getInstance(DialogWrapper.class);
 
+  private final JPanel myRoot = new JPanel();
+
   public enum IdeModalityType {
     IDE,
     PROJECT,
     MODELESS;
 
-    @NotNull
-    public Dialog.ModalityType toAwtModality() {
-      switch (this) {
-        case IDE:
-          return Dialog.ModalityType.APPLICATION_MODAL;
-        case PROJECT:
-          return Dialog.ModalityType.DOCUMENT_MODAL;
-        case MODELESS:
-          return Dialog.ModalityType.MODELESS;
-      }
-      throw new IllegalStateException(toString());
+    public @NotNull Dialog.ModalityType toAwtModality() {
+      return switch (this) {
+        case IDE -> Dialog.ModalityType.APPLICATION_MODAL;
+        case PROJECT -> Dialog.ModalityType.DOCUMENT_MODAL;
+        case MODELESS -> Dialog.ModalityType.MODELESS;
+      };
     }
   }
 
@@ -98,6 +91,9 @@ public abstract class DialogWrapper {
 
   @ApiStatus.Internal
   public static final @NotNull String IS_VISUAL_PADDING_COMPENSATED_ON_COMPONENT_LEVEL_KEY = "isVisualPaddingCompensatedOnComponentLevel";
+
+  @ApiStatus.Internal
+  public static final @NotNull Key<Boolean> KEEP_POPUPS_OPEN = Key.create("KEEP_POPUPS_OPEN");
 
   /**
    * The default exit code for "OK" action.
@@ -131,13 +127,16 @@ public abstract class DialogWrapper {
 
   public static final Object DIALOG_CONTENT_PANEL_PROPERTY = new Object();
 
-  public static final Color ERROR_FOREGROUND_COLOR = JBColor.namedColor("Label.errorForeground", new JBColor(new Color(0xC7222D), JBColor.RED));
+  /**
+   * @deprecated use {@link UIUtil#getErrorForeground()}
+   */
+  @Deprecated
+  public static final Color ERROR_FOREGROUND_COLOR = NamedColorUtil.getErrorForeground();
 
   /**
    * The shared instance of default border for dialog's content pane.
    */
-  @NotNull
-  public static Border createDefaultBorder() {
+  public static @NotNull Border createDefaultBorder() {
     return new JBEmptyBorder(UIUtil.getRegularPanelInsets());
   }
 
@@ -159,9 +158,7 @@ public abstract class DialogWrapper {
   private final Map<Action, JButton> myButtonMap = new LinkedHashMap<>();
   private final boolean myCreateSouthSection;
   private final List<JBOptionButton> myOptionsButtons = new ArrayList<>();
-  private final List<Function0<ValidationInfo>> myValidateCallbacks = new ArrayList<>();
   private final Alarm myValidationAlarm = new Alarm(getValidationThreadToUse(), myDisposable);
-  private final Alarm myErrorTextAlarm = new Alarm();
 
   private boolean myClosed;
   private boolean myDisposed;
@@ -172,9 +169,12 @@ public abstract class DialogWrapper {
   private boolean myCrossClosesWindow = true;
   private JComponent myPreferredFocusedComponentFromPanel;
   private Computable<? extends Point> myInitialLocationCallback;
+  private final Rectangle myUserBounds = new Rectangle();
+  private boolean myUserLocationSet;
+  private boolean myUserSizeSet;
   private Dimension  myActualSize;
-  private @NotNull List<ValidationInfo> myInfo = Collections.emptyList();
-  private @Nullable DoNotAskOption myDoNotAsk;
+  private List<ValidationInfo> myInfo = List.of();
+  private @Nullable com.intellij.openapi.ui.DoNotAskOption myDoNotAsk;
   private Action myYesAction;
   private Action myNoAction;
   private int myCurrentOptionsButtonIndex = -1;
@@ -184,8 +184,7 @@ public abstract class DialogWrapper {
   private ErrorText myErrorText;
   private int myValidationDelay = 300;
   private boolean myValidationStarted;
-  private final ErrorPainter myErrorPainter = new ErrorPainter();
-  private boolean myErrorPainterInstalled;
+  private boolean myKeepPopupsOpen;
 
   protected Action myOKAction;
   protected Action myCancelAction;
@@ -200,7 +199,7 @@ public abstract class DialogWrapper {
    * @param project     parent window for the dialog will be calculated based on focused window for the
    *                    specified {@code project}. This parameter can be {@code null}. In this case parent window
    *                    will be suggested based on current focused window.
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -224,10 +223,23 @@ public abstract class DialogWrapper {
                           boolean canBeParent,
                           @NotNull IdeModalityType ideModalityType,
                           boolean createSouth) {
-    myPeer = parentComponent == null ? createPeer(project, canBeParent, project == null ? IdeModalityType.IDE : ideModalityType)
-                                     : createPeer(parentComponent, canBeParent);
+    myPeer = parentComponent == null
+             ? createPeer(project, canBeParent, project == null ? IdeModalityType.IDE : ideModalityType)
+             : createPeer(parentComponent, canBeParent);
     myCreateSouthSection = createSouth;
-    final Window window = myPeer.getWindow();
+    initResizeListener();
+    createDefaultActions();
+    if (myPeer.getWindow() != null && LoadingState.COMPONENTS_LOADED.isOccurred()) {
+      ToolbarService.Companion.getInstance().setTransparentTitleBar(myPeer.getWindow(), myPeer.getRootPane(),
+                                                                    runnable -> {
+                                                                      Disposer.register(myDisposable, () -> runnable.run());
+                                                                      return Unit.INSTANCE;
+                                                                    });
+    }
+  }
+
+  protected final void initResizeListener() {
+    Window window = myPeer.getWindow();
     if (window != null) {
       myResizeListener = new ComponentAdapter() {
         @Override
@@ -242,11 +254,10 @@ public abstract class DialogWrapper {
       };
       window.addComponentListener(myResizeListener);
     }
-    createDefaultActions();
   }
 
   /**
-   * Creates modal {@code DialogWrapper} that can be parent for other windows.
+   * Creates modal {@code DialogWrapper} that can be a parent for other windows.
    * The currently active window will be the dialog's parent.
    *
    * @param project parent window for the dialog will be calculated based on focused window for the
@@ -262,7 +273,7 @@ public abstract class DialogWrapper {
   /**
    * Creates modal {@code DialogWrapper}. The currently active window will be the dialog's parent.
    *
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -295,9 +306,9 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * @param parent      parent component which is used to calculate heavy weight window ancestor.
+   * @param parent      parent component which is used to calculate heavyweight window ancestor.
    *                    {@code parent} cannot be {@code null} and must be showing.
-   * @param canBeParent can be parent
+   * @param canBeParent can be a parent
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
   protected DialogWrapper(@NotNull Component parent, boolean canBeParent) {
@@ -307,23 +318,34 @@ public abstract class DialogWrapper {
     createDefaultActions();
   }
 
-  @NotNull
-  @NlsContexts.Checkbox
-  protected String getDoNotShowMessage() {
+  protected DialogWrapper(@NotNull Function<? super DialogWrapper, ? extends DialogWrapperPeer> peerFactory) {
+    myPeer = peerFactory.apply(this);
+    myCreateSouthSection = false;
+    createDefaultActions();
+  }
+
+  protected @NotNull @NlsContexts.Checkbox String getDoNotShowMessage() {
     return UIBundle.message("dialog.options.do.not.show");
   }
 
+  public void setDoNotAskOption(@Nullable com.intellij.openapi.ui.DoNotAskOption doNotAsk) {
+    myDoNotAsk = doNotAsk;
+  }
+
+  /**
+   * @deprecated Please use setDoNotAskOption(com.intellij.openapi.ui.DoNotAskOption) instead
+   */
+  @Deprecated(forRemoval = true)
   public void setDoNotAskOption(@Nullable DoNotAskOption doNotAsk) {
     myDoNotAsk = doNotAsk;
   }
 
-  @NotNull
-  protected Alarm.ThreadToUse getValidationThreadToUse() {
+  protected @NotNull Alarm.ThreadToUse getValidationThreadToUse() {
     return Alarm.ThreadToUse.SWING_THREAD;
   }
 
   /**
-   * Allows to postpone first start of validation
+   * Allows postponing first start of validation
    *
    * @return {@code false} if start validation in {@code init()} method
    */
@@ -332,13 +354,13 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Allow to disable continuous validation.
+   * Allows disabling continuous validation.
    * When disabled {@link #initValidation()} needs to be invoked after every change of the dialog to validate.
    *
    * @return {@code false} to disable continuous validation
    */
   protected boolean continuousValidation() {
-    return true;
+    return myDialogPanel == null;
   }
 
   /**
@@ -349,8 +371,7 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @Nullable
-  protected ValidationInfo doValidate() {
+  protected @Nullable ValidationInfo doValidate() {
     return null;
   }
 
@@ -366,47 +387,29 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @NotNull
-  protected List<ValidationInfo> doValidateAll() {
+  protected @NotNull List<ValidationInfo> doValidateAll() {
+    List<ValidationInfo> result = new ArrayList<>();
     ValidationInfo vi = doValidate();
-
-    if (!myValidateCallbacks.isEmpty()) {
-      List<ValidationInfo> result = new ArrayList<>();
-      if (vi != null) result.add(vi);
-      for (Function0<ValidationInfo> callback : myValidateCallbacks) {
-        ValidationInfo callbackInfo = callback.invoke();
-        if (callbackInfo != null) {
-          result.add(callbackInfo);
-        }
-      }
-      return result;
+    if (vi != null) {
+      result.add(vi);
     }
-
-    return vi != null ? Collections.singletonList(vi) : Collections.emptyList();
+    var dialogPanel = myDialogPanel;
+    if (dialogPanel != null) {
+      result.addAll(dialogPanel.validateAll());
+    }
+    return result;
   }
 
   public void setValidationDelay(int delay) {
     myValidationDelay = delay;
   }
 
-  private void installErrorPainter() {
-    if (myErrorPainterInstalled) return;
-    myErrorPainterInstalled = true;
-    IdeGlassPaneUtil.installPainter(getContentPanel(), myErrorPainter, myDisposable);
-  }
-
   protected void updateErrorInfo(@NotNull List<ValidationInfo> info) {
-    boolean updateNeeded = isInplaceValidationToolTipEnabled() ? !myInfo.equals(info) : !myErrorText.isTextSet(info);
-    if (updateNeeded) {
+    if (!myInfo.equals(info)) {
       SwingUtilities.invokeLater(() -> {
         if (myDisposed) return;
-        if (!info.isEmpty()) {
-          installErrorPainter();
-        }
-        myErrorPainter.setValidationInfo(info);
         setErrorInfoAll(info);
-        myPeer.getRootPane().getGlassPane().repaint();
-        getOKAction().setEnabled(info.isEmpty() || info.stream().allMatch(info1 -> info1.okEnabled));
+        getOKAction().setEnabled(ContainerUtil.all(info, info1 -> info1.okEnabled));
       });
     }
   }
@@ -414,7 +417,7 @@ public abstract class DialogWrapper {
   protected void createDefaultActions() {
     myOKAction = new OkAction();
     myCancelAction = new CancelAction();
-    myHelpAction = new HelpAction();
+    myHelpAction = new HelpAction(this::doHelpAction);
   }
 
   public void setUndecorated(boolean undecorated) {
@@ -441,6 +444,7 @@ public abstract class DialogWrapper {
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
   public final void close(int exitCode, boolean isOk) {
+    logCloseDialogEvent(exitCode);
     ensureEventDispatchThread();
     if (myClosed) return;
     myClosed = true;
@@ -462,20 +466,22 @@ public abstract class DialogWrapper {
   }
 
   public final void close(int exitCode) {
-    logCloseDialogEvent(exitCode);
     close(exitCode, exitCode != CANCEL_EXIT_CODE);
   }
 
   /**
-   * Creates border for dialog's content pane. By default content
-   * pane has has empty border with {@code (8,12,8,12)} insets. Subclasses can
+   * Creates border for dialog's content pane. By default, content
+   * pane has an empty border with {@code (8,12,8,12)} insets. Subclasses can
    * return {@code null} for no border.
    *
    * @return content pane border
    */
-  @Nullable
-  protected Border createContentPaneBorder() {
+  protected @Nullable Border createContentPaneBorder() {
     if (getStyle() == DialogStyle.COMPACT) {
+      if (/*(SystemInfoRt.isMac && Registry.is("ide.mac.transparentTitleBarAppearance", true)) ||*/
+          (SystemInfoRt.isWindows && SystemInfo.isJetBrainsJvm)) {
+        return JBUI.Borders.customLineTop(JBUI.CurrentTheme.CustomFrameDecorations.separatorForeground());
+      }
       return JBUI.Borders.empty();
     }
     return createDefaultBorder();
@@ -491,15 +497,15 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates panel located at the south of the content pane. By default that
+   * Creates panel located at the south of the content pane. By default, that
    * panel contains dialog's buttons. This default implementation uses {@code createActions()}
    * and {@code createJButtonForAction(Action)} methods to construct the panel.
    *
    * @return south panel
    */
   protected JComponent createSouthPanel() {
-    List<Action> actions = ContainerUtil.filter(createActions(), Conditions.notNull());
-    List<Action> leftSideActions = ContainerUtil.filter(createLeftSideActions(), Conditions.notNull());
+    List<Action> actions = new ArrayList<>(ContainerUtil.filter(createActions(), Conditions.notNull()));
+    List<Action> leftSideActions = new ArrayList<>(ContainerUtil.filter(createLeftSideActions(), Conditions.notNull()));
 
     Action helpAction = getHelpAction();
     boolean addHelpToLeftSide = false;
@@ -535,7 +541,7 @@ public abstract class DialogWrapper {
       }
     }
 
-    if (!UISettings.getShadowInstance().getAllowMergeButtons()) {
+    if (!Registry.is("ide.allow.merge.buttons", true)) {
       actions = flattenOptionsActions(actions);
       leftSideActions = flattenOptionsActions(leftSideActions);
     }
@@ -544,25 +550,31 @@ public abstract class DialogWrapper {
     List<JButton> rightSideButtons = createButtons(actions);
 
     myButtonMap.clear();
-    int index = 0;
     for (JButton button : ContainerUtil.concat(leftSideButtons, rightSideButtons)) {
       myButtonMap.put(button.getAction(), button);
       if (button instanceof JBOptionButton) {
         myOptionsButtons.add((JBOptionButton)button);
       }
-      TouchbarDataKeys.putDialogButtonDescriptor(button, index++).setMainGroup(index >= leftSideButtons.size());
     }
 
-    return createSouthPanel(leftSideButtons, rightSideButtons, addHelpToLeftSide);
+    JComponent result = createSouthPanel(leftSideButtons, rightSideButtons, addHelpToLeftSide);
+    if (ApplicationManager.getApplication() != null && LoadingState.COMPONENTS_REGISTERED.isOccurred()) {
+      Touchbar.setButtonActions(result, leftSideButtons, rightSideButtons, null);
+    }
+    return result;
   }
 
-  @NotNull
-  protected JButton createHelpButton(@NotNull Insets insets) {
-    JButton helpButton = new JButton(getHelpAction());
+  protected @NotNull JButton createHelpButton(@NotNull Insets insets) {
+    JButton helpButton = createHelpButton(getHelpAction());
+    setHelpTooltip(helpButton);
+    helpButton.setMargin(insets);
+    return helpButton;
+  }
+
+  private static JButton createHelpButton(@NotNull Action action) {
+    JButton helpButton = new JButton(action);
     helpButton.putClientProperty("JButton.buttonType", "help");
     helpButton.setText("");
-    helpButton.setMargin(insets);
-    setHelpTooltip(helpButton);
     helpButton.addPropertyChangeListener("ancestor", evt -> {
       if (evt.getNewValue() == null) {
         HelpTooltip.dispose((JComponent)evt.getSource());
@@ -577,8 +589,7 @@ public abstract class DialogWrapper {
     helpButton.setToolTipText(ActionsBundle.actionDescription("HelpTopics"));
   }
 
-  @NotNull
-  private static List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
+  private static @NotNull List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
     List<Action> newActions = new ArrayList<>();
     for (Action action : actions) {
       newActions.add(action);
@@ -593,8 +604,7 @@ public abstract class DialogWrapper {
     return false;
   }
 
-  @NotNull
-  protected DialogStyle getStyle() {
+  protected @NotNull DialogStyle getStyle() {
     return DialogStyle.NO_STYLE;
   }
 
@@ -602,16 +612,7 @@ public abstract class DialogWrapper {
     return !myCheckBoxDoNotShowDialog.isSelected();
   }
 
-  /**
-   * @deprecated Do not use. Always returns false
-   */
-  @Deprecated
-  public boolean isTypeAheadEnabled() {
-      return false;
-  }
-
-  @NotNull
-  private List<JButton> createButtons(@NotNull List<? extends Action> actions) {
+  private @NotNull List<JButton> createButtons(@NotNull List<? extends Action> actions) {
     List<JButton> buttons = new ArrayList<>();
     for (Action action : actions) {
       buttons.add(createJButtonForAction(action));
@@ -619,20 +620,10 @@ public abstract class DialogWrapper {
     return buttons;
   }
 
-  @NotNull
-  private JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
-                                  @NotNull List<? extends JButton> rightSideButtons,
-                                  boolean addHelpToLeftSide) {
-    JPanel panel = new JPanel(new BorderLayout()) {
-      @Override
-      public Color getBackground() {
-        final Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
-        if (getStyle() == DialogStyle.COMPACT && bg != null) {
-          return bg;
-        }
-        return super.getBackground();
-      }
-    };
+  private @NotNull JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
+                                           @NotNull List<? extends JButton> rightSideButtons,
+                                           boolean addHelpToLeftSide) {
+    JPanel panel = new SouthPanel(getStyle());
 
     if (myDoNotAsk != null) {
       myCheckBoxDoNotShowDialog = new JCheckBox(myDoNotAsk.getDoNotShowMessage());
@@ -643,7 +634,7 @@ public abstract class DialogWrapper {
     JComponent doNotAskCheckbox = createDoNotAskCheckbox();
 
     JPanel lrButtonsPanel = new NonOpaquePanel(new GridBagLayout());
-    Insets insets = SystemInfoRt.isMac && UIUtil.isUnderIntelliJLaF() ? JBInsets.create(0, 8) : JBUI.emptyInsets();
+    Insets insets = JBInsets.emptyInsets();
 
     if (!rightSideButtons.isEmpty() || !leftSideButtons.isEmpty()) {
       GridBag bag = new GridBag().setDefaultInsets(insets);
@@ -696,7 +687,7 @@ public abstract class DialogWrapper {
     panel.add(lrButtonsPanel, BorderLayout.CENTER);
 
     if (getStyle() == DialogStyle.COMPACT) {
-      final Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
+      Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
       Border line = new CustomLineBorder(color != null ? color : OnePixelDivider.BACKGROUND, 1, 0, 0, 0);
       panel.setBorder(new CompoundBorder(line, JBUI.Borders.empty(8, 12)));
     }
@@ -707,20 +698,17 @@ public abstract class DialogWrapper {
     return panel;
   }
 
-  @Nullable
-  protected JComponent createDoNotAskCheckbox() {
+  protected @Nullable JComponent createDoNotAskCheckbox() {
     return myCheckBoxDoNotShowDialog != null && myCheckBoxDoNotShowDialog.isVisible() ? myCheckBoxDoNotShowDialog : null;
   }
 
   private static final JBValue BASE_BUTTON_GAP = new JBValue.Float(UIUtil.isUnderWin10LookAndFeel() ? 8 : 12);
 
-  @NotNull
-  protected JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  protected @NotNull JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
     return layoutButtonsPanel(buttons);
   }
 
-  @NotNull
-  public static JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  public static @NotNull JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
     JPanel buttonsPanel = new NonOpaquePanel();
     buttonsPanel.setLayout(new BoxLayout(buttonsPanel, BoxLayout.X_AXIS));
 
@@ -744,8 +732,7 @@ public abstract class DialogWrapper {
    *
    * @return panel to be shown or null if it's not required
    */
-  @Nullable
-  protected JPanel createSouthAdditionalPanel() {
+  protected @Nullable JPanel createSouthAdditionalPanel() {
     return null;
   }
 
@@ -754,8 +741,7 @@ public abstract class DialogWrapper {
    * @param action should be registered to find corresponding JButton
    * @return button for specified action or null if it's not found
    */
-  @Nullable
-  protected JButton getButton(@NotNull Action action) {
+  protected @Nullable JButton getButton(@NotNull Action action) {
     return myButtonMap.get(action);
   }
 
@@ -772,7 +758,7 @@ public abstract class DialogWrapper {
     JButton button = createJButtonForAction(action, getRootPane());
 
     int mnemonic = button.getMnemonic();
-    final Object name = action.getValue(Action.NAME);
+    Object name = action.getValue(Action.NAME);
     if (mnemonic == KeyEvent.VK_Y && "Yes".equals(name)) {
       myYesAction = action;
     }
@@ -787,14 +773,29 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  public static JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
+  public static @NotNull JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
     JButton button;
-    if (action instanceof OptionAction && UISettings.getShadowInstance().getAllowMergeButtons()) {
-      button = createJOptionsButton((OptionAction)action);
+    if (action instanceof OptionAction optionAction && Registry.is("ide.allow.merge.buttons", true)) {
+      JBOptionButton optionButton = new JBOptionButton(optionAction, optionAction.getOptions());
+      optionButton.setOptionTooltipText(getDefaultTooltip());
+      button = optionButton;
     }
     else {
-      button = new JButton(action);
+      button = action instanceof DialogWrapperAction ? new JButton(action) : new JButton(action) {
+        @Override
+        protected void fireActionPerformed(ActionEvent event) {
+          Window window = ComponentUtil.getWindow(this);
+          DialogWrapper wrapper = window instanceof DialogWrapperDialog dwd ? dwd.getDialogWrapper() : null;
+          if (wrapper != null && (wrapper.myClosed || wrapper.myPerformAction)) return;
+          if (wrapper != null) wrapper.myPerformAction = true;
+          try (AccessToken ignore = SlowOperations.startSection(SlowOperations.ACTION_PERFORM)) {
+            super.fireActionPerformed(event);
+          }
+          finally {
+            if (wrapper != null) wrapper.myPerformAction = false;
+          }
+        }
+      };
     }
 
     if (SystemInfoRt.isMac) {
@@ -805,7 +806,7 @@ public abstract class DialogWrapper {
     button.setText(pair.second);
     int mnemonic = pair.first;
 
-    final Object value = action.getValue(Action.MNEMONIC_KEY);
+    Object value = action.getValue(Action.MNEMONIC_KEY);
     if (value instanceof Integer) {
       mnemonic = (Integer)value;
     }
@@ -820,16 +821,7 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  private static JButton createJOptionsButton(@NotNull OptionAction action) {
-    JBOptionButton optionButton = new JBOptionButton(action, action.getOptions());
-    optionButton.setOptionTooltipText(getDefaultTooltip());
-    optionButton.setOkToProcessDefaultMnemonics(false);
-    return optionButton;
-  }
-
-  @NotNull
-  public static Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
+  public static @NotNull Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
     if (text == null) return pair(0, null);
 
     int mnemonic = 0;
@@ -844,7 +836,7 @@ public abstract class DialogWrapper {
         }
         ch = text.charAt(i);
         if (ch != '_' && ch != '&') {
-          // Mnemonic is case insensitive.
+          // Mnemonic is case-insensitive
           int vk = ch;
           if (vk >= 'a' && vk <= 'z') {
             vk -= 'a' - 'A';
@@ -857,33 +849,27 @@ public abstract class DialogWrapper {
     return pair(mnemonic, plainText.toString());
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, parent, canBeParent);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, owner, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
     return createPeer(owner, canBeParent, applicationModalIfPossible ? IdeModalityType.IDE : IdeModalityType.PROJECT);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent);
   }
 
-  @Nullable
-  protected JComponent createTitlePane() {
+  protected @Nullable JComponent createTitlePane() {
     return null;
   }
 
@@ -894,8 +880,7 @@ public abstract class DialogWrapper {
    *
    * @return north panel
    */
-  @Nullable
-  protected JComponent createNorthPanel() {
+  protected @Nullable JComponent createNorthPanel() {
     return null;
   }
 
@@ -904,8 +889,7 @@ public abstract class DialogWrapper {
    * center of the dialog's content pane. The implementation can return {@code null}
    * value. In this case there will be no options panel.
    */
-  @Nullable
-  protected abstract JComponent createCenterPanel();
+  protected abstract @Nullable JComponent createCenterPanel();
 
   /** @see Window#toFront() */
   public void toFront() {
@@ -941,7 +925,6 @@ public abstract class DialogWrapper {
    */
   protected void dispose() {
     ensureEventDispatchThread();
-    myErrorTextAlarm.cancelAllRequests();
     myValidationAlarm.cancelAllRequests();
     myDisposed = true;
 
@@ -950,10 +933,9 @@ public abstract class DialogWrapper {
     }
     myButtonMap.clear();
 
-    final JRootPane rootPane = getRootPane();
+    JRootPane rootPane = getRootPane();
     // if rootPane = null, dialog has already been disposed
     if (rootPane != null) {
-      unregisterKeyboardActions(rootPane);
       if (myActualSize != null && isAutoAdjustable()) {
         setSize(myActualSize.width, myActualSize.height);
       }
@@ -961,6 +943,7 @@ public abstract class DialogWrapper {
     }
   }
 
+  @ApiStatus.Internal
   public static void cleanupRootPane(@Nullable JRootPane rootPane) {
     if (rootPane == null) return;
     // Must be preserved:
@@ -969,7 +952,6 @@ public abstract class DialogWrapper {
     // Must be cleared:
     //   JComponent#clientProperties, contentPane children
     RepaintManager.currentManager(rootPane).removeInvalidComponent(rootPane);
-    unregisterKeyboardActions(rootPane);
     Container contentPane = rootPane.getContentPane();
     if (contentPane != null) contentPane.removeAll();
     clearOwnFields(rootPane, field -> {
@@ -981,23 +963,13 @@ public abstract class DialogWrapper {
     });
   }
 
+  /** @deprecated does nothing */
+  @ApiStatus.Internal
+  @Deprecated(forRemoval = true)
   public static void unregisterKeyboardActions(@Nullable Component rootPane) {
-    int[] flags = {JComponent.WHEN_FOCUSED, WHEN_ANCESTOR_OF_FOCUSED_COMPONENT, WHEN_IN_FOCUSED_WINDOW};
-    for (JComponent eachComp : UIUtil.uiTraverser(rootPane).traverse().filter(JComponent.class)) {
-      ActionMap actionMap = eachComp.getActionMap();
-      if (actionMap == null) continue;
-      for (KeyStroke eachStroke : eachComp.getRegisteredKeyStrokes()) {
-        boolean remove = true;
-        for (int i : flags) {
-          Object key = eachComp.getInputMap(i).get(eachStroke);
-          Action action = key == null ? null : actionMap.get(key);
-          if (action instanceof UIResource) remove = false;
-        }
-        if (remove) eachComp.unregisterKeyboardAction(eachStroke);
-      }
-    }
   }
 
+  @ApiStatus.Internal
   public static void cleanupWindowListeners(@Nullable Window window) {
     if (window == null) return;
     SwingUtilities.invokeLater(() -> {
@@ -1022,10 +994,8 @@ public abstract class DialogWrapper {
   }
 
   private void processDoNotAskOnCancel() {
-    if (myDoNotAsk != null) {
-      if (myDoNotAsk.shouldSaveOptionsOnCancel() && myDoNotAsk.canBeHidden()) {
-        myDoNotAsk.setToBeShown(toBeShown(), CANCEL_EXIT_CODE);
-      }
+    if (myDoNotAsk != null && myDoNotAsk.shouldSaveOptionsOnCancel() && myDoNotAsk.canBeHidden()) {
+      myDoNotAsk.setToBeShown(toBeShown(), CANCEL_EXIT_CODE);
     }
   }
 
@@ -1060,6 +1030,11 @@ public abstract class DialogWrapper {
     doOKAction();
   }
 
+  @ApiStatus.Internal
+  public final @NotNull List<ValidationInfo> performValidateAll() {
+    return doValidateAll();
+  }
+
   /**
    * This method is invoked by default implementation of "OK" action. It just closes dialog
    * with {@code OK_EXIT_CODE}. This is convenient place to override functionality of "OK" action.
@@ -1067,18 +1042,20 @@ public abstract class DialogWrapper {
    */
   protected void doOKAction() {
     if (getOKAction().isEnabled()) {
-      if (myDialogPanel != null) {
-        myDialogPanel.apply();
-      }
+      applyFields();
       close(OK_EXIT_CODE);
     }
   }
 
+  protected void applyFields() {
+    if (myDialogPanel != null) {
+      myDialogPanel.apply();
+    }
+  }
+
   protected void processDoNotAskOnOk(int exitCode) {
-    if (myDoNotAsk != null) {
-      if (myDoNotAsk.canBeHidden()) {
-        myDoNotAsk.setToBeShown(toBeShown(), exitCode);
-      }
+    if (myDoNotAsk != null && myDoNotAsk.canBeHidden()) {
+      myDoNotAsk.setToBeShown(toBeShown(), exitCode);
     }
   }
 
@@ -1093,7 +1070,7 @@ public abstract class DialogWrapper {
   /**
    * Creates actions for dialog.
    * <p/>
-   * By default "OK" and "Cancel" actions are returned. The "Help" action is automatically added if
+   * By default, "OK" and "Cancel" actions are returned. The "Help" action is automatically added if
    * {@link #getHelpId()} returns non-null value.
    * <p/>
    * Each action is represented by {@code JButton} created by {@link #createJButtonForAction(Action)}.
@@ -1119,8 +1096,7 @@ public abstract class DialogWrapper {
    * {@code doOKAction()} method.
    * @see #doOKAction
    */
-  @NotNull
-  protected Action getOKAction() {
+  protected @NotNull Action getOKAction() {
     return myOKAction;
   }
 
@@ -1129,8 +1105,7 @@ public abstract class DialogWrapper {
    * {@code doCancelAction()} method.
    * @see #doCancelAction
    */
-  @NotNull
-  protected Action getCancelAction() {
+  protected @NotNull Action getCancelAction() {
     return myCancelAction;
   }
 
@@ -1139,8 +1114,7 @@ public abstract class DialogWrapper {
    * {@code doHelpAction()} method.
    * @see #doHelpAction
    */
-  @NotNull
-  protected Action getHelpAction() {
+  protected @NotNull Action getHelpAction() {
     return myHelpAction;
   }
 
@@ -1183,16 +1157,19 @@ public abstract class DialogWrapper {
    *
    * @return dimension service key
    */
-  @Nullable @NonNls
-  protected String getDimensionServiceKey() {
+  protected @NonNls @Nullable String getDimensionServiceKey() {
     return null;
   }
 
-  @Nullable
-  public final @NonNls String getDimensionKey() {
+  public final @NonNls @Nullable String getDimensionKey() {
     return getDimensionServiceKey();
   }
 
+  /**
+   * @see #OK_EXIT_CODE
+   * @see #CANCEL_EXIT_CODE
+   * @see #CLOSE_EXIT_CODE
+   */
   public int getExitCode() {
     return myExitCode;
   }
@@ -1201,8 +1178,7 @@ public abstract class DialogWrapper {
    * @return component which should be focused when the dialog appears
    * on the screen.
    */
-  @Nullable
-  public JComponent getPreferredFocusedComponent() {
+  public @Nullable JComponent getPreferredFocusedComponent() {
     if (myPreferredFocusedComponentFromPanel != null) {
       return myPreferredFocusedComponentFromPanel;
     }
@@ -1277,13 +1253,27 @@ public abstract class DialogWrapper {
 
   protected void init() {
     ensureEventDispatchThread();
-    myErrorText = new ErrorText(getErrorTextAlignment());
+    myErrorText = new ErrorText(createContentPaneBorder(), getErrorTextAlignment());
     myErrorText.setVisible(false);
-    final ComponentAdapter resizeListener = new ComponentAdapter() {
+    ComponentAdapter resizeListener = new ComponentAdapter() {
       private int myHeight;
 
       @Override
-      public void componentResized(ComponentEvent event) {
+      public void componentResized(ComponentEvent e) {
+        resize(e);
+      }
+
+      @Override
+      public void componentShown(ComponentEvent e) {
+        resize(e);
+      }
+
+      @Override
+      public void componentHidden(ComponentEvent e) {
+        resize(e);
+      }
+
+      private void resize(ComponentEvent event) {
         int height = !myErrorText.isVisible() ? 0 : event.getComponent().getHeight();
         if (height != myHeight) {
           myHeight = height;
@@ -1301,50 +1291,39 @@ public abstract class DialogWrapper {
         }
       }
     };
-    myErrorText.myLabel.addComponentListener(resizeListener);
+    myErrorText.addComponentListener(resizeListener);
     Disposer.register(myDisposable, () -> myErrorText.myLabel.removeComponentListener(resizeListener));
 
-    final JPanel root = new JPanel(createRootLayout());
-    //{
-    //  @Override
-    //  public void paint(Graphics g) {
-    //    if (ApplicationManager.getApplication() != null) {
-    //      UISettings.setupAntialiasing(g);
-    //    }
-    //    super.paint(g);
-    //  }
-    //};
-    myPeer.setContentPane(root);
+    myRoot.setLayout(createRootLayout());
+    myPeer.setContentPane(myRoot);
 
     AnAction toggleShowOptions = DumbAwareAction.create(e -> expandNextOptionButton());
-    toggleShowOptions.registerCustomShortcutSet(getDefaultShowPopupShortcut(), root, myDisposable);
+    toggleShowOptions.registerCustomShortcutSet(getDefaultShowPopupShortcut(), myRoot, myDisposable);
 
     JComponent titlePane = createTitlePane();
     if (titlePane != null) {
       JPanel northSection = new JPanel(new BorderLayout());
-      root.add(northSection, BorderLayout.NORTH);
+      myRoot.add(northSection, BorderLayout.NORTH);
 
       northSection.add(titlePane, BorderLayout.CENTER);
     }
 
     JComponent centerSection = new JPanel(new BorderLayout());
-    root.add(centerSection, BorderLayout.CENTER);
+    myRoot.add(centerSection, BorderLayout.CENTER);
 
-    final JComponent n = createNorthPanel();
+    JComponent n = createNorthPanel();
     if (n != null) {
       centerSection.add(n, BorderLayout.NORTH);
     }
 
-    final JComponent centerPanel = createCenterPanel();
+    JComponent centerPanel = createCenterPanel();
     if (centerPanel != null) {
       centerPanel.putClientProperty(DIALOG_CONTENT_PANEL_PROPERTY, true);
       centerSection.add(centerPanel, BorderLayout.CENTER);
-      if (centerPanel instanceof DialogPanel) {
-        DialogPanel dialogPanel = (DialogPanel)centerPanel;
+      if (centerPanel instanceof DialogPanel dialogPanel) {
         myPreferredFocusedComponentFromPanel = dialogPanel.getPreferredFocusedComponent();
-        myValidateCallbacks.addAll(dialogPanel.getValidateCallbacks());
         dialogPanel.registerValidators(myDisposable, map -> {
-          setOKActionEnabled(map.isEmpty());
+          setOKActionEnabled(ContainerUtil.and(map.values(), info -> info.okEnabled));
           return Unit.INSTANCE;
         });
         myDialogPanel = dialogPanel;
@@ -1355,39 +1334,37 @@ public abstract class DialogWrapper {
       centerPanel == null || centerPanel.getClientProperty(IS_VISUAL_PADDING_COMPENSATED_ON_COMPONENT_LEVEL_KEY) == null;
     if (isVisualPaddingCompensatedOnComponentLevel) {
       // see comment about visual paddings in the MigLayoutBuilder.build
-      root.setBorder(createContentPaneBorder());
+      myRoot.setBorder(createContentPaneBorder());
     }
 
     if (myCreateSouthSection) {
-      final JPanel southSection = new JPanel(new BorderLayout());
+      JPanel southSection = new JPanel(new BorderLayout());
       if (!isVisualPaddingCompensatedOnComponentLevel) {
         southSection.setBorder(JBUI.Borders.empty(0, 12, 8, 12));
       }
-      root.add(southSection, BorderLayout.SOUTH);
+      myRoot.add(southSection, BorderLayout.SOUTH);
 
       southSection.add(myErrorText, BorderLayout.CENTER);
-      final JComponent south = createSouthPanel();
+      JComponent south = createSouthPanel();
       if (south != null) {
         southSection.add(south, BorderLayout.SOUTH);
       }
     }
 
-    MnemonicHelper.init(root);
+    MnemonicHelper.init(myRoot);
     if (!postponeValidation()) {
       startTrackingValidation();
     }
     if (SystemInfoRt.isWindows || (SystemInfoRt.isLinux && Registry.is("ide.linux.enter.on.dialog.triggers.focused.button", true))) {
-      installEnterHook(root, myDisposable);
+      installEnterHook(myRoot, myDisposable);
     }
-    myErrorTextAlarm.setActivationComponent(root);
   }
 
   protected int getErrorTextAlignment() {
     return SwingConstants.LEADING;
   }
 
-  @NotNull
-  protected LayoutManager createRootLayout() {
+  protected @NotNull LayoutManager createRootLayout() {
     return new BorderLayout();
   }
 
@@ -1395,7 +1372,7 @@ public abstract class DialogWrapper {
     new DumbAwareAction() {
       @Override
       public void actionPerformed(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         if (owner instanceof JButton && owner.isEnabled()) {
           ((JButton)owner).doClick();
         }
@@ -1403,8 +1380,13 @@ public abstract class DialogWrapper {
 
       @Override
       public void update(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         e.getPresentation().setEnabled(owner instanceof JButton && owner.isEnabled());
+      }
+
+      @Override
+      public @NotNull ActionUpdateThread getActionUpdateThread() {
+        return ActionUpdateThread.EDT;
       }
     }.registerCustomShortcutSet(CustomShortcutSet.fromString("ENTER"), root, disposable);
   }
@@ -1422,7 +1404,7 @@ public abstract class DialogWrapper {
   protected void startTrackingValidation() {
     if (!continuousValidation()) return;
     SwingUtilities.invokeLater(() -> {
-      if (!myValidationStarted && !myDisposed) {
+      if (!myValidationStarted) {
         myValidationStarted = true;
         initValidation();
       }
@@ -1430,12 +1412,13 @@ public abstract class DialogWrapper {
   }
 
   protected final void initValidation() {
+    if (myDisposed) return;
     myValidationAlarm.cancelAllRequests();
-    final Runnable validateRequest = () -> {
+    Runnable validateRequest = () -> {
       if (myDisposed) return;
       updateErrorInfo(doValidateAll());
 
-      if (!myDisposed && continuousValidation()) {
+      if (continuousValidation()) {
         initValidation();
       }
     };
@@ -1444,17 +1427,16 @@ public abstract class DialogWrapper {
       // null if headless
       JRootPane rootPane = getRootPane();
       myValidationAlarm.addRequest(validateRequest, myValidationDelay,
-                                   ApplicationManager.getApplication() == null
-                                   ? null
-                                   : rootPane == null ? ModalityState.current() : ModalityState.stateForComponent(rootPane));
+                                   (ApplicationManager.getApplication() == null || !LoadingState.COMPONENTS_REGISTERED.isOccurred()) ? null :
+                                   rootPane != null ? ModalityState.stateForComponent(rootPane) :
+                                   ModalityState.current());
     }
     else {
       myValidationAlarm.addRequest(validateRequest, myValidationDelay);
     }
   }
 
-  @NotNull
-  protected JComponent createContentPane() {
+  protected @NotNull JComponent createContentPane() {
     return new JPanel();
   }
 
@@ -1470,54 +1452,29 @@ public abstract class DialogWrapper {
    *
    * @return initial window size
    */
-  @Nullable
-  public Dimension getInitialSize() {
-    if (SystemInfo.isLinux) {
-      //Temporary workaround for IDEA-253643
-      return null;
-    }
-    List<JTable> tables = UIUtil.findComponentsOfType(getContentPanel(), JTable.class);
-    if (!tables.isEmpty()) {
-      Dimension size = getContentPanel().getPreferredSize();
-      for (JTable table : tables) {
-        Dimension tablePreferredSize = table.getPreferredSize();
-        size.width = Math.max(size.width, tablePreferredSize.width);
-        size.height = Math.max(size.height, size.height - table.getParent().getHeight() + tablePreferredSize.height);
-      }
-      size.width = Math.min(1000, Math.max(600, size.width));
-      size.height = Math.min(800, size.height);
-      return size;
-    }
-    return new Dimension(400, 0);
+  public @Nullable Dimension getInitialSize() {
+    if (myUserSizeSet) return myUserBounds.getSize();
+    return null;
   }
 
   public Dimension getPreferredSize() {
     return myPeer.getPreferredSize();
   }
 
-  /**
-   * @deprecated Dialog action buttons should be right-aligned.
-   */
-  @Deprecated
-protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConstants.CENTER, SwingConstants.RIGHT}) int alignment) {
+  /** @deprecated Dialog action buttons should be right-aligned. */
+  @Deprecated(forRemoval = true)
+  protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConstants.CENTER, SwingConstants.RIGHT}) int alignment) {
     if (SwingConstants.CENTER != alignment && SwingConstants.RIGHT != alignment) {
       throw new IllegalArgumentException("unknown alignment: " + alignment);
     }
     myButtonAlignment = alignment;
   }
 
-  /** @deprecated button margins aren't used anymore. Button style is standardized. */
-  @Deprecated
-  public final void setButtonsMargin(@SuppressWarnings("unused") Insets insets) { }
-
   public final void setCrossClosesWindow(boolean crossClosesWindow) {
     myCrossClosesWindow = crossClosesWindow;
   }
 
-  /** @deprecated button icons aren't used anymore (except "OK" action). Button style is standardized. */
-  @Deprecated
-  protected final void setCancelButtonIcon(@SuppressWarnings("unused") Icon icon) { }
-
+  /** @see #setOKButtonText(String) for mnemonic hadling */
   protected final void setCancelButtonText(@NlsContexts.Button @NotNull String text) {
     myCancelAction.putValue(Action.NAME, text);
   }
@@ -1528,6 +1485,37 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
 
   public boolean isModal() {
     return myPeer.isModal();
+  }
+
+  /**
+   * Checks if this dialog will keep previously opened popup open while it's showing.
+   *
+   * @see #setKeepPopupsOpen(boolean)
+   * @return the current value of the "keep popups open" flag
+   */
+  @ApiStatus.Experimental
+  public boolean isKeepPopupsOpen() {
+    return myKeepPopupsOpen;
+  }
+
+  /**
+   * Sets whether this dialog will keep previously opened popup open while it's showing.
+   *
+   * Some dialogs (e.g. Paste from History) can be invoked from a popup to perform
+   * a certain task and then get back to working with the popup. However, as popups
+   * normally disappear on losing focus, this doesn't work by default. Calling this
+   * method with the parameter set to {@code true} will override this behavior
+   * and keep all previously opened popups while the dialog is displayed.
+   *
+   * @param keepPopupsOpen whether to keep previously opened popups open
+   */
+  @ApiStatus.Experimental
+  public void setKeepPopupsOpen(boolean keepPopupsOpen) {
+    myKeepPopupsOpen = keepPopupsOpen;
+  }
+
+  public void setOnDeactivationAction(@NotNull Runnable action) {
+    myPeer.setOnDeactivationAction(myDisposable, action);
   }
 
   public boolean isOKActionEnabled() {
@@ -1543,9 +1531,11 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   }
 
   /**
-   * @param text action without mnemonic. If mnemonic is set, presentation would be shifted by one to the left
-   *             {@link AbstractButton#setText(String)}
-   *             {@link AbstractButton#updateDisplayedMnemonicIndex(String, int)}
+   * Passed action text WILL be processed by {@link #extractMnemonic(String)} if setter is called before the {@link #init()}.
+   * It WILL NOT be processed if setter is called after the {@link #init()}.
+   *
+   * @see AbstractButton#setText(String)
+   * @see AbstractButton#updateDisplayedMnemonicIndex(String, int)
    */
   protected final void setOKButtonText(@NlsContexts.Button @NotNull String text) {
     myOKAction.putValue(Action.NAME, text);
@@ -1560,9 +1550,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   }
 
   /** Returns the help identifier, or {@code null} if no help is available. */
-  @NonNls
-  @Nullable
-  protected String getHelpId() {
+  protected @NonNls @Nullable String getHelpId() {
     return null;
   }
 
@@ -1605,6 +1593,8 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @see JDialog#setSize
    */
   public void setSize(int width, int height) {
+    myUserBounds.setSize(width, height);
+    myUserSizeSet = true;
     myPeer.setSize(width, height);
   }
 
@@ -1619,8 +1609,8 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   /**
    * @see JDialog#isResizable
    */
-  public void isResizable() {
-    myPeer.isResizable();
+  public boolean isResizable() {
+    return myPeer.isResizable();
   }
 
   /**
@@ -1635,8 +1625,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @return dialog location
    * @see JDialog#getLocation
    */
-  @NotNull
-  public Point getLocation() {
+  public @NotNull Point getLocation() {
     return myPeer.getLocation();
   }
 
@@ -1645,6 +1634,8 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @see JDialog#setLocation(Point)
    */
   public void setLocation(@NotNull Point p) {
+    myUserBounds.setLocation(p);
+    myUserLocationSet = true;
     myPeer.setLocation(p);
   }
 
@@ -1654,7 +1645,18 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @see JDialog#setLocation(int, int)
    */
   public void setLocation(int x, int y) {
+    myUserBounds.setLocation(x, y);
+    myUserLocationSet = true;
     myPeer.setLocation(x, y);
+  }
+
+  /**
+   * Called to fit window bounds of dialog to a screen
+   * @param rect the suggested window bounds. This rect should be modified to change resulting bounds.
+   */
+  @ApiStatus.Internal
+  public void fitToScreen(Rectangle rect) {
+    ScreenUtil.fitToScreen(rect);
   }
 
   @SuppressWarnings("unused")
@@ -1669,7 +1671,9 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @see #showAndGet()
    */
   public void show() {
-    logShowDialogEvent();
+    if (LoadingState.APP_STARTED.isOccurred()) {
+      logShowDialogEvent();
+    }
     doShow();
   }
 
@@ -1690,8 +1694,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
 
   /** @deprecated override {@link #doOKAction()} / {@link #doCancelAction()} or hook on {@link #myDisposable} */
   @Deprecated
-  @NotNull
-  public AsyncResult<Boolean> showAndGetOk() {
+  public @NotNull AsyncResult<Boolean> showAndGetOk() {
     if (isModal()) {
       throw new IllegalStateException("The showAndGetOk() method is for modeless dialogs only");
     }
@@ -1703,14 +1706,20 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   }
 
   private void doShow() {
+    if (UiInterceptors.tryIntercept(this)) return;
+
     ensureEventDispatchThread();
     registerKeyboardShortcuts();
 
-    Disposable uiParent = ApplicationManager.getApplication();
+    Disposable uiParent = ClientDisposableProvider.getCurrentDisposable();
     if (uiParent != null) { // may be null if no app yet (license agreement)
       Disposer.register(uiParent, myDisposable); // ensure everything is disposed on app quit
     }
 
+    Window window = myPeer.getWindow();
+    if (window != null) {
+      ClientProperty.put(window, KEEP_POPUPS_OPEN, myKeepPopupsOpen);
+    }
     myPeer.show();
   }
 
@@ -1718,13 +1727,19 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * @return Location in absolute coordinates which is used when dialog has no dimension service key or no position was stored yet.
    * Can return null. In that case dialog will be centered relative to its owner.
    */
-  @Nullable
-  public Point getInitialLocation() {
-    return myInitialLocationCallback == null ? null : myInitialLocationCallback.compute();
+  public @Nullable Point getInitialLocation() {
+    return myInitialLocationCallback != null
+           ? myInitialLocationCallback.compute()
+           : myUserLocationSet
+             ? myUserBounds.getLocation()
+             : null;
   }
 
   public void setInitialLocationCallback(@NotNull Computable<? extends Point> callback) {
     myInitialLocationCallback = callback;
+  }
+
+  public void beforeShowCallback() {
   }
 
   private void registerKeyboardShortcuts() {
@@ -1758,13 +1773,16 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   /**
    * Return {@code null} if we should ignore <Esc> for window closing.
    */
-  @Nullable
-  protected ActionListener createCancelAction() {
+  protected @Nullable ActionListener createCancelAction() {
     return e -> {
       if (!PopupUtil.handleEscKeyEvent()) {
         doCancelAction(e);
       }
     };
+  }
+
+  protected @NotNull Map<Action, JButton> getButtonMap() {
+    return myButtonMap;
   }
 
   private void focusButton(boolean next) {
@@ -1776,8 +1794,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     }
   }
 
-  @NotNull
-  private static OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
+  private static @NotNull OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
     assert -1 <= currentIndex && currentIndex <= components.size();
     int start = !next && currentIndex == -1 ? components.size() : currentIndex;
 
@@ -1788,31 +1805,22 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
   }
 
   private void logCloseDialogEvent(int exitCode) {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
-      if (StringUtil.isNotEmpty(dialogId)) {
-        FeatureUsageUiEventsKt.getUiEventLogger().logCloseDialog(dialogId, exitCode, getClass());
-      }
+      FeatureUsageUiEventsKt.getUiEventLogger().logCloseDialog(getClass(), exitCode);
     }
   }
 
   private void logShowDialogEvent() {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
-      if (StringUtil.isNotEmpty(dialogId)) {
-        FeatureUsageUiEventsKt.getUiEventLogger().logShowDialog(dialogId, getClass());
-      }
+      FeatureUsageUiEventsKt.getUiEventLogger().logShowDialog(getClass());
     }
   }
 
   private void logClickOnHelpDialogEvent() {
     if (!canRecordDialogId()) return;
-    final String dialogId = getClass().getName();
-    if (StringUtil.isNotEmpty(dialogId)) {
-      FeatureUsageUiEventsKt.getUiEventLogger().logClickOnHelpDialog(dialogId, getClass());
-    }
+    FeatureUsageUiEventsKt.getUiEventLogger().logClickOnHelpDialog(getClass());
   }
 
   /**
@@ -1843,8 +1851,8 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     public void actionPerformed(ActionEvent e) {
       if (myClosed) return;
       if (myPerformAction) return;
-      try {
-        myPerformAction = true;
+      myPerformAction = true;
+      try (AccessToken ignore = SlowOperations.startSection(SlowOperations.ACTION_PERFORM)) {
         doAction(e);
       }
       finally {
@@ -1885,19 +1893,19 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
           IdeFocusManager.getInstance(null).requestFocus(info.component, true);
         }
 
-        if (!isInplaceValidationToolTipEnabled()) {
-          DialogEarthquakeShaker.shake(getPeer().getWindow());
-        }
         updateErrorInfo(infoList);
         startTrackingValidation();
-        if(infoList.stream().anyMatch(info1 -> !info1.okEnabled)) return;
+        if (ContainerUtil.exists(infoList, info1 -> !info1.okEnabled)) {
+          return;
+        }
       }
       doOKAction();
     }
   }
 
-  private void recordAction(@NonNls String name, AWTEvent event) {
-    if (event instanceof KeyEvent && ApplicationManager.getApplication() != null) {
+  private void recordAction(String name, AWTEvent event) {
+    if (event instanceof KeyEvent && ApplicationManager.getApplication() != null && LoadingState.COMPONENTS_REGISTERED.isOccurred()) {
+      //noinspection deprecation
       ActionsCollector.getInstance().record(name, (KeyEvent)event, getClass());
     }
   }
@@ -1943,14 +1951,17 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     }
   }
 
-  private final class HelpAction extends AbstractAction {
-    private HelpAction() {
+  public static final class HelpAction extends AbstractAction {
+    private final @NotNull Runnable myHelpActionPerformed;
+
+    public HelpAction(@NotNull Runnable helpActionPerformed) {
       super(CommonBundle.getHelpButtonText());
+      myHelpActionPerformed = helpActionPerformed;
     }
 
     @Override
     public void actionPerformed(ActionEvent e) {
-      doHelpAction();
+      myHelpActionPerformed.run();
     }
   }
 
@@ -1962,83 +1973,94 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
    * <code>{@link #setErrorText(String, JComponent)}</code> method.
    * @param text the error text to display
    */
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text) {
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text) {
     setErrorText(text, null);
   }
 
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text, @Nullable final JComponent component) {
-    setErrorInfoAll(text == null ?
-                    Collections.emptyList() :
-                    Collections.singletonList(new ValidationInfo(text, component)));
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text, @Nullable JComponent component) {
+    setErrorInfoAll(text == null ? List.of() : List.of(new ValidationInfo(text, component)));
   }
 
-  protected void setErrorInfoAll(@NotNull List<ValidationInfo> info) {
+  protected final void setErrorInfoAll(@NotNull List<ValidationInfo> info) {
     if (myInfo.equals(info)) return;
+
+    updateErrorText(info);
+    updateComponentErrors(info);
+
+    myInfo = info;
+  }
+
+  private void updateComponentErrors(@NotNull List<ValidationInfo> info) {
+    // clear current component errors
+    myInfo.stream()
+      .filter(vi -> !info.contains(vi))
+      .filter(vi -> vi.component != null)
+      .map(vi -> ComponentValidator.getInstance(vi.component))
+      .forEach(c -> c.ifPresent(vi -> vi.updateInfo(null)));
+
+    // show current errors
+    for (ValidationInfo vi : info) {
+      JComponent component = vi.component;
+      if (component == null) continue;
+
+      ComponentValidator validator = ComponentValidator.getInstance(component)
+        .orElseGet(() -> new ComponentValidator(getDisposable()).installOn(component));
+      validator.updateInfo(vi);
+    }
+  }
+
+  private void updateErrorText(@NotNull List<ValidationInfo> infos) {
+    //init was not called - there's nothing to update
+    ErrorText errorText = myErrorText;
+    if (errorText == null) return;
+
+    Runnable updateRunnable = () -> {
+      if (!myDisposed) doUpdateErrorText(errorText, infos);
+    };
 
     Application application = ApplicationManager.getApplication();
     boolean headless = application != null && application.isHeadlessEnvironment();
-
-    myErrorTextAlarm.cancelAllRequests();
-    Runnable clearErrorRunnable = () -> {
-      if (myErrorText != null) {
-        myErrorText.clearError(info.stream().noneMatch(i -> StringUtil.isNotEmpty(i.message)));
-      }
-    };
     if (headless) {
-      clearErrorRunnable.run();
+      updateRunnable.run();
     }
     else {
-      SwingUtilities.invokeLater(clearErrorRunnable);
-    }
-
-    List<ValidationInfo> corrected = ContainerUtil.filter(myInfo, vi -> !info.contains(vi));
-    if (isInplaceValidationToolTipEnabled()) {
-      corrected.stream().filter(vi -> vi.component != null).
-        map(vi -> ComponentValidator.getInstance(vi.component)).
-        forEach(c -> c.ifPresent(vi -> vi.updateInfo(null)));
-    }
-
-    myInfo = info;
-
-    if (isInplaceValidationToolTipEnabled() && !myInfo.isEmpty()) {
-      myInfo.forEach(vi -> {
-        if (vi.component != null) {
-          ComponentValidator v = ComponentValidator.getInstance(vi.component).
-            orElseGet(() -> new ComponentValidator(getDisposable()).installOn(vi.component));
-
-          if (v != null) {
-            v.updateInfo(vi);
-            return;
-          }
-        }
-
-        if (StringUtil.isNotEmpty(vi.message)) SwingUtilities.invokeLater(() -> myErrorText.appendError(vi));
-      });
-    }
-    else if (!myInfo.isEmpty()) {
-      Runnable updateErrorTextRunnable = () -> {
-        for (ValidationInfo vi: myInfo) {
-          if (StringUtil.isNotEmpty(vi.message)) myErrorText.appendError(vi);
-        }
-      };
-      if (headless) {
-        updateErrorTextRunnable.run();
-      }
-      else {
-        myErrorTextAlarm.addRequest(updateErrorTextRunnable, 300, null);
-      }
+      SwingUtilities.invokeLater(updateRunnable);
     }
   }
 
-  private static boolean isInplaceValidationToolTipEnabled() {
-    return Registry.is("ide.inplace.validation.tooltip", true);
+  private void doUpdateErrorText(@NotNull ErrorText errorText, @NotNull List<ValidationInfo> infos) {
+    HtmlBuilder htmlBuilder = new HtmlBuilder();
+    for (ValidationInfo info : infos) {
+      if (info.component != null || Strings.isEmptyOrSpaces(info.message)) {
+        continue;
+      }
+
+      Color color = info.warning ? MessageType.WARNING.getTitleForeground() : NamedColorUtil.getErrorForeground();
+      htmlBuilder
+        .append(
+          HtmlChunk.raw(info.message)
+            .wrapWith("left")
+            .wrapWith(HtmlChunk.font(ColorUtil.toHex(color)))
+        )
+        .br();
+    }
+
+    // avoid updating size unnecessarily
+    boolean needsSizeUpdate = true;
+    if (htmlBuilder.isEmpty()) {
+      needsSizeUpdate = errorText.clear();
+    }
+    else {
+      errorText.setText(htmlBuilder.wrapWithHtmlBody().toString());
+    }
+    if (needsSizeUpdate) updateSize();
   }
 
   /**
    * Check if component is in error state validation-wise
    */
   protected boolean hasErrors(@NotNull JComponent component) {
-    return myInfo.stream().anyMatch(i -> component.equals(i.component) && !i.warning);
+    return ContainerUtil.exists(myInfo, i -> component.equals(i.component) && !i.warning);
   }
 
   private void updateSize() {
@@ -2047,8 +2069,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     }
   }
 
-  @Nullable
-  public static DialogWrapper findInstance(Component c) {
+  public static @Nullable DialogWrapper findInstance(Component c) {
     while (c != null) {
       if (c instanceof DialogWrapperDialog) {
         return ((DialogWrapperDialog)c).getDialogWrapper();
@@ -2058,19 +2079,16 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     return null;
   }
 
-  @Nullable
-  @SuppressWarnings("unused")
-  public static DialogWrapper findInstanceFromFocus() {
+  public static @Nullable DialogWrapper findInstanceFromFocus() {
     return findInstance(KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner());
   }
 
-  private final class ErrorText extends JPanel {
+  private static final class ErrorText extends JPanel {
     private final JLabel myLabel = new JLabel();
-    private final List<ValidationInfo> errors = new ArrayList<>();
 
-    private ErrorText(int horizontalAlignment) {
+    private ErrorText(@Nullable Border contentBorder, int horizontalAlignment) {
       setLayout(new BorderLayout());
-      myLabel.setBorder(createErrorTextBorder());
+      myLabel.setBorder(createErrorTextBorder(contentBorder));
       myLabel.setHorizontalAlignment(horizontalAlignment);
       JBScrollPane pane =
         new JBScrollPane(myLabel, ScrollPaneConstants.VERTICAL_SCROLLBAR_NEVER, ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
@@ -2081,9 +2099,21 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
       add(pane, BorderLayout.CENTER);
     }
 
-    private @NotNull Border createErrorTextBorder() {
-      Border border = createContentPaneBorder();
-      Insets contentInsets = border != null ? border.getBorderInsets(null) : JBUI.emptyInsets();
+    public void setText(@NotNull @Nls String errorText) {
+      myLabel.setText(errorText);
+      setVisible(true);
+    }
+
+    public boolean clear() {
+      boolean isCurrentlyVisible = isVisible();
+      myLabel.setBounds(0, 0, 0, 0);
+      myLabel.setText("");
+      setVisible(false);
+      return isCurrentlyVisible;
+    }
+
+    private static @NotNull Border createErrorTextBorder(@Nullable Border contentBorder) {
+      Insets contentInsets = contentBorder != null ? contentBorder.getBorderInsets(null) : JBInsets.emptyInsets();
       Insets baseInsets = JBInsets.create(16, 13);
 
       //noinspection UseDPIAwareBorders: Insets are already scaled, so use raw version.
@@ -2092,45 +2122,9 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
                              baseInsets.bottom > contentInsets.bottom ? baseInsets.bottom - contentInsets.bottom : 0,
                              baseInsets.right > contentInsets.right ? baseInsets.right - contentInsets.right : 0);
     }
-
-    private void clearError(boolean full) {
-      errors.clear();
-      if (full) {
-        myLabel.setBounds(0, 0, 0, 0);
-        myLabel.setText("");
-        setVisible(false);
-        updateSize();
-      }
-    }
-
-    private void appendError(@NotNull ValidationInfo info) {
-      errors.add(info);
-
-      StringBuilder sb = new StringBuilder("<html>");
-      errors.forEach(
-        vi -> {
-          Color color = vi.warning ? MessageType.WARNING.getTitleForeground() : ERROR_FOREGROUND_COLOR;
-          sb.append("<font color='#").append(ColorUtil.toHex(color)).append("'>")
-            .append("<left>")
-            .append(vi.message)
-            .append("</left></font><br/>");
-        }
-      );
-      sb.append("</html>");
-
-      //noinspection HardCodedStringLiteral
-      myLabel.setText(sb.toString());
-      setVisible(true);
-      updateSize();
-    }
-
-    private boolean isTextSet(@NotNull List<ValidationInfo> info) {
-      return errors.equals(info);
-    }
   }
 
-  @NotNull
-  public final DialogWrapperPeer getPeer() {
+  public final @NotNull DialogWrapperPeer getPeer() {
     return myPeer;
   }
 
@@ -2145,8 +2139,7 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     }
   }
 
-  @NotNull
-  public final Disposable getDisposable() {
+  public final @NotNull Disposable getDisposable() {
     return myDisposable;
   }
 
@@ -2159,108 +2152,6 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
     Disposer.dispose(getDisposable());
   }
 
-  /**
-   * @see Adapter
-   */
-  public interface DoNotAskOption {
-
-    abstract class Adapter implements DoNotAskOption {
-      /**
-       * Save the state of the checkbox in the settings, or perform some other related action.
-       * This method is called right after the dialog is {@link #close(int) closed}.
-       * <br/>
-       * Note that this method won't be called in the case when the dialog is closed by {@link #CANCEL_EXIT_CODE Cancel}
-       * if {@link #shouldSaveOptionsOnCancel() saving the choice on cancel is disabled} (which is by default).
-       *
-       * @param isSelected true if user selected "don't show again".
-       * @param exitCode   the {@link #getExitCode() exit code} of the dialog.
-       * @see #shouldSaveOptionsOnCancel()
-       */
-      public abstract void rememberChoice(boolean isSelected, int exitCode);
-
-      /**
-       * Tells whether the checkbox should be selected by default or not.
-       *
-       * @return true if the checkbox should be selected by default.
-       */
-      public boolean isSelectedByDefault() {
-        return false;
-      }
-
-      @Override
-      public boolean shouldSaveOptionsOnCancel() {
-        return false;
-      }
-
-      @NotNull
-      @Override
-      public String getDoNotShowMessage() {
-        return UIBundle.message("dialog.options.do.not.ask");
-      }
-
-      @Override
-      public final boolean isToBeShown() {
-        return !isSelectedByDefault();
-      }
-
-      @Override
-      public final void setToBeShown(boolean toBeShown, int exitCode) {
-        rememberChoice(!toBeShown, exitCode);
-      }
-
-      @Override
-      public final boolean canBeHidden() {
-        return true;
-      }
-    }
-
-    /**
-     * @return default selection state of checkbox (false -> checkbox selected)
-     */
-    boolean isToBeShown();
-
-    /**
-     * @param toBeShown - if dialog should be shown next time (checkbox selected -> false)
-     * @param exitCode of corresponding DialogWrapper
-     */
-    void setToBeShown(boolean toBeShown, int exitCode);
-
-    /**
-     * @return true if checkbox should be shown
-     */
-    boolean canBeHidden();
-
-    boolean shouldSaveOptionsOnCancel();
-
-    @NotNull
-    @NlsContexts.Checkbox
-    String getDoNotShowMessage();
-  }
-
-  private static class ErrorPainter extends AbstractPainter {
-    private List<ValidationInfo> info;
-
-    @Override
-    public void executePaint(Component component, Graphics2D g) {
-      for (ValidationInfo i : info) {
-        if (i.component != null && !Registry.is("ide.inplace.errors.outline", true)) {
-          int w = i.component.getWidth();
-          Point p = SwingUtilities.convertPoint(i.component, w, 0, component);
-          AllIcons.General.Error.paintIcon(component, g, p.x - 8, p.y - 8);
-        }
-      }
-    }
-
-    @Override
-    public boolean needsRepaint() {
-      return true;
-    }
-
-    private void setValidationInfo(@NotNull List<ValidationInfo> info) {
-      this.info = info;
-    }
-  }
-
   private static void clearOwnFields(@Nullable Object object, @NotNull Condition<? super Field> selectCondition) {
     if (object == null) return;
     for (Field each : ReflectionUtil.collectFields(object.getClass())) {
@@ -2269,8 +2160,33 @@ protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConsta
       try {
         ReflectionUtil.resetField(object, each);
       }
-      catch (Exception ignore) {
-      }
+      catch (Exception ignore) { }
     }
+  }
+
+  private static class SouthPanel extends JPanel {
+    private final DialogStyle myStyle;
+
+    SouthPanel(@NotNull DialogStyle style) {
+      super(new BorderLayout());
+      myStyle = style;
+    }
+
+    @Override
+    public Color getBackground() {
+      Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
+      if (myStyle == DialogStyle.COMPACT && bg != null) {
+        return bg;
+      }
+      return super.getBackground();
+    }
+  }
+
+  /**
+   * @deprecated Please use com.intellij.openapi.ui.DoNotAskOption instead
+   */
+  @Deprecated(forRemoval = true)
+  public interface DoNotAskOption extends com.intellij.openapi.ui.DoNotAskOption {
+    abstract class Adapter extends com.intellij.openapi.ui.DoNotAskOption.Adapter implements DoNotAskOption {}
   }
 }
