@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.wsl;
 
 import com.google.common.net.InetAddresses;
@@ -10,19 +10,21 @@ import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.configurations.PathEnvironmentVariableUtil;
 import com.intellij.execution.process.*;
 import com.intellij.ide.IdeBundle;
-import com.intellij.openapi.application.Experiments;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.NlsSafe;
-import com.intellij.openapi.util.NullableLazyValue;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.OSAgnosticPathUtil;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.util.text.Strings;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.openapi.vfs.impl.local.LocalFileSystemBase;
+import com.intellij.openapi.vfs.impl.wsl.WslConstants;
 import com.intellij.util.Consumer;
+import com.intellij.util.ExceptionUtil;
 import com.intellij.util.Functions;
+import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
@@ -32,34 +34,86 @@ import org.jetbrains.annotations.Nullable;
 import java.io.File;
 import java.io.OutputStream;
 import java.io.PrintWriter;
+import java.net.DatagramSocket;
 import java.net.InetAddress;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.regex.Pattern;
 
 import static com.intellij.execution.wsl.WSLUtil.LOG;
+import static com.intellij.util.ObjectUtils.coalesce;
 
 /**
  * Represents a single linux distribution in WSL, installed after <a href="https://blogs.msdn.microsoft.com/commandline/2017/10/11/whats-new-in-wsl-in-windows-10-fall-creators-update/">Fall Creators Update</a>
  *
+ * <h2>On network connectivity</h2>
+ * WSL1 shares network stack and both sides may use ``127.0.0.1`` to connect to each other.
+ * <br/>
+ * On WSL2 both OSes have separate interfaces ("eth0" on Linux and "vEthernet (WSL)" on Windows).
+ * One can't connect from Linux to Windows because of <a href="https://www.jetbrains.com/help/idea/how-to-use-wsl-development-environment-in-product.html#debugging_system_settings">Windows Firewall which you need to disable or accomplish with rule</a>, because
+ * of that it is not recommended to connect to IJ from processes launched on WSL.
+ * In other words, you shouldn't use {@link #getHostIpAddress()} in most cases.
+ * <p>
+ * If you cant avoid that, use {@link com.intellij.execution.wsl.WslProxy} which makes tunnel to solve firewall issues.
+ * <br/>
+ * Connecting from Windows to Linux is possible in most cases (see {@link #getWslIpAddress()} and in modern WSL2 you can even use
+ * ``127.0.0.1`` if port is not occupied on Windows side.
+ * VPNs might break eth0 connectivity on WSL side (see PY-59608). In this case, enable <code>wsl.proxy.connect.localhost</code>
+ *
+ * @see <a href="https://learn.microsoft.com/en-us/windows/wsl/networking">Microsoft guide</a>
  * @see WSLUtil
  */
-public class WSLDistribution {
+public class WSLDistribution implements AbstractWslDistribution {
   public static final String DEFAULT_WSL_MNT_ROOT = "/mnt/";
+  private static final String DEFAULT_WSL_IP = "127.0.0.1";
   private static final int RESOLVE_SYMLINK_TIMEOUT = 10000;
   private static final String RUN_PARAMETER = "run";
-  public static final String UNC_PREFIX = "\\\\wsl$\\";
-  private static final String WSLENV = "WSLENV";
+  private static final String DEFAULT_SHELL = "/bin/sh";
+  static final int DEFAULT_TIMEOUT = SystemProperties.getIntProperty("ide.wsl.probe.timeout", 20_000);
+  private static final String SHELL_PARAMETER = "$SHELL";
+  public static final String WSL_EXE = "wsl.exe";
+  public static final String DISTRIBUTION_PARAMETER = "--distribution";
+  public static final String EXIT_CODE_PARAMETER = "; exitcode=$?";
+  public static final String EXEC_PARAMETER = "--exec";
 
   private static final Key<ProcessListener> SUDO_LISTENER_KEY = Key.create("WSL sudo listener");
 
+  /**
+   * @see <a href="https://www.gnu.org/software/bash/manual/html_node/Definitions.html#index-name">bash identifier definition</a>
+   */
+  private static final Pattern ENV_VARIABLE_NAME_PATTERN = Pattern.compile("[a-zA-Z_][a-zA-Z0-9_]*");
+
   private final @NotNull WslDistributionDescriptor myDescriptor;
   private final @Nullable Path myExecutablePath;
-  private final NullableLazyValue<String> myHostIp = NullableLazyValue.createValue(() -> readHostIp());
-  private final NullableLazyValue<String> myWslIp = NullableLazyValue.createValue(() -> readWslIp());
+  private @Nullable Integer myVersion;
+
+  private final SafeNullableLazyValue<IpOrException> myLazyHostIp = SafeNullableLazyValue.create(() -> {
+    try {
+      return new IpOrException(readHostIp());
+    }
+    catch (ExecutionException e) {
+      return new IpOrException(e);
+    }
+  });
+  private final SafeNullableLazyValue<String> myLazyWslIp = SafeNullableLazyValue.create(() -> {
+    try {
+      return readWslIp();
+    }
+    catch (ExecutionException ex) {
+      // See class doc, IP section
+      LOG.warn("Can't read WSL IP, will use default: " + DEFAULT_WSL_IP, ex);
+      return DEFAULT_WSL_IP;
+    }
+  });
+  private final SafeNullableLazyValue<String> myLazyShellPath = SafeNullableLazyValue.create(this::readShellPath);
+  private final SafeNullableLazyValue<String> myLazyUserHome = SafeNullableLazyValue.create(this::readUserHome);
 
   protected WSLDistribution(@NotNull WSLDistribution dist) {
     this(dist.myDescriptor, dist.myExecutablePath);
+    myVersion = dist.myVersion;
   }
 
   WSLDistribution(@NotNull WslDistributionDescriptor descriptor, @Nullable Path executablePath) {
@@ -72,11 +126,11 @@ public class WSLDistribution {
   }
 
   /**
-   * @deprecated please don't use it, to be removed
    * @return executable file, null for WSL distributions parsed from `wsl.exe --list` output
+   * @deprecated please don't use it, to be will be removed after we collect statistics and make sure versions before 1903 aren't used.
+   * Check statistics and remove in the next version
    */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  @Deprecated
+  @Deprecated(forRemoval = true)
   public @Nullable Path getExecutablePath() {
     return myExecutablePath;
   }
@@ -94,7 +148,7 @@ public class WSLDistribution {
       for (String line : output.getStdoutLines(true)) {
         if (line.startsWith(key) && line.length() >= (key.length() + 1)) {
           final String prettyName = line.substring(key.length() + 1);
-          return  StringUtil.nullize(StringUtil.unquoteString(prettyName));
+          return StringUtil.nullize(StringUtil.unquoteString(prettyName));
         }
       }
     }
@@ -104,12 +158,18 @@ public class WSLDistribution {
     return null;
   }
 
+  void setVersion(@Nullable Integer version) {
+    myVersion = version;
+  }
+
   /**
-   * @return creates and patches command line, e.g:
-   * {@code ruby -v} => {@code bash -c "ruby -v"}
+   * @return version if it can be determined or -1 instead
    */
-  public @NotNull GeneralCommandLine createWslCommandLine(String @NotNull ... command) throws ExecutionException {
-    return patchCommandLine(new GeneralCommandLine(command), null, new WSLCommandLineOptions());
+  public int getVersion() {
+    if (myVersion == null) {
+      myVersion = WSLUtil.getWslVersion(this);
+    }
+    return myVersion;
   }
 
   /**
@@ -121,15 +181,21 @@ public class WSLDistribution {
    * @param processHandlerConsumer consumes process handler just before execution, may be used for cancellation
    */
   public @NotNull ProcessOutput executeOnWsl(@NotNull List<String> command,
-                                    @NotNull WSLCommandLineOptions options,
-                                    int timeout,
-                                    @Nullable Consumer<? super ProcessHandler> processHandlerConsumer) throws ExecutionException {
+                                             @NotNull WSLCommandLineOptions options,
+                                             int timeout,
+                                             @Nullable Consumer<? super ProcessHandler> processHandlerConsumer) throws ExecutionException {
     GeneralCommandLine commandLine = patchCommandLine(new GeneralCommandLine(command), null, options);
     CapturingProcessHandler processHandler = new CapturingProcessHandler(commandLine);
     if (processHandlerConsumer != null) {
       processHandlerConsumer.consume(processHandler);
     }
-    return processHandler.runProcess(timeout);
+    ProcessOutput output = processHandler.runProcess(timeout);
+    if (output.getExitCode() != 0 || output.isTimeout() || output.isCancelled()) {
+      LOG.info("command on wsl: " + commandLine.getCommandLineString() + " was failed:" +
+               "ec=" + output.getExitCode() + ",timeout=" + output.isTimeout() + ",cancelled=" + output.isCancelled()
+               + ",stderr=" + output.getStderr() + ",stdout=" + output.getStdout());
+    }
+    return output;
   }
 
   public @NotNull ProcessOutput executeOnWsl(int timeout, @NonNls String @NotNull ... command) throws ExecutionException {
@@ -137,48 +203,13 @@ public class WSLDistribution {
   }
 
   /**
-   * Copying changed files recursively from wslPath/ to windowsPath/; with rsync
-   *
-   * @param wslPath           source path inside wsl, e.g. /usr/bin
-   * @param windowsPath       target windows path, e.g. C:/tmp; Directory going to be created
-   * @param additionalOptions may be used for --delete (not recommended), --include and so on
-   * @param handlerConsumer   consumes process handler just before execution. Can be used for fast cancellation
-   * @return process output
-   */
-
-  @SuppressWarnings("UnusedReturnValue")
-  public ProcessOutput copyFromWsl(@NotNull String wslPath,
-                                   @NotNull String windowsPath,
-                                   @Nullable List<String> additionalOptions,
-                                   @Nullable Consumer<? super ProcessHandler> handlerConsumer
-  )
-    throws ExecutionException {
-    //noinspection ResultOfMethodCallIgnored
-    new File(windowsPath).mkdirs();
-    List<String> command = new ArrayList<>(Arrays.asList("rsync", "-cr"));
-
-    if (additionalOptions != null) {
-      command.addAll(additionalOptions);
-    }
-
-    command.add(wslPath + "/");
-    String targetWslPath = getWslPath(windowsPath);
-    if (targetWslPath == null) {
-      throw new ExecutionException(IdeBundle.message("wsl.rsync.unable.to.copy.files.dialog.message", windowsPath));
-    }
-    command.add(targetWslPath + "/");
-    return executeOnWsl(command, new WSLCommandLineOptions(), -1, handlerConsumer);
-  }
-
-  /**
    * @deprecated use {@link #patchCommandLine(GeneralCommandLine, Project, WSLCommandLineOptions)} instead
    */
   @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
-                                                           @Nullable Project project,
-                                                           @Nullable String remoteWorkingDir,
-                                                           boolean askForSudo) {
+                                                                    @Nullable Project project,
+                                                                    @Nullable String remoteWorkingDir,
+                                                                    boolean askForSudo) {
     WSLCommandLineOptions options = new WSLCommandLineOptions()
       .setRemoteWorkingDirectory(remoteWorkingDir)
       .setSudo(askForSudo);
@@ -190,23 +221,10 @@ public class WSLDistribution {
     }
   }
 
-  /**
-   * Patches passed command line to make it runnable in WSL context, e.g changes {@code date} to {@code ubuntu run "date"}.<p/>
-   * <p>
-   * Environment variables and working directory are mapped to the chain calls: working dir using {@code cd} and environment variables using {@code export},
-   * e.g {@code bash -c "export var1=val1 && export var2=val2 && cd /some/working/dir && date"}.<p/>
-   * <p>
-   * Method should properly handle quotation and escaping of the environment variables.<p/>
-   *
-   * @param commandLine      command line to patch
-   * @param project          current project
-   * @param options          {@link WSLCommandLineOptions} instance
-   * @param <T>              GeneralCommandLine or descendant
-   * @return original {@code commandLine}, prepared to run in WSL context
-   */
+  @Override
   public @NotNull <T extends GeneralCommandLine> T patchCommandLine(@NotNull T commandLine,
-                                                           @Nullable Project project,
-                                                           @NotNull WSLCommandLineOptions options) throws ExecutionException {
+                                                                    @Nullable Project project,
+                                                                    @NotNull WSLCommandLineOptions options) throws ExecutionException {
     logCommandLineBefore(commandLine, options);
     Path executable = getExecutablePath();
     boolean launchWithWslExe = options.isLaunchWithWslExe() || executable == null;
@@ -217,7 +235,9 @@ public class WSLDistribution {
     boolean executeCommandInShell = wslExe == null || options.isExecuteCommandInShell();
     List<String> linuxCommand = buildLinuxCommand(commandLine, executeCommandInShell);
 
-    if (options.isSudo()) { // fixme shouldn't we sudo for every chunk? also, preserve-env, login?
+    final boolean isElevated = options.isSudo();
+    // use old approach in case of wsl.exe is not available
+    if (isElevated && wslExe == null) { // fixme shouldn't we sudo for every chunk? also, preserve-env, login?
       prependCommand(linuxCommand, "sudo", "-S", "-p", "''");
       //TODO[traff]: ask password only if it is needed. When user is logged as root, password isn't asked.
 
@@ -253,7 +273,12 @@ public class WSLDistribution {
     }
     if (executeCommandInShell && !options.isPassEnvVarsUsingInterop()) {
       commandLine.getEnvironment().forEach((key, val) -> {
-        prependCommand(linuxCommand, "export", CommandLineUtil.posixQuote(key) + "=" + CommandLineUtil.posixQuote(val), "&&");
+        if (ENV_VARIABLE_NAME_PATTERN.matcher(key).matches()) {
+          prependCommand(linuxCommand, "export", key + "=" + CommandLineUtil.posixQuote(val), "&&");
+        }
+        else {
+          LOG.debug("Can not pass environment variable (bad name): '", key, "'");
+        }
       });
       commandLine.getEnvironment().clear();
     }
@@ -270,19 +295,32 @@ public class WSLDistribution {
     String linuxCommandStr = StringUtil.join(linuxCommand, " ");
     if (wslExe != null) {
       commandLine.setExePath(wslExe.toString());
-      commandLine.addParameters("--distribution", getMsId());
+      commandLine.addParameters(DISTRIBUTION_PARAMETER, getMsId());
+      if (isElevated) {
+        commandLine.addParameters("-u", "root");
+      }
       if (options.isExecuteCommandInShell()) {
-        commandLine.addParameters("--exec", "/bin/sh");
-        if (options.isExecuteCommandInInteractiveShell()) {
-          commandLine.addParameters("-i");
+        // workaround WSL1 problem: https://github.com/microsoft/WSL/issues/4082
+        if (options.getSleepTimeoutSec() > 0 && getVersion() == 1) {
+          linuxCommandStr += EXIT_CODE_PARAMETER + "; sleep " + options.getSleepTimeoutSec() + "; (exit $exitcode)";
         }
-        if (options.isExecuteCommandInLoginShell()) {
-          commandLine.addParameters("-l");
+
+        if (options.isExecuteCommandInDefaultShell()) {
+          commandLine.addParameters(SHELL_PARAMETER, "-c", linuxCommandStr);
         }
-        commandLine.addParameters("-c", linuxCommandStr);
+        else {
+          commandLine.addParameters(EXEC_PARAMETER, getShellPath());
+          if (options.isExecuteCommandInInteractiveShell()) {
+            commandLine.addParameters("-i");
+          }
+          if (options.isExecuteCommandInLoginShell()) {
+            commandLine.addParameters("-l");
+          }
+          commandLine.addParameters("-c", linuxCommandStr);
+        }
       }
       else {
-        commandLine.addParameter("--exec");
+        commandLine.addParameter(EXEC_PARAMETER);
         commandLine.addParameters(linuxCommand);
       }
     }
@@ -292,13 +330,19 @@ public class WSLDistribution {
       commandLine.addParameter(linuxCommandStr);
     }
 
+    if (Registry.is("wsl.use.utf8.encoding", true)) {
+      // Unlike the default system encoding on Windows (e.g. cp-1251),
+      // UTF-8 is the default for most Linux distributions
+      commandLine.setCharset(StandardCharsets.UTF_8);
+    }
+
     logCommandLineAfter(commandLine);
     return commandLine;
   }
 
   private void logCommandLineBefore(@NotNull GeneralCommandLine commandLine, @NotNull WSLCommandLineOptions options) {
-    if (LOG.isDebugEnabled()) {
-      LOG.debug("[" + getId() + "] " +
+    if (LOG.isTraceEnabled()) {
+      LOG.trace("[" + getId() + "] " +
                 "Patching: " +
                 commandLine.getCommandLineString() +
                 "; options: " +
@@ -314,13 +358,13 @@ public class WSLDistribution {
     }
   }
 
-   public static @Nullable Path findWslExe() {
-    File file = PathEnvironmentVariableUtil.findInPath("wsl.exe");
+  public static @Nullable Path findWslExe() {
+    File file = PathEnvironmentVariableUtil.findInPath(WSL_EXE);
     return file != null ? file.toPath() : null;
   }
 
   private static @NotNull List<String> buildLinuxCommand(@NotNull GeneralCommandLine commandLine, boolean executeCommandInShell) {
-    List<String> command = ContainerUtil.concat(Collections.singletonList(commandLine.getExePath()), commandLine.getParametersList().getList());
+    List<String> command = ContainerUtil.concat(List.of(commandLine.getExePath()), commandLine.getParametersList().getList());
     return new ArrayList<>(ContainerUtil.map(command, executeCommandInShell ? CommandLineUtil::posixQuote : Functions.identity()));
   }
 
@@ -336,13 +380,13 @@ public class WSLDistribution {
       }
     }
     if (builder.length() > 0) {
-      String prevValue = commandLine.getEnvironment().get(WSLENV);
+      String prevValue = commandLine.getEnvironment().get(WslConstants.WSLENV);
       if (prevValue == null) {
-        prevValue = commandLine.getParentEnvironment().get(WSLENV);
+        prevValue = commandLine.getParentEnvironment().get(WslConstants.WSLENV);
       }
       String value = prevValue != null ? StringUtil.trimEnd(prevValue, ':') + ':' + builder
                                        : builder.toString();
-      commandLine.getEnvironment().put(WSLENV, value);
+      commandLine.getEnvironment().put(WslConstants.WSLENV, value);
     }
   }
 
@@ -385,7 +429,7 @@ public class WSLDistribution {
    * @param processHandler process handler, created from patched commandline
    * @return passed processHandler, patched with sudo listener if any
    */
-  public @NotNull <T extends ProcessHandler>T patchProcessHandler(@NotNull GeneralCommandLine commandLine, @NotNull T processHandler) {
+  public @NotNull <T extends ProcessHandler> T patchProcessHandler(@NotNull GeneralCommandLine commandLine, @NotNull T processHandler) {
     ProcessListener listener = SUDO_LISTENER_KEY.get(commandLine);
     if (listener != null) {
       processHandler.addProcessListener(listener);
@@ -397,64 +441,78 @@ public class WSLDistribution {
   /**
    * @return environment map of the default user in wsl
    */
-  public @NotNull Map<String, String> getEnvironment() {
+  public @Nullable Map<String, String> getEnvironment() {
     try {
-      ProcessOutput processOutput =
-        executeOnWsl(Collections.singletonList("env"),
-                     new WSLCommandLineOptions()
-                       .setExecuteCommandInShell(true)
-                       .setExecuteCommandInLoginShell(true)
-                       .setExecuteCommandInInteractiveShell(true),
-                     5000,
-                     null);
-      Map<String, String> result = new HashMap<>();
-      for (String string : processOutput.getStdoutLines()) {
-        int assignIndex = string.indexOf('=');
-        if (assignIndex == -1) {
-          result.put(string, "");
+      ProcessOutput processOutput = WslExecution.executeInShellAndGetCommandOnlyStdout(
+        this, new GeneralCommandLine("env"),
+        new WSLCommandLineOptions()
+          .setExecuteCommandInShell(true)
+          .setExecuteCommandInLoginShell(true)
+          .setExecuteCommandInInteractiveShell(true),
+        5000);
+      if (processOutput.getExitCode() == 0) {
+        Map<String, String> result = new HashMap<>();
+        for (String string : processOutput.getStdoutLines()) {
+          int assignIndex = string.indexOf('=');
+          if (assignIndex == -1) {
+            result.put(string, "");
+          }
+          else {
+            result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
+          }
         }
-        else {
-          result.put(string.substring(0, assignIndex), string.substring(assignIndex + 1));
-        }
+        return result;
       }
-      return result;
     }
     catch (ExecutionException e) {
       LOG.warn(e);
     }
+    return null;
+  }
 
-    return Collections.emptyMap();
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath) {
+    return getWindowsPath(wslPath, this::getMntRoot);
   }
 
   /**
    * @return Windows-dependent path for a file, pointed by {@code wslPath} in WSL, or {@code null} if path is unmappable
    */
-
-  public @Nullable @NlsSafe String getWindowsPath(@NotNull String wslPath) {
-    if (wslPath.startsWith(getMntRoot())) {
-      return WSLUtil.getWindowsPath(wslPath, getMntRoot());
+  public @NotNull @NlsSafe String getWindowsPath(@NotNull String wslPath, @NotNull Supplier<String> mntRootSupplier) {
+    if (containsDriveLetter(wslPath)) {
+      String windowsPath = WSLUtil.getWindowsPath(wslPath, mntRootSupplier.get());
+      if (windowsPath != null) {
+        return windowsPath;
+      }
     }
-    return getUNCRoot() + FileUtil.toSystemDependentName(wslPath);
+    return getUNCRootPathString() + FileUtil.toSystemDependentName(FileUtil.normalize(wslPath));
   }
 
-  /**
-   * @return Linux path for a file pointed by {@code windowsPath} or null if unavailable, like \\MACHINE\path
-   */
-  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
-    if (FileUtil.toSystemDependentName(windowsPath).startsWith(UNC_PREFIX)) {
-      windowsPath = StringUtil.trimStart(FileUtil.toSystemDependentName(windowsPath), UNC_PREFIX);
-      int index = windowsPath.indexOf('\\');
-      if (index == -1) return null;
-
-      String distName = windowsPath.substring(0, index);
-      if (!distName.equalsIgnoreCase(myDescriptor.getMsId())) {
-        throw new IllegalArgumentException("Trying to get WSL path from a different WSL distribution");
+  private static boolean containsDriveLetter(@NotNull String linuxPath) {
+    int slashInd = linuxPath.indexOf('/');
+    while (slashInd >= 0) {
+      int nextSlashInd = linuxPath.indexOf('/', slashInd + 1);
+      if ((nextSlashInd == slashInd + 2 || (nextSlashInd == -1 && slashInd + 2 == linuxPath.length())) &&
+          OSAgnosticPathUtil.isDriveLetter(linuxPath.charAt(slashInd + 1))) {
+        return true;
       }
-      return FileUtil.toSystemIndependentName(windowsPath.substring(index));
+      slashInd = nextSlashInd;
+    }
+    return false;
+  }
+
+  @Override
+  public @Nullable @NlsSafe String getWslPath(@NotNull String windowsPath) {
+    WslPath wslPath = WslPath.parseWindowsUncPath(windowsPath);
+    if (wslPath != null) {
+      if (wslPath.getDistributionId().equalsIgnoreCase(myDescriptor.getMsId())) {
+        return wslPath.getLinuxPath();
+      }
+      throw new IllegalArgumentException("Trying to get WSL path from a different WSL distribution. Requested path (" + windowsPath + ")" +
+                                         " belongs to " + wslPath.getDistributionId() + " distribution" +
+                                         ", but context distribution is " + myDescriptor.getMsId());
     }
 
-    //noinspection deprecation
-    if (FileUtil.isWindowsAbsolutePath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
+    if (OSAgnosticPathUtil.isAbsoluteDosPath(windowsPath)) { // absolute windows path => /mnt/disk_letter/path
       return getMntRoot() + convertWindowsPath(windowsPath);
     }
     return null;
@@ -468,7 +526,11 @@ public class WSLDistribution {
   }
 
   public final @Nullable @NlsSafe String getUserHome() {
-    return myDescriptor.getUserHome();
+    return getValueWithLogging(myLazyUserHome, "user's home path");
+  }
+
+  private @NlsSafe @Nullable String readUserHome() {
+    return getEnvironmentVariable("HOME");
   }
 
   /**
@@ -483,6 +545,7 @@ public class WSLDistribution {
     return myDescriptor.getId();
   }
 
+  @Override
   public @NotNull @NlsSafe String getMsId() {
     return myDescriptor.getMsId();
   }
@@ -493,7 +556,7 @@ public class WSLDistribution {
 
   @Override
   public String toString() {
-    return "WSLDistribution{myDescriptor=" + myDescriptor + '}';
+    return myDescriptor.getMsId();
   }
 
   private static void prependCommand(@NotNull List<? super String> command, String @NotNull ... commandToPrepend) {
@@ -510,94 +573,167 @@ public class WSLDistribution {
     return Strings.stringHashCodeInsensitive(getMsId());
   }
 
-  /** @deprecated use {@link WSLDistribution#getUNCRootPath()} instead */
-  @Deprecated
-  public @NotNull File getUNCRoot() {
-    return new File(UNC_PREFIX + myDescriptor.getMsId());
-  }
-
   /**
    * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
    */
+  @Override
   @ApiStatus.Experimental
   public @NotNull Path getUNCRootPath() {
-    return Paths.get(UNC_PREFIX + myDescriptor.getMsId());
+    return Path.of(getUNCRootPathString());
+  }
+
+  private @NotNull String getUNCRootPathString() {
+    return WSLUtil.getUncPrefix() + myDescriptor.getMsId();
   }
 
   /**
-   * @return UNC root for the distribution, e.g. {@code \\wsl$\Ubuntu}
-   * @see VfsUtil#findFileByIoFile(File, boolean)
-   * @implNote there is a hack in {@link LocalFileSystemBase#getAttributes(VirtualFile)} which causes all network
-   * virtual files to exists all the time. So we need to check explicitly that root exists. After implementing proper non-blocking check
-   * for the network resource availability, this method may be simplified to findFileByIoFile
+   * Windows IP address. See class doc before using it, because this is probably not what you are looking for.
+   *
+   * @throws ExecutionException if IP can't be obtained (see logs for more info)
    */
-  @ApiStatus.Experimental
-  public @Nullable VirtualFile getUNCRootVirtualFile(boolean refreshIfNeed) {
-    if (!Experiments.getInstance().isFeatureEnabled("wsl.p9.support")) {
-      return null;
+  @NotNull
+  public final InetAddress getHostIpAddress() throws ExecutionException {
+    final var hostIpOrException = getValueWithLogging(myLazyHostIp, "host IP");
+    if (hostIpOrException == null) {
+      throw new ExecutionException(IdeBundle.message("wsl.error.host.ip.not.obtained.message", getPresentableName()));
     }
-    File uncRoot = getUNCRoot();
-    return uncRoot.exists() ? VfsUtil.findFileByIoFile(uncRoot, refreshIfNeed) : null;
+    return InetAddresses.forString(hostIpOrException.getIp());
+  }
+
+  /**
+   * Linux IP address. See class doc IP section for more info.
+   */
+  @NotNull
+  public final InetAddress getWslIpAddress() {
+    if (Registry.is("wsl.proxy.connect.localhost")) {
+      return InetAddress.getLoopbackAddress();
+    }
+    return InetAddresses.forString(coalesce(getValueWithLogging(myLazyWslIp, "WSL IP"), DEFAULT_WSL_IP));
   }
 
   // https://docs.microsoft.com/en-us/windows/wsl/compare-versions#accessing-windows-networking-apps-from-linux-host-ip
-  public String getHostIp() {
-    return myHostIp.getValue();
-  }
-
-  public String getWslIp() {
-    return myWslIp.getValue();
-  }
-
-  public InetAddress getHostIpAddress() {
-    return InetAddresses.forString(getHostIp());
-  }
-  public InetAddress getWslIpAddress() {
-    return InetAddresses.forString(getWslIp());
-  }
-
-  private @Nullable String readHostIp() {
-    final String releaseInfo = "/etc/resolv.conf"; // available for all distributions
-    final ProcessOutput output;
-    try {
-      output = executeOnWsl(10000, "cat", releaseInfo);
+  private @NotNull String readHostIp() throws ExecutionException {
+    String wsl1LoopbackAddress = getWsl1LoopbackAddress();
+    if (wsl1LoopbackAddress != null) {
+      return wsl1LoopbackAddress;
     }
-    catch (ExecutionException e) {
-      return null;
-    }
-    if (LOG.isDebugEnabled()) LOG.debug("Reading release info: " + getId());
-    if (!output.checkSuccess(LOG)) return null;
-    for (String line : output.getStdoutLines(true)) {
-      if (line.startsWith("nameserver")) {
-        return line.substring("nameserver".length()).trim();
+    if (Registry.is("wsl.obtain.windows.host.ip.alternatively", true)) {
+      // Connect to any port on WSL IP. The destination endpoint is not needed to be reachable as no real connection is established.
+      // This transfers the socket into "connected" state including setting the local endpoint according to the system's routing table.
+      // Works on Windows and Linux.
+      try (DatagramSocket datagramSocket = new DatagramSocket()) {
+        // We always need eth0 ip, can't use 127.0.0.1
+        InetAddress wslAddr = InetAddresses.forString(readWslIp());
+        // Any port in range [1, 0xFFFF] can be used. Port=0 is forbidden: https://datatracker.ietf.org/doc/html/rfc8085
+        // "A UDP receiver SHOULD NOT bind to port zero".
+        // Java asserts "port != 0" since v15 (https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8240533).
+        int anyPort = 1;
+        datagramSocket.connect(wslAddr, anyPort);
+        return datagramSocket.getLocalAddress().getHostAddress();
+      }
+      catch (Exception e) {
+        LOG.error("Cannot obtain Windows host IP alternatively: failed to connect to WSL IP. Fallback to default way.", e);
       }
     }
-    return null;
-  }
 
-  private @Nullable String readWslIp() {
-    final ProcessOutput output;
-    try {
-      output = executeOnWsl(10000, "ip", "addr", "show", "eth0");
-    }
-    catch (ExecutionException e) {
-      return null;
-    }
-    if (LOG.isDebugEnabled()) LOG.debug("Reading eth0 info: " + getId());
-    if (!output.checkSuccess(LOG)) return null;
-    for (String line : output.getStdoutLines(true)) {
-      String trimmed = line.trim();
-      if (trimmed.startsWith("inet ")) {
-        int index = trimmed.indexOf("/");
-        if (index != -1) {
-          return trimmed.substring("inet ".length(), index);
+    return executeAndParseOutput(IdeBundle.message("wsl.win.ip"), strings -> {
+      for (String line : strings) {
+        if (line.startsWith("nameserver")) {
+          return line.substring("nameserver".length()).trim();
         }
       }
+      return null;
+    }, "cat", "/etc/resolv.conf");
+  }
+
+  private @NotNull String readWslIp() throws ExecutionException {
+    String wsl1LoopbackAddress = getWsl1LoopbackAddress();
+    if (wsl1LoopbackAddress != null) {
+      return wsl1LoopbackAddress;
     }
-    return null;
+
+    return executeAndParseOutput(IdeBundle.message("wsl.wsl.ip"), strings -> {
+      for (String line : strings) {
+        String trimmed = line.trim();
+        if (trimmed.startsWith("inet ")) {
+          int index = trimmed.indexOf("/");
+          if (index != -1) {
+            return trimmed.substring("inet ".length(), index);
+          }
+        }
+      }
+      return null;
+    }, "ip", "addr", "show", "eth0");
+  }
+
+  /**
+   * Run command on WSL and parse IP from it
+   *
+   * @param ipType  WSL or Windows
+   * @param parser  block that accepts stdout and parses IP from it
+   * @param command command to run on WSL
+   * @return IP
+   * @throws ExecutionException IP can't be parsed
+   */
+  @NotNull
+  private String executeAndParseOutput(@NlsContexts.DialogMessage @NotNull String ipType,
+                                       @NotNull Function<List<@NlsSafe String>, @Nullable String> parser,
+                                       @NotNull String @NotNull ... command)
+    throws ExecutionException {
+    final ProcessOutput output;
+    output = executeOnWsl(Arrays.asList(command), new WSLCommandLineOptions(), 10_000, null);
+    if (LOG.isDebugEnabled()) LOG.debug(ipType + " " + getId());
+    if (!output.checkSuccess(LOG)) {
+      LOG.warn(String.format("%s. Exit code: %s. Error %s", ipType, output.getExitCode(), output.getStderr()));
+      throw new ExecutionException(IdeBundle.message("wsl.cant.parse.ip.no.output", ipType));
+    }
+    var stdout = output.getStdoutLines(true);
+    var ip = parser.apply(stdout);
+    if (ip != null) {
+      return ip;
+    }
+    LOG.warn(String.format("Can't parse data for %s, stdout is %s", ipType, String.join("\n", stdout)));
+    throw new ExecutionException(IdeBundle.message("wsl.cant.parse.ip.process.failed", ipType));
+  }
+
+  private @Nullable String getWsl1LoopbackAddress() {
+    return getVersion() == 1 ? InetAddress.getLoopbackAddress().getHostAddress() : null;
   }
 
   public @NonNls @Nullable String getEnvironmentVariable(String name) {
-    return myDescriptor.getEnvironmentVariable(name);
+    WSLCommandLineOptions options = new WSLCommandLineOptions()
+      .setExecuteCommandInInteractiveShell(true)
+      .setExecuteCommandInLoginShell(true);
+    return WslExecution.executeInShellAndGetCommandOnlyStdout(this, new GeneralCommandLine("printenv", name), options, DEFAULT_TIMEOUT,
+                                                              true);
+  }
+
+  public @NlsSafe @NotNull String getShellPath() {
+    return coalesce(getValueWithLogging(myLazyShellPath, "user's shell path"), DEFAULT_SHELL);
+  }
+
+  private @NlsSafe @Nullable String readShellPath() {
+    WSLCommandLineOptions options = new WSLCommandLineOptions().setExecuteCommandInDefaultShell(true);
+    return WslExecution.executeInShellAndGetCommandOnlyStdout(this, new GeneralCommandLine("printenv", "SHELL"), options, DEFAULT_TIMEOUT,
+                                                              true);
+  }
+
+  private <T> @Nullable T getValueWithLogging(final @NotNull SafeNullableLazyValue<T> lazyValue,
+                                              final @NotNull String fieldName) {
+    final T value = lazyValue.getValue();
+
+    if (value == null) {
+      final var app = ApplicationManager.getApplication();
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Lazy value for %s returned null: MsId=%s, EDT=%s, RA=%s, stackTrace=%s"
+                    .formatted(fieldName, getMsId(), app.isDispatchThread(), app.isReadAccessAllowed(), ExceptionUtil.currentStackTrace()));
+      }
+      else {
+        LOG.warn("Lazy value for %s returned null: MsId=%s, EDT=%s, RA=%s"
+                   .formatted(fieldName, getMsId(), app.isDispatchThread(), app.isReadAccessAllowed()));
+      }
+    }
+
+    return value;
   }
 }
