@@ -1,20 +1,21 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.gdpr;
 
 import com.intellij.ide.Prefs;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.text.StringUtilRt;
 import com.intellij.util.PlatformUtils;
 import com.intellij.util.ResourceUtil;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.*;
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
+import java.util.Iterator;
 
 /**
  * @author Eugene Zhuravlev
@@ -26,7 +27,9 @@ public final class EndUserAgreement {
 
   private static final String PRIVACY_POLICY_DOCUMENT_NAME = "privacy";
   private static final String PRIVACY_POLICY_EAP_DOCUMENT_NAME = PRIVACY_POLICY_DOCUMENT_NAME + "Eap";
+  private static final String CWM_GUEST_EULA_NAME = "cwmGuestEua";
   private static final String EULA_DOCUMENT_NAME = "eua";
+  private static final String EULA_COMMUNITY_DOCUMENT_NAME = "euaCommunity";
   private static final String EULA_EAP_DOCUMENT_NAME = EULA_DOCUMENT_NAME + "Eap";
 
   private static final String PRIVACY_POLICY_CONTENT_FILE_NAME = "Cached";
@@ -63,8 +66,9 @@ public final class EndUserAgreement {
     return PathManager.getCommonDataPath().resolve(RELATIVE_RESOURCE_PATH);
   }
 
+  // path for classloader - without leading slash
   private static String getBundledResourcePath(String docName) {
-    return PRIVACY_POLICY_DOCUMENT_NAME.equals(docName) ? "/PrivacyPolicy.html" : "/" + docName + ".html";
+    return PRIVACY_POLICY_DOCUMENT_NAME.equals(docName) ? "PrivacyPolicy.html" : docName + ".html";
   }
 
   public static void setAccepted(@NotNull Document doc) {
@@ -93,45 +97,44 @@ public final class EndUserAgreement {
 
     String docName = getDocumentName();
     Document fromFile = loadContent(docName, getDocumentContentFile(docName));
-    if (!fromFile.getVersion().isUnknown()) {
+    if (fromFile != null && !fromFile.getVersion().isUnknown()) {
       return fromFile;
     }
-
     return loadContent(docName, getBundledResourcePath(docName));
   }
 
   public static boolean updateCachedContentToLatestBundledVersion() {
     try {
-      final String docName = getDocumentName();
-      Path cacheFile = getDocumentContentFile(docName);
-      if (Files.exists(cacheFile)) {
-        Document cached = loadContent(docName, cacheFile);
-        if (!cached.getVersion().isUnknown()) {
-          Document bundled = loadContent(docName, getBundledResourcePath(docName));
-          if (!bundled.getVersion().isUnknown() && bundled.getVersion().isNewer(cached.getVersion())) {
-            try {
-              // update content only and not the active document name
-              // active document name can be changed by JBA only
-              writeToFile(getDocumentContentFile(docName), bundled.getText());
-            }
-            catch (FileNotFoundException e) {
-              LOG.info(e.getMessage());
-            }
-            catch (IOException e) {
-              LOG.info(e);
-            }
-            return true;
-          }
+      String docName = getDocumentName();
+      Document cached = loadContent(docName, getDocumentContentFile(docName));
+      if (cached == null || cached.getVersion().isUnknown()) {
+        return false;
+      }
+
+      Document bundled = loadContent(docName, getBundledResourcePath(docName));
+      if (!bundled.getVersion().isUnknown() && bundled.getVersion().isNewer(cached.getVersion())) {
+        try {
+          // update content only and not the active document name
+          // active document name can be changed by JBA only
+          writeToFile(getDocumentContentFile(docName), bundled.getText());
         }
+        catch (NoSuchFileException e) {
+          LOG.info(e.getMessage());
+        }
+        catch (IOException e) {
+          LOG.info(e);
+        }
+        return true;
       }
     }
-    catch (Throwable ignored) { }
+    catch (Throwable ignored) {
+    }
     return false;
   }
 
   private static void writeToFile(@NotNull Path file, @NotNull String text) throws IOException {
     Files.createDirectories(file.getParent());
-    Files.write(file, text.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(file, text);
   }
 
   public static void update(@NotNull String docName, @NotNull String text) {
@@ -148,9 +151,10 @@ public final class EndUserAgreement {
   }
 
   private static @NotNull Document loadContent(String docName, String resourcePath) {
-    try (InputStream stream = EndUserAgreement.class.getResourceAsStream(resourcePath)) {
-      if (stream != null) {
-        return new Document(docName, ResourceUtil.loadText(stream));
+    try {
+      byte[] data = ResourceUtil.getResourceAsBytes(resourcePath, EndUserAgreement.class.getClassLoader());
+      if (data != null) {
+        return new Document(docName, new String(data, StandardCharsets.UTF_8));
       }
     }
     catch (IOException e) {
@@ -160,9 +164,12 @@ public final class EndUserAgreement {
     return new Document(docName, "");
   }
 
-  private static @NotNull Document loadContent(String docName, Path file) {
+  private static @Nullable Document loadContent(String docName, Path file) {
     try {
       return new Document(docName, Files.readString(file));
+    }
+    catch (NoSuchFileException ignored) {
+      return null;
     }
     catch (IOException e) {
       LOG.info(docName + ": " + e.getMessage());
@@ -173,12 +180,21 @@ public final class EndUserAgreement {
 
   private static @NotNull String getDocumentName() {
     if (!PlatformUtils.isCommercialEdition()) {
+      if (PlatformUtils.isCommunityEdition()) {
+        return isEAP() ? DEFAULT_DOC_EAP_NAME : EULA_COMMUNITY_DOCUMENT_NAME;
+      }
+      if (PlatformUtils.isJetBrainsClient()) {
+        return CWM_GUEST_EULA_NAME;
+      }
+      if (PlatformUtils.isGateway()) {
+        return isEAP()? DEFAULT_DOC_EAP_NAME : DEFAULT_DOC_NAME;
+      }
       return isEAP()? PRIVACY_POLICY_EAP_DOCUMENT_NAME : PRIVACY_POLICY_DOCUMENT_NAME;
     }
 
     try {
       String docName = Files.readString(getDocumentNameFile());
-      if (!StringUtilRt.isEmptyOrSpaces(docName)) {
+      if (docName != null && !docName.isBlank()) {
         return docName;
       }
     }
@@ -235,21 +251,19 @@ public final class EndUserAgreement {
     }
 
     private static @NotNull Version parseVersion(String text) {
-      if (!StringUtilRt.isEmptyOrSpaces(text)) {
-        try (BufferedReader reader = new BufferedReader(new StringReader(text))) {
-          final String line = reader.readLine();
-          if (line != null) {
-            final int startComment = line.indexOf(VERSION_COMMENT_START);
-            if (startComment >= 0) {
-              final int endComment = line.indexOf(VERSION_COMMENT_END);
-              if (endComment > startComment) {
-                return Version.fromString(line.substring(startComment + VERSION_COMMENT_START.length(), endComment).trim());
-              }
-            }
+      if (text == null || text.isBlank()) {
+        return Version.UNKNOWN;
+      }
+
+      Iterator<String> iterator = text.lines().iterator();
+      while (iterator.hasNext()) {
+        String line = iterator.next();
+        int startComment = line.indexOf(VERSION_COMMENT_START);
+        if (startComment >= 0) {
+          int endComment = line.indexOf(VERSION_COMMENT_END);
+          if (endComment > startComment) {
+            return Version.fromString(line.substring(startComment + VERSION_COMMENT_START.length(), endComment).trim());
           }
-        }
-        catch (IOException e) {
-          LOG.info(e);
         }
       }
       return Version.UNKNOWN;
