@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vcs.changes;
 
 import com.intellij.openapi.application.ApplicationManager;
@@ -14,24 +14,21 @@ import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.Navigatable;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.HashingStrategy;
+import com.intellij.util.containers.JBIterable;
 import com.intellij.vcsUtil.VcsUtil;
-import it.unimi.dsi.fastutil.Hash;
-import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.util.*;
-import java.util.stream.Stream;
 
 import static java.util.Objects.hash;
-import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.toList;
 
 public final class ChangesUtil {
   private static final Key<Boolean> INTERNAL_OPERATION_KEY = Key.create("internal vcs operation");
 
-  public static final Hash.Strategy<FilePath> CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY = new Hash.Strategy<>() {
+  public static final HashingStrategy<FilePath> CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY = new HashingStrategy<>() {
     @Override
     public int hashCode(@Nullable FilePath path) {
       return path != null ? hash(path.getPath(), path.isDirectory()) : 0;
@@ -50,10 +47,9 @@ public final class ChangesUtil {
     Comparator.<LocalChangeList>comparingInt(list -> list.isDefault() ? -1 : 0)
       .thenComparing(list -> list.getName(), String::compareToIgnoreCase);
 
-  private ChangesUtil() {}
+  private ChangesUtil() { }
 
-  @NotNull
-  public static FilePath getFilePath(@NotNull Change change) {
+  public static @NotNull FilePath getFilePath(@NotNull Change change) {
     ContentRevision revision = change.getAfterRevision();
     if (revision == null) {
       revision = change.getBeforeRevision();
@@ -63,22 +59,14 @@ public final class ChangesUtil {
     return revision.getFile();
   }
 
-  @Nullable
-  public static FilePath getBeforePath(@NotNull Change change) {
+  public static @Nullable FilePath getBeforePath(@NotNull Change change) {
     ContentRevision revision = change.getBeforeRevision();
     return revision == null ? null : revision.getFile();
   }
 
-  @Nullable
-  public static FilePath getAfterPath(@NotNull Change change) {
+  public static @Nullable FilePath getAfterPath(@NotNull Change change) {
     ContentRevision revision = change.getAfterRevision();
     return revision == null ? null : revision.getFile();
-  }
-
-  public static boolean isAffectedByChange(@NotNull FilePath filePath, @NotNull Change change) {
-    if (filePath.equals(getBeforePath(change))) return true;
-    if (filePath.equals(getAfterPath(change))) return true;
-    return false;
   }
 
   public static @Nullable AbstractVcs getVcsForChange(@NotNull Change change, @NotNull Project project) {
@@ -90,72 +78,60 @@ public final class ChangesUtil {
     return ContainerUtil.map2SetNotNull(changes, change -> vcsManager.getVcsFor(getFilePath(change)));
   }
 
-  @NotNull
-  public static Set<AbstractVcs> getAffectedVcsesForFiles(@NotNull Collection<? extends VirtualFile> files, @NotNull Project project) {
+  public static @NotNull Set<AbstractVcs> getAffectedVcsesForFilePaths(@NotNull Collection<? extends FilePath> files,
+                                                                       @NotNull Project project) {
     ProjectLevelVcsManager vcsManager = ProjectLevelVcsManager.getInstance(project);
     return ContainerUtil.map2SetNotNull(files, file -> vcsManager.getVcsFor(file));
   }
 
-  @NotNull
-  public static Set<AbstractVcs> getAffectedVcsesForFilePaths(@NotNull Collection<? extends FilePath> files, @NotNull Project project) {
-    ProjectLevelVcsManager vcsManager = ProjectLevelVcsManager.getInstance(project);
-    return ContainerUtil.map2SetNotNull(files, file -> vcsManager.getVcsFor(file));
-  }
-
-  @Nullable
-  public static AbstractVcs getVcsForFile(@NotNull VirtualFile file, @NotNull Project project) {
+  public static @Nullable AbstractVcs getVcsForFile(@NotNull VirtualFile file, @NotNull Project project) {
     return ProjectLevelVcsManager.getInstance(project).getVcsFor(file);
   }
 
-  @Nullable
-  public static AbstractVcs getVcsForFile(@NotNull File file, @NotNull Project project) {
+  /**
+   * @deprecated This method will detect {@link FilePath#isDirectory()} using NIO.
+   * Avoid using the method, if {@code isDirectory} is known from context or not important.
+   */
+  @Deprecated
+  public static @Nullable AbstractVcs getVcsForFile(@NotNull File file, @NotNull Project project) {
     return ProjectLevelVcsManager.getInstance(project).getVcsFor(VcsUtil.getFilePath(file));
   }
 
-  @NotNull
-  public static List<FilePath> getPaths(@NotNull Collection<? extends Change> changes) {
-    return getPaths(changes.stream()).collect(toList());
+  public static @NotNull List<FilePath> getPaths(@NotNull Collection<? extends Change> changes) {
+    return iteratePaths(changes).toList();
   }
 
-  @NotNull
-  public static List<File> getIoFilesFromChanges(@NotNull Collection<? extends Change> changes) {
-    return getPaths(changes.stream())
+  public static @NotNull List<File> getIoFilesFromChanges(@NotNull Collection<? extends Change> changes) {
+    return iteratePaths(changes)
       .map(FilePath::getIOFile)
-      .distinct()
-      .collect(toList());
+      .unique()
+      .toList();
   }
 
-  @NotNull
-  public static Stream<FilePath> getPaths(@NotNull Stream<? extends Change> changes) {
-    return changes.flatMap(ChangesUtil::getPathsCaseSensitive);
+  public static @NotNull JBIterable<FilePath> iteratePaths(@NotNull Iterable<? extends Change> changes) {
+    return JBIterable.from(changes).flatMap(ChangesUtil::iteratePathsCaseSensitive);
   }
 
-  @NotNull
-  public static Stream<FilePath> getPathsCaseSensitive(@NotNull Change change) {
+  public static @NotNull JBIterable<FilePath> iteratePathsCaseSensitive(@NotNull Change change) {
     FilePath beforePath = getBeforePath(change);
     FilePath afterPath = getAfterPath(change);
 
-    return Stream.of(beforePath, !CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY.equals(beforePath, afterPath) ? afterPath : null)
-      .filter(Objects::nonNull);
+    if (CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY.equals(beforePath, afterPath)) {
+      return JBIterable.of(beforePath);
+    }
+    else {
+      return JBIterable.of(beforePath, afterPath).filterNotNull();
+    }
   }
 
-  @NotNull
-  public static Stream<VirtualFile> getFiles(@NotNull Stream<? extends Change> changes) {
-    return getPaths(changes)
+  public static @NotNull JBIterable<VirtualFile> iterateFiles(@NotNull Iterable<? extends Change> changes) {
+    return iteratePaths(changes)
       .map(FilePath::getVirtualFile)
       .filter(Objects::nonNull);
   }
 
-  @NotNull
-  public static Stream<VirtualFile> getFilesFromPaths(@NotNull Stream<? extends FilePath> paths) {
-    return paths
-      .map(FilePath::getVirtualFile)
-      .filter(Objects::nonNull);
-  }
-
-  @NotNull
-  public static Stream<VirtualFile> getAfterRevisionsFiles(@NotNull Stream<? extends Change> changes) {
-    return changes
+  public static @NotNull JBIterable<VirtualFile> iterateAfterRevisionFiles(@NotNull Iterable<? extends Change> changes) {
+    return JBIterable.from(changes)
       .map(ChangesUtil::getAfterPath)
       .filter(Objects::nonNull)
       .map(FilePath::getVirtualFile)
@@ -163,22 +139,18 @@ public final class ChangesUtil {
   }
 
   public static VirtualFile @NotNull [] getFilesFromChanges(@NotNull Collection<? extends Change> changes) {
-    return getFiles(changes.stream()).toArray(VirtualFile[]::new);
+    return iterateFiles(changes).toArray(VirtualFile.EMPTY_ARRAY);
   }
 
-  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, VirtualFile @NotNull [] files) {
-    return getNavigatableArray(project, Stream.of(files));
-  }
-
-  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, @NotNull Stream<? extends VirtualFile> files) {
-    return files
+  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, @NotNull Iterable<? extends VirtualFile> files) {
+    return JBIterable.from(files)
       .filter(file -> !file.isDirectory())
       .map(file -> new OpenFileDescriptor(project, file))
-      .toArray(Navigatable[]::new);
+      .toList()
+      .toArray(Navigatable.EMPTY_NAVIGATABLE_ARRAY);
   }
 
-  @Nullable
-  public static LocalChangeList getChangeListIfOnlyOne(@NotNull Project project, Change @Nullable [] changes) {
+  public static @Nullable LocalChangeList getChangeListIfOnlyOne(@NotNull Project project, Change @Nullable [] changes) {
     ChangeListManager manager = ChangeListManager.getInstance(project);
     String changeListName = manager.getChangeListNameIfOnlyOne(changes);
 
@@ -216,8 +188,7 @@ public final class ChangesUtil {
     return filePath;
   }
 
-  @Nullable
-  public static VirtualFile findValidParentAccurately(@NotNull FilePath filePath) {
+  public static @Nullable VirtualFile findValidParentAccurately(@NotNull FilePath filePath) {
     VirtualFile result = filePath.getVirtualFile();
 
     if (result == null && !ApplicationManager.getApplication().isReadAccessAllowed()) {
@@ -230,8 +201,7 @@ public final class ChangesUtil {
     return result;
   }
 
-  @Nullable
-  private static VirtualFile getValidParentUnderReadAction(@NotNull FilePath filePath) {
+  private static @Nullable VirtualFile getValidParentUnderReadAction(@NotNull FilePath filePath) {
     return ReadAction.compute(() -> {
       VirtualFile result = null;
       FilePath parent = filePath;
@@ -279,11 +249,14 @@ public final class ChangesUtil {
   public static <T> void processItemsByVcs(@NotNull Collection<? extends T> items,
                                            @NotNull VcsSeparator<? super T> separator,
                                            @NotNull PerVcsProcessor<T> processor) {
-    Map<AbstractVcs, List<T>> changesByVcs = ReadAction.compute(() -> {
-      return StreamEx.<T>of(items)
-        .mapToEntry(separator::getVcsFor, identity())
-        .nonNullKeys()
-        .grouping();
+    Map<AbstractVcs, List<T>> changesByVcs = new HashMap<>();
+    ReadAction.run(() -> {
+      for (T item : items) {
+        AbstractVcs vcs = separator.getVcsFor(item);
+        if (vcs != null) {
+          changesByVcs.computeIfAbsent(vcs, __ -> new ArrayList<>()).add(item);
+        }
+      }
     });
 
     changesByVcs.forEach(processor::process);
@@ -309,11 +282,11 @@ public final class ChangesUtil {
   public static void processFilePathsByVcs(@NotNull Project project,
                                            @NotNull Collection<? extends FilePath> files,
                                            @NotNull PerVcsProcessor<FilePath> processor) {
-    processItemsByVcs(files, filePath -> getVcsForFile(filePath.getIOFile(), project), processor);
+    ProjectLevelVcsManager projectLevelVcsManager = ProjectLevelVcsManager.getInstance(project);
+    processItemsByVcs(files, filePath -> projectLevelVcsManager.getVcsFor(filePath), processor);
   }
 
-  @NotNull
-  public static List<File> filePathsToFiles(@NotNull Collection<? extends FilePath> filePaths) {
+  public static @NotNull List<File> filePathsToFiles(@NotNull Collection<? extends FilePath> filePaths) {
     return ContainerUtil.map(filePaths, FilePath::getIOFile);
   }
 
@@ -337,7 +310,7 @@ public final class ChangesUtil {
   }
 
   public static void markInternalOperation(@NotNull VirtualFile file, boolean set) {
-    file.putUserData(INTERNAL_OPERATION_KEY, set);
+    file.putUserData(INTERNAL_OPERATION_KEY, set ? Boolean.TRUE : null);
   }
 
   public static boolean isInternalOperation(@NotNull VirtualFile file) {
@@ -345,10 +318,9 @@ public final class ChangesUtil {
   }
 
   /**
-   * Find common ancestor for changes (included both before and after files)
+   * Find common ancestor for changes (including both before and after files)
    */
-  @Nullable
-  public static File findCommonAncestor(@NotNull Collection<? extends Change> changes) {
+  public static @Nullable File findCommonAncestor(@NotNull Collection<? extends Change> changes) {
     File ancestor = null;
     for (Change change : changes) {
       File currentChangeAncestor = getCommonBeforeAfterAncestor(change);
@@ -364,8 +336,7 @@ public final class ChangesUtil {
     return ancestor;
   }
 
-  @Nullable
-  private static File getCommonBeforeAfterAncestor(@NotNull Change change) {
+  private static @Nullable File getCommonBeforeAfterAncestor(@NotNull Change change) {
     FilePath before = getBeforePath(change);
     FilePath after = getAfterPath(change);
     return before == null
@@ -384,5 +355,19 @@ public final class ChangesUtil {
       if (content == null) throw new VcsException(VcsBundle.message("vcs.error.failed.to.load.file.content.from.vcs"));
       return content.getBytes(revision.getFile().getCharset());
     }
+  }
+
+  public static boolean hasMeaningfulChangelists(@NotNull Project project) {
+    ChangeListManager changeListManager = ChangeListManager.getInstance(project);
+    if (!changeListManager.areChangeListsEnabled()) {
+      return false;
+    }
+
+    if (VcsApplicationSettings.getInstance().CREATE_CHANGELISTS_AUTOMATICALLY) {
+      return true;
+    }
+
+    List<LocalChangeList> changeLists = changeListManager.getChangeLists();
+    return changeLists.size() != 1 || !changeLists.get(0).isBlank();
   }
 }
