@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.analysis;
 
 import com.intellij.analysis.dialog.ModelScopeItem;
@@ -14,7 +14,6 @@ import javax.swing.*;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class VcsScopeItem implements ModelScopeItem {
   private final ChangeListManager myChangeListManager;
@@ -35,7 +34,7 @@ public class VcsScopeItem implements ModelScopeItem {
     myChangeListManager = ChangeListManager.getInstance(project);
     assert !myChangeListManager.getAffectedFiles().isEmpty();
 
-    if (myChangeListManager.areChangeListsEnabled()) {
+    if (ChangesUtil.hasMeaningfulChangelists(myProject)) {
       myModel = new DefaultComboBoxModel<>();
       myModel.addElement(null);
       List<LocalChangeList> changeLists = myChangeListManager.getChangeLists();
@@ -59,8 +58,7 @@ public class VcsScopeItem implements ModelScopeItem {
     else {
       LocalChangeList list = myChangeListManager.findChangeList(changeList.getName());
       if (list != null) {
-        files = ChangesUtil.getAfterRevisionsFiles(list.getChanges().stream())
-          .collect(Collectors.toList());
+        files = ChangesUtil.iterateAfterRevisionFiles(list.getChanges()).toList();
       }
       else {
         files = Collections.emptyList();
