@@ -13,16 +13,17 @@ import com.intellij.util.PathsList;
 import com.intellij.util.messages.MessageBusConnection;
 import org.assertj.core.api.Assertions;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.plugins.gradle.importing.TestGradleBuildScriptBuilder;
+import org.jetbrains.plugins.gradle.tooling.annotation.TargetVersions;
 import org.junit.Test;
 
+import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.intellij.util.PathUtil.toSystemDependentName;
-import static com.intellij.util.containers.ContainerUtil.newArrayList;
 import static java.util.Arrays.asList;
 
 public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
@@ -38,19 +39,15 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     createProjectSubFile("impl/src/main/resources/dir/file-impl.properties");
     createProjectSubFile("impl/src/test/resources/dir/file-impl-test.properties");
+    TestGradleBuildScriptBuilder builder = createBuildScriptBuilder();
     importProject(
-      "allprojects {\n" +
-      "  apply plugin: 'java'\n" +
-      "}\n" +
-      "\n" +
-      "dependencies {\n" +
-      "  compile project(':api')\n" +
-      "}\n" +
-      "configure(project(':api')) {\n" +
-      "  dependencies {\n" +
-      "    compile project(':impl')\n" +
-      "  }\n" +
-      "}"
+      builder
+        .allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
+        .addImplementationDependency(builder.project(":api"))
+        .project(":api", p -> {
+          p.addImplementationDependency(p.project(":impl"));
+        })
+        .generate()
     );
     assertModules("project", "project.main", "project.test",
                   "project.api", "project.api.main", "project.api.test",
@@ -82,6 +79,63 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
   }
 
   @Test
+  @TargetVersions("8.0+")
+  public void testDelegationBuildsBuildSrc() throws IOException {
+    var buildPath = isGradleNewerThan("4.0") ? "build/classes/java" : "build/classes";
+    var junitTestAnnotation = isGradleNewerOrSameAs("4.7") ? "org.junit.jupiter.api.Test" : "org.junit.Test";
+
+    createProjectSubFile("settings.gradle", settingsScript(
+      it -> it.setProjectName("project")
+    ));
+    createProjectSubFile("build.gradle", script(
+      it -> it.withJavaPlugin()
+        .withJUnit()
+    ));
+    createProjectSubFile("buildSrc/build.gradle", script(
+      it -> it.withJavaPlugin()
+        .withJUnit()
+    ));
+    importProject();
+    assertModules("project", "project.main", "project.test",
+                  "project.buildSrc", "project.buildSrc.main", "project.buildSrc.test");
+
+    createProjectSubFile("buildSrc/src/main/java/org/example/Main.java", """
+        package org.example;
+        
+        public class Main {
+        
+          public static void main(String[] args) {
+            sayHello();
+          }
+        
+          public static void sayHello() {
+            System.out.println("Hello!");
+          }
+        }
+      """);
+    createProjectSubFile("buildSrc/src/test/java/org/example/TestCase.java", """
+        package org.example;
+        
+        import %s;
+        
+        public class TestCase {
+        
+          @Test
+          public void test() {
+            System.out.println("Test!");
+            Main.sayHello();
+          }
+        }
+      """.formatted(junitTestAnnotation));
+
+    assertDoesntExist(new File(getProjectPath(), "buildSrc/" + buildPath + "/main/org/example/Main.class"));
+    assertDoesntExist(new File(getProjectPath(), "buildSrc/" + buildPath + "/test/org/example/TestCase.class"));
+    compileModules("project.buildSrc.test");
+    assertExists(new File(getProjectPath(), "buildSrc/" + buildPath + "/main/org/example/Main.class"));
+    assertExists(new File(getProjectPath(), "buildSrc/" + buildPath + "/test/org/example/TestCase.class"));
+  }
+
+  @Test
   public void testDirtyOutputPathsCollection() throws Exception {
     doTestDirtyOutputCollection(false);
   }
@@ -89,6 +143,54 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
   @Test
   public void testDirtyOutputPathsCollectionWithBuildCacheEnabled() throws Exception {
     doTestDirtyOutputCollection(true);
+  }
+
+  @Test
+  public void testSourceSetsWithNamesContainingSpacesAndHyphens() throws Exception {
+    createProjectSubFile("src/main/java/App.java", "public class App {}");
+    createProjectSubFile("src/main/resources/dir/file.properties");
+
+    createProjectSubFile("src/test/java/Test.java", "public class Test {}");
+    createProjectSubFile("src/test/resources/dir/file-test.properties");
+
+    createProjectSubFile("src/integration-test/java/IntegrationTest.java", "public class IntegrationTest {}");
+    createProjectSubFile("src/integration-test/resources/dir/file-integrationTest.properties");
+
+    createProjectSubFile("src/anotherSourceSet/java/AnotherSourceSet.java", "public class AnotherSourceSet {}");
+    createProjectSubFile("src/anotherSourceSet/resources/dir/file-anotherSourceSet.properties");
+
+    createProjectSubFile("src/another cool name/java/Spaces.java", "public class Spaces {}");
+    createProjectSubFile("src/another cool name/resources/dir/file-Spaces.properties");
+
+    importProject(
+      """
+        apply plugin: 'java'
+
+        sourceSets {
+          'integration-test' {}
+          anotherSourceSet {}
+          'another cool name' {}
+        }
+        """
+    );
+    assertModules("project", "project.main", "project.test",
+                  "project.integration-test",
+                  "project.anotherSourceSet",
+                  "project.another_cool_name");
+    compileModules("project.main", "project.test", "project.integration-test", "project.anotherSourceSet", "project.another_cool_name");
+
+    String langPart = isGradleOlderThan("4.0") ? "build/classes" : "build/classes/java";
+    assertCopied(langPart + "/main/App.class");
+    assertNotCopied(langPart + "/test/AppTest.class");
+    assertCopied(langPart + "/integration-test/IntegrationTest.class");
+    assertCopied(langPart + "/anotherSourceSet/AnotherSourceSet.class");
+    assertCopied(langPart + "/another cool name/Spaces.class");
+
+    assertCopied("build/resources/main/dir/file.properties");
+    assertCopied("build/resources/test/dir/file-test.properties");
+    assertCopied("build/resources/integration-test/dir/file-integrationTest.properties");
+    assertCopied("build/resources/anotherSourceSet/dir/file-anotherSourceSet.properties");
+    assertCopied("build/resources/another cool name/dir/file-Spaces.properties");
   }
 
   private void doTestDirtyOutputCollection(boolean enableBuildCache) throws IOException {
@@ -99,48 +201,43 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     }
 
     VirtualFile appFile = createProjectSubFile("src/main/java/my/pack/App.java",
-                                               "package my.pack;\n" +
-                                               "public class App {\n" +
-                                               "  public int method() { return 42; }" +
-                                               "}");
+                                               """
+                                                 package my.pack;
+                                                 public class App {
+                                                   public int method() { return 42; }}""");
     createProjectSubFile("src/test/java/my/pack/AppTest.java",
-                         "package my.pack;\n" +
-                         "public class AppTest {\n" +
-                         "  public void test() { new App().method(); }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class AppTest {
+                             public void test() { new App().method(); }}""");
 
     createProjectSubFile("api/src/main/java/my/pack/Api.java",
-                         "package my.pack;\n" +
-                         "public class Api {\n" +
-                         "  public int method() { return 42; }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class Api {
+                             public int method() { return 42; }}""");
     createProjectSubFile("api/src/test/java/my/pack/ApiTest.java",
                          "package my.pack;\n" +
                          "public class ApiTest {}");
 
     createProjectSubFile("impl/src/main/java/my/pack/Impl.java",
-                         "package my.pack;\n" +
-                         "import my.pack.Api;\n" +
-                         "public class Impl extends Api {}");
+                         """
+                           package my.pack;
+                           import my.pack.Api;
+                           public class Impl extends Api {}""");
     createProjectSubFile("impl/src/test/java/my/pack/ImplTest.java",
-                         "package my.pack;\n" +
-                         "import my.pack.ApiTest;\n" +
-                         "public class ImplTest extends ApiTest {}");
+                         """
+                           package my.pack;
+                           import my.pack.ApiTest;
+                           public class ImplTest extends ApiTest {}""");
 
-    importProject(
-      "allprojects {\n" +
-      "  apply plugin: 'java'\n" +
-      "}\n" +
-      "\n" +
-      "dependencies {\n" +
-      "  compile project(':impl')\n" +
-      "}\n" +
-      "configure(project(':impl')) {\n" +
-      "  dependencies {\n" +
-      "    compile project(':api')\n" +
-      "  }\n" +
-      "}"
-    );
+    importProject(script(it -> {
+      it.allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
+        .addImplementationDependency(it.project(":impl"))
+        .project(":impl", p -> {
+          p.addImplementationDependency(p.project(":api"));
+        });
+    }));
     assertModules("project", "project.main", "project.test",
                   "project.api", "project.api.main", "project.api.test",
                   "project.impl", "project.impl.main", "project.impl.test");
@@ -157,18 +254,18 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
       @Override
       public void finished(@NotNull ProjectTaskManager.Result result) {
         result.getContext().getDirtyOutputPaths()
-          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).collect(Collectors.toList())));
+          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).toList()));
       }
     });
 
     compileModules("project.main");
 
     String langPart = isGradleOlderThan("4.0") ? "build/classes" : "build/classes/java";
-    List<String> expected = newArrayList(path(langPart + "/main"),
-                                         path("api/" + langPart + "/main"),
-                                         path("impl/" + langPart + "/main"),
-                                         path("api/build/libs/api.jar"),
-                                         path("impl/build/libs/impl.jar"));
+    List<String> expected = new ArrayList<>(List.of(path(langPart + "/main"),
+                                    path("api/" + langPart + "/main"),
+                                    path("impl/" + langPart + "/main"),
+                                    path("api/build/libs/api.jar"),
+                                    path("impl/build/libs/impl.jar")));
 
     if (isGradleOlderThan("3.3")) {
       expected.addAll(asList(path("build/dependency-cache"),
@@ -188,6 +285,12 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
                              path("impl/build/generated/sources/headers/java/main")));
     }
 
+    if (isGradleNewerOrSameAs("7.1")) {
+      expected.addAll(asList(path("build/tmp/compileJava/previous-compilation-data.bin"),
+                             path("api/build/tmp/compileJava/previous-compilation-data.bin"),
+                             path("impl/build/tmp/compileJava/previous-compilation-data.bin")));
+    }
+
     Assertions.assertThat(dirtyOutputRoots)
       .containsExactlyInAnyOrderElementsOf(expected);
 
@@ -202,15 +305,14 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check incremental make and build dependant module----//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "  public int methodX() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }  public int methodX() { return 42; }}""", false);
     compileModules("project.test");
 
-    expected = newArrayList(path(langPart + "/main"),
-                            path(langPart + "/test"));
+    expected = new ArrayList<>(List.of(path(langPart + "/main"),
+                       path(langPart + "/test")));
 
     if (isGradleOlderThan("3.3")) {
       expected.add(path("build/dependency-cache"));
@@ -223,6 +325,11 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     if (isGradleNewerOrSameAs("6.3")) {
       expected.addAll(asList(path("build/generated/sources/headers/java/main"),
                              path("build/generated/sources/headers/java/test")));
+    }
+
+    if (isGradleNewerOrSameAs("7.1")) {
+      expected.addAll(asList(path("build/tmp/compileTestJava/previous-compilation-data.bin"),
+                             path("build/tmp/compileJava/previous-compilation-data.bin")));
     }
 
     Assertions.assertThat(dirtyOutputRoots)
@@ -239,10 +346,10 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check reverted change -> related build result can be obtained by Gradle from cache ---//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }}""", false);
     compileModules("project.test");
     assertUnorderedElementsAreEqual(dirtyOutputRoots, expected);
   }
