@@ -6,8 +6,11 @@ import com.intellij.openapi.externalSystem.ExternalSystemManager;
 import com.intellij.openapi.externalSystem.model.DataNode;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.ProjectKeys;
+import com.intellij.openapi.externalSystem.model.project.ContentRootData;
+import com.intellij.openapi.externalSystem.model.project.ExternalSystemSourceType;
 import com.intellij.openapi.externalSystem.model.project.ModuleData;
 import com.intellij.openapi.externalSystem.model.project.ProjectData;
+import com.intellij.openapi.externalSystem.service.project.IdeModelsProviderImpl;
 import com.intellij.openapi.externalSystem.util.ExternalSystemApiUtil;
 import com.intellij.openapi.externalSystem.util.ExternalSystemConstants;
 import com.intellij.openapi.fileChooser.FileChooserDescriptor;
@@ -17,14 +20,12 @@ import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiFile;
-import com.intellij.util.BooleanFunction;
 import com.intellij.util.containers.Stack;
 import org.gradle.tooling.model.GradleProject;
 import org.gradle.tooling.model.gradle.GradleScript;
-import org.gradle.util.GUtil;
 import org.gradle.util.GradleVersion;
 import org.gradle.wrapper.WrapperConfiguration;
 import org.gradle.wrapper.WrapperExecutor;
@@ -32,11 +33,13 @@ import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.gradle.GradleManager;
+import org.jetbrains.plugins.gradle.model.data.GradleProjectBuildScriptData;
 import org.jetbrains.plugins.gradle.settings.GradleProjectSettings;
 import org.jetbrains.plugins.gradle.settings.GradleSettings;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.Reader;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
@@ -45,17 +48,16 @@ import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.intellij.openapi.util.io.FileUtil.isAncestor;
+import static com.intellij.openapi.util.io.FileUtil.toCanonicalPath;
 import static com.intellij.openapi.util.text.StringUtil.*;
 import static org.jetbrains.plugins.gradle.util.GradleConstants.EXTENSION;
 import static org.jetbrains.plugins.gradle.util.GradleConstants.KOTLIN_DSL_SCRIPT_EXTENSION;
 
 /**
  * Holds miscellaneous utility methods.
- *
- * @author Denis Zhdanov
  */
 public final class GradleUtil {
   private static final String LAST_USED_GRADLE_HOME_KEY = "last.used.gradle.home";
@@ -75,7 +77,8 @@ public final class GradleUtil {
     return new FileChooserDescriptor(true, true, false, false, false, false)
       .withFileFilter(file -> file.isCaseSensitive()
                               ? endsWith(file.getName(), "." + EXTENSION) || endsWith(file.getName(), "." + KOTLIN_DSL_SCRIPT_EXTENSION)
-                              : endsWithIgnoreCase(file.getName(), "." + EXTENSION) || endsWithIgnoreCase(file.getName(), "." + KOTLIN_DSL_SCRIPT_EXTENSION));
+                              : endsWithIgnoreCase(file.getName(), "." + EXTENSION) ||
+                                endsWithIgnoreCase(file.getName(), "." + KOTLIN_DSL_SCRIPT_EXTENSION));
   }
 
   @NotNull
@@ -92,60 +95,63 @@ public final class GradleUtil {
   /**
    * Tries to retrieve what settings should be used with gradle wrapper for the gradle project located at the given path.
    *
-   * @param gradleProjectPath  target gradle project config (*.gradle) path or config file's directory path.
-   * @return                   gradle wrapper settings should be used with gradle wrapper for the gradle project located at the given path
-   *                           if any; {@code null} otherwise
+   * @param gradleProjectPath target gradle project config (*.gradle) path or config file's directory path.
+   * @return gradle wrapper settings should be used with gradle wrapper for the gradle project located at the given path
+   * if any; {@code null} otherwise
    */
   @Nullable
   public static WrapperConfiguration getWrapperConfiguration(@Nullable String gradleProjectPath) {
-    final File wrapperPropertiesFile = findDefaultWrapperPropertiesFile(gradleProjectPath);
+    Path wrapperPropertiesFile = findDefaultWrapperPropertiesFile(gradleProjectPath);
     if (wrapperPropertiesFile == null) return null;
 
     final WrapperConfiguration wrapperConfiguration = new WrapperConfiguration();
-    try {
-      final Properties props = GUtil.loadProperties(wrapperPropertiesFile);
+
+    try (Reader wrapperPropertiesReader = Files.newBufferedReader(wrapperPropertiesFile)) {
+      final Properties props = new Properties();
+      props.load(wrapperPropertiesReader);
       String distributionUrl = props.getProperty(WrapperExecutor.DISTRIBUTION_URL_PROPERTY);
-      if(isEmpty(distributionUrl)) {
+      if (isEmpty(distributionUrl)) {
         throw new ExternalSystemException("Wrapper 'distributionUrl' property does not exist!");
-      } else {
+      }
+      else {
         wrapperConfiguration.setDistribution(prepareDistributionUri(distributionUrl, wrapperPropertiesFile));
       }
       String distributionPath = props.getProperty(WrapperExecutor.DISTRIBUTION_PATH_PROPERTY);
-      if(!isEmpty(distributionPath)) {
+      if (!isEmpty(distributionPath)) {
         wrapperConfiguration.setDistributionPath(distributionPath);
       }
       String distPathBase = props.getProperty(WrapperExecutor.DISTRIBUTION_BASE_PROPERTY);
-      if(!isEmpty(distPathBase)) {
+      if (!isEmpty(distPathBase)) {
         wrapperConfiguration.setDistributionBase(distPathBase);
       }
       String zipStorePath = props.getProperty(WrapperExecutor.ZIP_STORE_PATH_PROPERTY);
-      if(!isEmpty(zipStorePath)) {
+      if (!isEmpty(zipStorePath)) {
         wrapperConfiguration.setZipPath(zipStorePath);
       }
       String zipStoreBase = props.getProperty(WrapperExecutor.ZIP_STORE_BASE_PROPERTY);
-      if(!isEmpty(zipStoreBase)) {
+      if (!isEmpty(zipStoreBase)) {
         wrapperConfiguration.setZipBase(zipStoreBase);
       }
       return wrapperConfiguration;
     }
     catch (Exception e) {
       GradleLog.LOG.warn(
-        String.format("I/O exception on reading gradle wrapper properties file at '%s'", wrapperPropertiesFile.getAbsolutePath()), e);
+        String.format("I/O exception on reading gradle wrapper properties file at '%s'", wrapperPropertiesFile.toAbsolutePath()), e);
     }
     return null;
   }
 
-  private static URI prepareDistributionUri(String distributionUrl, File propertiesFile) throws URISyntaxException {
+  private static URI prepareDistributionUri(String distributionUrl, Path propertiesFile) throws URISyntaxException {
     URI source = new URI(distributionUrl);
-    return source.getScheme() != null ? source : new File(propertiesFile.getParentFile(), source.getSchemeSpecificPart()).toURI();
+    return source.getScheme() != null ? source : propertiesFile.resolveSibling(source.getSchemeSpecificPart()).toUri();
   }
 
   /**
    * Allows to build file system path to the target gradle sub-project given the root project path.
    *
-   * @param subProject       target sub-project which config path we're interested in
-   * @param rootProjectPath  path to root project's directory which contains 'build.gradle'
-   * @return                 path to the given sub-project's directory which contains 'build.gradle'
+   * @param subProject      target sub-project which config path we're interested in
+   * @param rootProjectPath path to root project's directory which contains 'build.gradle'
+   * @return path to the given sub-project's directory which contains 'build.gradle'
    */
   @NotNull
   public static String getConfigPath(@NotNull GradleProject subProject, @NotNull String rootProjectPath) {
@@ -158,7 +164,7 @@ public final class GradleUtil {
             // The file points to 'build.gradle' at the moment but we keep it's parent dir path instead.
             file = file.getParentFile();
           }
-          return ExternalSystemApiUtil.toCanonicalPath(file.getCanonicalPath());
+          return ExternalSystemApiUtil.toCanonicalPath(file.getPath());
         }
       }
     }
@@ -195,7 +201,7 @@ public final class GradleUtil {
   }
 
   @Nullable
-  public static File findDefaultWrapperPropertiesFile(@Nullable String gradleProjectPath) {
+  public static Path findDefaultWrapperPropertiesFile(@Nullable String gradleProjectPath) {
     if (gradleProjectPath == null) {
       return null;
     }
@@ -213,10 +219,10 @@ public final class GradleUtil {
       return null;
     }
 
-    try {
-      List<Path> candidates = Files.list(wrapperDir)
+    try (Stream<Path> pathsStream = Files.list(wrapperDir)) {
+      List<Path> candidates = pathsStream
         .filter(path -> FileUtilRt.extensionEquals(path.getFileName().toString(), "properties") && Files.isRegularFile(path))
-        .collect(Collectors.toList());
+        .toList();
 
       if (candidates.isEmpty()) {
         GradleLog.LOG.warn("No *.properties file is found at the gradle wrapper directory " + wrapperDir);
@@ -228,7 +234,7 @@ public final class GradleUtil {
         ));
         return null;
       }
-      return candidates.get(0).toFile();
+      return candidates.get(0);
     }
     catch (IOException e) {
       GradleLog.LOG.warn("Couldn't list gradle wrapper directory " + wrapperDir, e);
@@ -247,7 +253,8 @@ public final class GradleUtil {
         }
         candidate = candidate.getParent();
       }
-    } catch (IOException e) {
+    }
+    catch (IOException e) {
       GradleLog.LOG.warn("Failed to determine root Gradle project directory for [" + subProjectPath + "]", e);
     }
     return Files.isDirectory(subProject) ? subProjectPath : subProject.getParent().toString();
@@ -268,7 +275,7 @@ public final class GradleUtil {
 
   /**
    * Finds real external module data by ide module
-   *
+   * <p>
    * Module 'module' -> ModuleData 'module'
    * Module 'module.main' -> ModuleData 'module' instead of GradleSourceSetData 'module.main'
    * Module 'module.test' -> ModuleData 'module' instead of GradleSourceSetData 'module.test'
@@ -285,19 +292,22 @@ public final class GradleUtil {
   @ApiStatus.Experimental
   @Nullable
   public static DataNode<ModuleData> findGradleModuleData(@NotNull Project project, @NotNull String projectPath) {
-    DataNode<ProjectData> projectNode = ExternalSystemApiUtil.findProjectData(project, GradleConstants.SYSTEM_ID, projectPath);
-    if (projectNode == null) return null;
-    BooleanFunction<DataNode<ModuleData>> predicate = node -> projectPath.equals(node.getData().getLinkedExternalProjectPath());
-    return ExternalSystemApiUtil.find(projectNode, ProjectKeys.MODULE, predicate);
+    return ExternalSystemApiUtil.findModuleNode(project, GradleConstants.SYSTEM_ID, projectPath);
   }
 
-  /**
-   * @deprecated to be removed in the next release
-   */
-  @ApiStatus.Internal
-  @Deprecated
-  public static boolean isCustomSerializationEnabled(@NotNull GradleVersion gradleVersion) {
-    return Registry.is("gradle.tooling.custom.serializer", true) && gradleVersion.compareTo(GradleVersion.version("3.0")) >= 0;
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull String projectPath) {
+    var moduleNode = ExternalSystemApiUtil.findModuleNode(project, GradleConstants.SYSTEM_ID, projectPath);
+    if (moduleNode == null) return null;
+    return findGradleModule(project, moduleNode.getData());
+  }
+
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull ProjectData projectData) {
+    return findGradleModule(project, projectData.getLinkedExternalProjectPath());
+  }
+
+  public static @Nullable Module findGradleModule(@NotNull Project project, @NotNull ModuleData moduleData) {
+    var modelsProvider = new IdeModelsProviderImpl(project);
+    return modelsProvider.findIdeModule(moduleData);
   }
 
   public static @NotNull GradleVersion getGradleVersion(Project project, PsiFile file) {
@@ -311,8 +321,7 @@ public final class GradleUtil {
 
   public static @NotNull GradleVersion getGradleVersion(Project project, String filePath) {
     ExternalSystemManager<?, ?, ?, ?, ?> manager = ExternalSystemApiUtil.getManager(GradleConstants.SYSTEM_ID);
-    if (manager instanceof GradleManager) {
-      GradleManager gradleManager = (GradleManager)manager;
+    if (manager instanceof GradleManager gradleManager) {
       String externalProjectPath = gradleManager.getAffectedExternalProjectPath(filePath, project);
       if (externalProjectPath != null) {
         GradleSettings settings = GradleSettings.getInstance(project);
@@ -327,5 +336,47 @@ public final class GradleUtil {
 
   public static boolean isSupportedImplementationScope(@NotNull GradleVersion gradleVersion) {
     return gradleVersion.getBaseVersion().compareTo(GradleVersion.version("3.4")) >= 0;
+  }
+
+  @Nullable
+  public static VirtualFile getGradleBuildScriptSource(@NotNull Module module) {
+    DataNode<? extends ModuleData> moduleData = findGradleModuleData(module);
+    if (moduleData == null) return null;
+    DataNode<GradleProjectBuildScriptData> dataNode = ExternalSystemApiUtil.find(moduleData, GradleProjectBuildScriptData.KEY);
+    if (dataNode == null) return null;
+    File data = dataNode.getData().getBuildScriptSource();
+    if (data == null) return null;
+    return VfsUtil.findFileByIoFile(data, true);
+  }
+
+  public static void excludeOutDir(@NotNull DataNode<ModuleData> ideModule, File ideaOutDir) {
+    ContentRootData excludedContentRootData;
+    DataNode<ContentRootData> contentRootDataDataNode = ExternalSystemApiUtil.find(ideModule, ProjectKeys.CONTENT_ROOT);
+    if (contentRootDataDataNode == null || !isContentRootAncestor(contentRootDataDataNode.getData(), ideaOutDir)) {
+      excludedContentRootData = new ContentRootData(GradleConstants.SYSTEM_ID, ideaOutDir.getPath());
+      ideModule.createChild(ProjectKeys.CONTENT_ROOT, excludedContentRootData);
+    }
+    else {
+      excludedContentRootData = contentRootDataDataNode.getData();
+    }
+
+    excludedContentRootData.storePath(ExternalSystemSourceType.EXCLUDED, ideaOutDir.getPath());
+  }
+
+  public static void unexcludeOutDir(@NotNull DataNode<ModuleData> ideModule, File ideaOutDir) {
+    DataNode<ContentRootData> contentRootDataDataNode = ExternalSystemApiUtil.find(ideModule, ProjectKeys.CONTENT_ROOT);
+
+    if (contentRootDataDataNode != null && isContentRootAncestor(contentRootDataDataNode.getData(), ideaOutDir)) {
+          ContentRootData excludedContentRootData;
+          excludedContentRootData = contentRootDataDataNode.getData();
+          excludedContentRootData.getPaths(ExternalSystemSourceType.EXCLUDED).removeIf(sourceRoot -> {
+            return sourceRoot.getPath().equals(ideaOutDir.getPath()); });
+        }
+  }
+
+  private static boolean isContentRootAncestor(@NotNull ContentRootData data, @NotNull File ideaOutDir) {
+    var canonicalIdeOutPath = toCanonicalPath(ideaOutDir.getPath());
+    var canonicalRootPath = data.getRootPath();
+    return isAncestor(canonicalRootPath, canonicalIdeOutPath, false);
   }
 }
