@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.uiDesigner;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -17,9 +17,7 @@ import java.awt.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 
-/**
- * @author yole
- */
+
 public final class GridBuildUtil {
   private static final Logger LOG = Logger.getInstance(GridBuildUtil.class);
 
@@ -39,10 +37,9 @@ public final class GridBuildUtil {
     if (selection.size() != 1){
       return;
     }
-    if (!(selection.get(0) instanceof RadContainer)) {
+    if (!(selection.get(0) instanceof RadContainer container)) {
       return;
     }
-    final RadContainer container = (RadContainer)selection.get(0);
     if (
       container instanceof RadScrollPane ||
       container instanceof RadSplitPane ||
@@ -304,8 +301,8 @@ public final class GridBuildUtil {
 
 
     return Couple.of(
-      new Integer(Util.eliminate(y, rowSpans, null)),
-      new Integer(Util.eliminate(x, colSpans, null))
+      Integer.valueOf(Util.eliminate(y, rowSpans, null)),
+      Integer.valueOf(Util.eliminate(x, colSpans, null))
     );
   }
 
