@@ -9,26 +9,14 @@ import com.intellij.execution.process.CapturingProcessHandler;
 import com.intellij.execution.process.ProcessNotCreatedException;
 import com.intellij.execution.process.ProcessOutput;
 import com.intellij.execution.util.ExecUtil;
-import com.intellij.openapi.Disposable;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.module.Module;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.projectRoots.Sdk;
-import com.intellij.openapi.projectRoots.impl.ProjectJdkImpl;
-import com.intellij.openapi.roots.OrderRootType;
-import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.LocalFileSystem;
-import com.intellij.openapi.vfs.VfsUtil;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.net.HttpConfigurable;
-import com.jetbrains.python.PyPsiPackageUtil;
 import com.jetbrains.python.PySdkBundle;
-import com.jetbrains.python.PythonHelpersLocator;
 import com.jetbrains.python.psi.LanguageLevel;
 import com.jetbrains.python.sdk.*;
 import com.jetbrains.python.sdk.flavors.PythonSdkFlavor;
@@ -37,121 +25,24 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.regex.Pattern;
 
-import static com.intellij.webcore.packaging.PackageVersionComparator.VERSION_COMPARATOR;
+import static com.jetbrains.python.sdk.PySdkExtKt.showSdkExecutionException;
 
 /**
- * @author vlan
+ * @deprecated This class and all its inheritors are deprecated. Everything should work via {@link PyTargetEnvironmentPackageManager}
  */
-public class PyPackageManagerImpl extends PyPackageManager {
-
-  private static final String SETUPTOOLS_VERSION = "44.1.1";
-  private static final String PIP_VERSION = "20.1.1";
-
-  private static final String SETUPTOOLS_WHEEL_NAME = "setuptools-" + SETUPTOOLS_VERSION + "-py2.py3-none-any.whl";
-  private static final String PIP_WHEEL_NAME = "pip-" + PIP_VERSION + "-py2.py3-none-any.whl";
-  private static final String VIRTUALENV_WHEEL_NAME = "virtualenv-16.7.10-py2.py3-none-any.whl";
-
-  private static final int ERROR_NO_SETUPTOOLS = 3;
+@Deprecated
+public class PyPackageManagerImpl extends PyPackageManagerImplBase {
+  private static final String VIRTUALENV_ZIPAPP_NAME = "virtualenv-20.16.7.pyz";
+  private static final String PY2_VIRTUALENV_ZIPAPP_NAME = "virtualenv-20.13.0.pyz";
 
   private static final Logger LOG = Logger.getInstance(PyPackageManagerImpl.class);
 
-  private static final String PACKAGING_TOOL = "packaging_tool.py";
-  private static final int TIMEOUT = 10 * 60 * 1000;
-
-  private static final String INSTALL = "install";
-  private static final String UNINSTALL = "uninstall";
-  protected String mySeparator = File.separator;
-
-  @Nullable private volatile List<PyPackage> myPackagesCache = null;
-  private final AtomicBoolean myUpdatingCache = new AtomicBoolean(false);
-
-  @NotNull final private Sdk mySdk;
-
   @Override
-  public void refresh() {
-    LOG.debug("Refreshing SDK roots and packages cache");
-    final Application application = ApplicationManager.getApplication();
-    application.invokeLater(() -> {
-      final Sdk sdk = getSdk();
-      application.runWriteAction(() -> {
-        final VirtualFile[] files = sdk.getRootProvider().getFiles(OrderRootType.CLASSES);
-        VfsUtil.markDirtyAndRefresh(true, true, true, files);
-      });
-      PythonSdkType.getInstance().setupSdkPaths(sdk);
-    });
-  }
-
-  @Override
-  public void installManagement() throws ExecutionException {
-    final LanguageLevel languageLevel = PythonSdkType.getLanguageLevelForSdk(getSdk());
-    if (languageLevel.isOlderThan(LanguageLevel.PYTHON27)) {
-      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.package.management.for.python.not.supported",
-                                                       languageLevel, LanguageLevel.PYTHON27));
-    }
-
-    boolean success = updatePackagingTools();
-    if (success) {
-      return;
-    }
-
-    final PyPackage installedSetuptools = refreshAndCheckForSetuptools();
-    final PyPackage installedPip = PyPsiPackageUtil.findPackage(refreshAndGetPackages(false), PyPackageUtil.PIP);
-    if (installedSetuptools == null || VERSION_COMPARATOR.compare(installedSetuptools.getVersion(), SETUPTOOLS_VERSION) < 0) {
-      installManagement(Objects.requireNonNull(getHelperPath(SETUPTOOLS_WHEEL_NAME)));
-    }
-    if (installedPip == null || VERSION_COMPARATOR.compare(installedPip.getVersion(), PIP_VERSION) < 0) {
-      installManagement(Objects.requireNonNull(getHelperPath(PIP_WHEEL_NAME)));
-    }
-  }
-
-  private boolean updatePackagingTools() {
-    try {
-      installUsingPipWheel("--upgrade", "--force-reinstall", PyPackageUtil.SETUPTOOLS, PyPackageUtil.PIP);
-      return true;
-    }
-    catch (ExecutionException e) {
-      LOG.info(e);
-      return false;
-    }
-    finally {
-      refreshPackagesSynchronously();
-    }
-  }
-
-  @Override
-  public boolean hasManagement() throws ExecutionException {
-    return refreshAndCheckForSetuptools() != null &&
-           PyPsiPackageUtil.findPackage(refreshAndGetPackages(false), PyPackageUtil.PIP) != null;
-  }
-
-  @Nullable
-  private PyPackage refreshAndCheckForSetuptools() throws ExecutionException {
-    try {
-      final List<PyPackage> packages = refreshAndGetPackages(false);
-      final PyPackage setuptoolsPackage = PyPsiPackageUtil.findPackage(packages, PyPackageUtil.SETUPTOOLS);
-      return setuptoolsPackage != null ? setuptoolsPackage : PyPsiPackageUtil.findPackage(packages, PyPackageUtil.DISTRIBUTE);
-    }
-    catch (PyExecutionException e) {
-      if (e.getExitCode() == ERROR_NO_SETUPTOOLS) {
-        return null;
-      }
-      throw e;
-    }
-  }
-
-  protected void installManagement(@NotNull String name) throws ExecutionException {
-    installUsingPipWheel("--no-index", name);
-  }
-
-  private void installUsingPipWheel(String @NotNull ... pipArgs) throws ExecutionException {
+  protected final void installUsingPipWheel(String @NotNull ... pipArgs) throws ExecutionException {
     final String pipWheel = getHelperPath(PIP_WHEEL_NAME);
     List<String> args = Lists.newArrayList(INSTALL);
     args.addAll(Arrays.asList(pipArgs));
@@ -165,19 +56,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
   }
 
   protected PyPackageManagerImpl(@NotNull final Sdk sdk) {
-    mySdk = sdk;
-    subscribeToLocalChanges();
-    Disposable parentDisposable = sdk instanceof Disposable ? (Disposable)sdk : PyPackageManagers.getInstance();
-    Disposer.register(parentDisposable, this);
-  }
-
-  protected void subscribeToLocalChanges() {
-    PyPackageUtil.runOnChangeUnderInterpreterPaths(getSdk(), this, () -> PythonSdkType.getInstance().setupSdkPaths(getSdk()));
-  }
-
-  @NotNull
-  public Sdk getSdk() {
-    return mySdk;
+    super(sdk);
   }
 
   @Override
@@ -212,7 +91,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
     }
 
     try {
-      getHelperResult(PACKAGING_TOOL, args, !useUserSite, true, workingDir);
+      getHelperResult(args, !useUserSite, true, workingDir);
     }
     catch (PyExecutionException e) {
       final List<String> simplifiedArgs = new ArrayList<>();
@@ -249,7 +128,7 @@ public class PyPackageManagerImpl extends PyPackageManager {
         }
         args.add(pkg.getName());
       }
-      getHelperResult(PACKAGING_TOOL, args, !canModify, true, null);
+      getHelperResult(args, !canModify, true);
     }
     catch (PyExecutionException e) {
       throw new PyExecutionException(e.getMessage(), "pip", args, e.getStdout(), e.getStderr(), e.getExitCode(), e.getFixes());
@@ -268,42 +147,27 @@ public class PyPackageManagerImpl extends PyPackageManager {
     return packages != null ? Collections.unmodifiableList(packages) : null;
   }
 
-  @NotNull
-  protected List<PyPackage> collectPackages() throws ExecutionException {
-    if (mySdk instanceof PyLazySdk) return Collections.emptyList();
-    final String output;
-    try {
-      LOG.debug("Collecting installed packages for the SDK " + mySdk.getName(), new Throwable());
-      output = getHelperResult(PACKAGING_TOOL, Collections.singletonList("list"), false, false, null);
+  @Override
+  protected @NotNull List<PyPackage> collectPackages() throws ExecutionException {
+    if (getSdk() instanceof PyLazySdk) {
+      return List.of();
     }
-    catch (final ProcessNotCreatedException ex) {
+
+    try {
+      LOG.debug("Collecting installed packages for the SDK " + getSdk().getName(), new Throwable());
+      String output = getHelperResult(List.of("list"), false, false);
+      return parsePackagingToolOutput(output);
+    }
+    catch (ProcessNotCreatedException ex) {
       if (ApplicationManager.getApplication().isUnitTestMode()) {
         LOG.info("Not-env unit test mode, will return mock packages");
-        return Lists.newArrayList(new PyPackage(PyPackageUtil.PIP, PIP_VERSION, null, Collections.emptyList()),
-                                  new PyPackage(PyPackageUtil.SETUPTOOLS, SETUPTOOLS_VERSION, null, Collections.emptyList()));
+        return List.of(new PyPackage(PyPackageUtil.PIP, PIP_VERSION),
+                       new PyPackage(PyPackageUtil.SETUPTOOLS, SETUPTOOLS_VERSION));
       }
       else {
         throw ex;
       }
     }
-
-    return parsePackagingToolOutput(output);
-  }
-
-  @Override
-  @NotNull
-  public Set<PyPackage> getDependents(@NotNull PyPackage pkg) throws ExecutionException {
-    final List<PyPackage> packages = refreshAndGetPackages(false);
-    final Set<PyPackage> dependents = new HashSet<>();
-    for (PyPackage p : packages) {
-      final List<PyRequirement> requirements = p.getRequirements();
-      for (PyRequirement requirement : requirements) {
-        if (requirement.getName().equals(pkg.getName())) {
-          dependents.add(p);
-        }
-      }
-    }
-    return dependents;
   }
 
   @Override
@@ -318,167 +182,56 @@ public class PyPackageManagerImpl extends PyPackageManager {
                                                        languageLevel, LanguageLevel.PYTHON27));
     }
 
-    final boolean usePyVenv = languageLevel.isAtLeast(LanguageLevel.PYTHON33);
-    if (usePyVenv) {
-      args.add("pyvenv");
-      if (useGlobalSite) {
-        args.add("--system-site-packages");
-      }
-      args.add(destinationDir);
-      getHelperResult(PACKAGING_TOOL, args, false, true, null);
+    if (useGlobalSite) {
+      args.add("--system-site-packages");
     }
-    else {
-      if (useGlobalSite) {
-        args.add("--system-site-packages");
-      }
-      args.add(destinationDir);
-      createVirtualEnvForPython2UsingVirtualenvLibrary(args);
+    args.add(destinationDir);
+
+    try {
+      getPythonProcessResult(
+        Objects.requireNonNull(getHelperPath(languageLevel.isPython2() ? PY2_VIRTUALENV_ZIPAPP_NAME : VIRTUALENV_ZIPAPP_NAME)),
+        args, false, true, null, List.of("-S"));
+    }
+    catch (ExecutionException e) {
+      showSdkExecutionException(sdk, e, PySdkBundle.message("python.creating.venv.failed.title"));
     }
 
     final String binary = PythonSdkUtil.getPythonExecutable(destinationDir);
     final String binaryFallback = destinationDir + mySeparator + "bin" + mySeparator + "python";
-    final String path = (binary != null) ? binary : binaryFallback;
 
-    if (usePyVenv) {
-      // Still no 'packaging' and 'pysetup3' for Python 3.3rc1, see PEP 405
-      final VirtualFile binaryFile = LocalFileSystem.getInstance().refreshAndFindFileByPath(path);
-      if (binaryFile != null) {
-        final ProjectJdkImpl tmpSdk = new ProjectJdkImpl("", PythonSdkType.getInstance());
-        tmpSdk.setHomePath(path);
-        // Don't save such one-shot SDK with empty name in the cache of PyPackageManagers
-        final PyPackageManager manager = new PyPackageManagerImpl(tmpSdk);
-        try {
-          manager.installManagement();
-        }
-        finally {
-          Disposer.dispose(manager);
-        }
-      }
-    }
-    return path;
-  }
-
-  private void createVirtualEnvForPython2UsingVirtualenvLibrary(List<String> args) throws ExecutionException {
-    File workingDirectory = null;
-    try {
-      workingDirectory = FileUtil.createTempDirectory("tmp", "pycharm-management");
-      final String workingDirectoryPath = workingDirectory.getPath();
-      getPythonProcessResult("-mzipfile", Arrays.asList("-e", getHelperPath(VIRTUALENV_WHEEL_NAME), workingDirectoryPath),
-                             false, true, workingDirectoryPath);
-      getPythonProcessResult(workingDirectoryPath + "/virtualenv.py", args,
-                             false, true, workingDirectoryPath);
-    }
-    catch (IOException e) {
-      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.create.temporary.build.directory"), e);
-    }
-    finally {
-      if (workingDirectory != null) {
-        FileUtil.delete(workingDirectory);
-      }
-    }
-  }
-
-  @NotNull
-  private static LanguageLevel getOrRequestLanguageLevelForSdk(@NotNull Sdk sdk) throws ExecutionException {
-    if (sdk instanceof PyDetectedSdk) {
-      final PythonSdkFlavor flavor = PythonSdkFlavor.getFlavor(sdk);
-      if (flavor != null && sdk.getHomePath() != null) {
-        return flavor.getLanguageLevel(sdk.getHomePath());
-      }
-      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.retrieve.version", sdk.getHomePath()));
-    }
-    // Use the cached version for an already configured SDK
-    return PythonSdkType.getLanguageLevelForSdk(sdk);
-  }
-
-  @Override
-  @Nullable
-  public List<PyRequirement> getRequirements(@NotNull Module module) {
-    return Optional
-      .ofNullable(PyPackageUtil.getRequirementsFromTxt(module))
-      .orElseGet(() -> PyPackageUtil.findSetupPyRequires(module));
-  }
-
-  @Nullable
-  @Override
-  public PyRequirement parseRequirement(@NotNull String line) {
-    return PyRequirementParser.fromLine(line);
-  }
-
-  @NotNull
-  @Override
-  public List<PyRequirement> parseRequirements(@NotNull String text) {
-    return PyRequirementParser.fromText(text);
-  }
-
-  @NotNull
-  @Override
-  public List<PyRequirement> parseRequirements(@NotNull VirtualFile file) {
-    return PyRequirementParser.fromFile(file);
+    return (binary != null) ? binary : binaryFallback;
   }
 
   //   public List<PyPackage> refreshAndGetPackagesIfNotInProgress(boolean alwaysRefresh) throws ExecutionException
 
-  @Override
-  @NotNull
-  public List<PyPackage> refreshAndGetPackages(boolean alwaysRefresh) throws ExecutionException {
-    final List<PyPackage> currentPackages = myPackagesCache;
-    if (alwaysRefresh || currentPackages == null) {
-      myPackagesCache = null;
-      try {
-        final List<PyPackage> packages = collectPackages();
-        LOG.debug("Packages installed in " + mySdk.getName() + ": " + packages);
-        myPackagesCache = packages;
-        ApplicationManager.getApplication().getMessageBus().syncPublisher(PACKAGE_MANAGER_TOPIC).packagesRefreshed(mySdk);
-        return Collections.unmodifiableList(packages);
-      }
-      catch (ExecutionException e) {
-        myPackagesCache = Collections.emptyList();
-        throw e;
-      }
-    }
-    return Collections.unmodifiableList(currentPackages);
+  private @NotNull String getHelperResult(@NotNull List<String> args,
+                                          boolean askForSudo,
+                                          boolean showProgress) throws ExecutionException {
+    return getHelperResult(args, askForSudo, showProgress, null);
   }
 
-  private void refreshPackagesSynchronously() {
-    PyPackageUtil.updatePackagesSynchronouslyWithGuard(this, myUpdatingCache);
-  }
-
-  @Nullable
-  private static String getProxyString() {
-    final HttpConfigurable settings = HttpConfigurable.getInstance();
-    if (settings != null && settings.USE_HTTP_PROXY) {
-      final String credentials;
-      if (settings.PROXY_AUTHENTICATION) {
-        credentials = String.format("%s:%s@", settings.getProxyLogin(), settings.getPlainProxyPassword());
-      }
-      else {
-        credentials = "";
-      }
-      return "http://" + credentials + String.format("%s:%d", settings.PROXY_HOST, settings.PROXY_PORT);
-    }
-    return null;
-  }
-
-  @NotNull
-  private String getHelperResult(@NotNull String helper, @NotNull List<String> args, boolean askForSudo,
-                                 boolean showProgress, @Nullable String parentDir) throws ExecutionException {
-    final String helperPath = getHelperPath(helper);
+  private @NotNull String getHelperResult(@NotNull List<String> args,
+                                          boolean askForSudo,
+                                          boolean showProgress,
+                                          @Nullable String parentDir) throws ExecutionException {
+    String helperPath = getHelperPath(PACKAGING_TOOL);
     if (helperPath == null) {
-      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.external.tool", helper));
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.external.tool", PACKAGING_TOOL));
     }
     return getPythonProcessResult(helperPath, args, askForSudo, showProgress, parentDir);
-  }
-
-  @Nullable
-  protected String getHelperPath(@NotNull final String helper) throws ExecutionException {
-    return PythonHelpersLocator.getHelperPath(helper);
   }
 
   @NotNull
   private String getPythonProcessResult(@NotNull String path, @NotNull List<String> args, boolean askForSudo,
                                         boolean showProgress, @Nullable String workingDir) throws ExecutionException {
-    final ProcessOutput output = getPythonProcessOutput(path, args, askForSudo, showProgress, workingDir);
+    return getPythonProcessResult(path, args, askForSudo, showProgress, workingDir, null);
+  }
+
+  @NotNull
+  private String getPythonProcessResult(@NotNull String path, @NotNull List<String> args, boolean askForSudo,
+                                        boolean showProgress, @Nullable String workingDir, @Nullable List<String> pyArgs)
+    throws ExecutionException {
+    final ProcessOutput output = getPythonProcessOutput(path, args, askForSudo, showProgress, workingDir, pyArgs);
     final int exitCode = output.getExitCode();
     if (output.isTimeout()) {
       throw new PyExecutionException(PySdkBundle.message("python.sdk.packaging.timed.out"), path, args, output);
@@ -491,16 +244,18 @@ public class PyPackageManagerImpl extends PyPackageManager {
 
   @NotNull
   protected ProcessOutput getPythonProcessOutput(@NotNull String helperPath, @NotNull List<String> args, boolean askForSudo,
-                                                 boolean showProgress, @Nullable String workingDir) throws ExecutionException {
+                                                 boolean showProgress, @Nullable String workingDir, @Nullable List<String> pyArgs)
+    throws ExecutionException {
     final String homePath = getSdk().getHomePath();
     if (homePath == null) {
-      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.python.interpreter", mySdk.getName()));
+      throw new ExecutionException(PySdkBundle.message("python.sdk.packaging.cannot.find.python.interpreter", getSdk().getName()));
     }
     if (workingDir == null) {
       workingDir = new File(homePath).getParent();
     }
     final List<String> cmdline = new ArrayList<>();
     cmdline.add(homePath);
+    if (pyArgs != null) cmdline.addAll(pyArgs);
     cmdline.add(helperPath);
     cmdline.addAll(args);
     LOG.info("Running packaging tool: " + StringUtil.join(makeSafeToDisplayCommand(cmdline), " "));
@@ -512,14 +267,14 @@ public class PyPackageManagerImpl extends PyPackageManager {
       PythonEnvUtil.setPythonUnbuffered(environment);
       PythonEnvUtil.setPythonDontWriteBytecode(environment);
       PythonEnvUtil.resetHomePathChanges(homePath, environment);
-      final PythonSdkFlavor flavor = PythonSdkFlavor.getFlavor(mySdk);
+      final PythonSdkFlavor flavor = PythonSdkFlavor.getFlavor(getSdk());
       if (flavor != null && flavor.commandLinePatcher() != null) {
         flavor.commandLinePatcher().patchCommandLine(commandLine);
       }
       final Process process;
-      final boolean useSudo = askForSudo && PySdkExtKt.adminPermissionsNeeded(mySdk);
+      final boolean useSudo = askForSudo && PySdkExtKt.adminPermissionsNeeded(getSdk());
       if (useSudo) {
-        process = ExecUtil.sudo(commandLine, "Please enter your password to make changes in system packages: ");
+        process = ExecUtil.sudo(commandLine, PySdkBundle.message("python.sdk.packaging.enter.your.password.to.make.changes"));
       }
       else {
         process = commandLine.createProcess();
@@ -551,62 +306,5 @@ public class PyPackageManagerImpl extends PyPackageManager {
     catch (IOException e) {
       throw new PyExecutionException(e.getMessage(), helperPath, args);
     }
-  }
-
-  @NotNull
-  private static List<String> makeSafeToDisplayCommand(@NotNull List<String> cmdline) {
-    final List<String> safeCommand = new ArrayList<>(cmdline);
-    for (int i = 0; i < safeCommand.size(); i++) {
-      if (cmdline.get(i).equals("--proxy") && i + 1 < cmdline.size()) {
-        safeCommand.set(i + 1, makeSafeProxyArgument(cmdline.get(i + 1)));
-      }
-    }
-    return safeCommand;
-  }
-
-  @NotNull
-  private static String makeSafeProxyArgument(@NotNull String proxyArgument) {
-    try {
-      final URI proxyUri = new URI(proxyArgument);
-      final String credentials = proxyUri.getUserInfo();
-      if (credentials != null) {
-        final int colonIndex = credentials.indexOf(":");
-        if (colonIndex >= 0) {
-          final String login = credentials.substring(0, colonIndex);
-          final String password = credentials.substring(colonIndex + 1);
-          final String maskedPassword = StringUtil.repeatSymbol('*', password.length());
-          final String maskedCredentials = login + ":" + maskedPassword;
-          return proxyArgument.replaceFirst(Pattern.quote(credentials), maskedCredentials);
-        }
-      }
-    }
-    catch (URISyntaxException ignored) {
-    }
-    return proxyArgument;
-  }
-
-  @NotNull
-  private List<PyPackage> parsePackagingToolOutput(@NotNull String s) throws ExecutionException {
-    final String[] lines = StringUtil.splitByLines(s);
-    final List<PyPackage> packages = new ArrayList<>();
-    for (String line : lines) {
-      final List<String> fields = StringUtil.split(line, "\t");
-      if (fields.size() < 3) {
-        throw new PyExecutionException(PySdkBundle.message("python.sdk.packaging.invalid.output.format"), PACKAGING_TOOL, Collections.emptyList());
-      }
-      final String name = fields.get(0);
-      final String version = fields.get(1);
-      final String location = fields.get(2);
-      final List<PyRequirement> requirements = new ArrayList<>();
-      if (fields.size() >= 4) {
-        final String requiresLine = fields.get(3);
-        final String requiresSpec = StringUtil.join(StringUtil.split(requiresLine, ":"), "\n");
-        requirements.addAll(parseRequirements(requiresSpec));
-      }
-      if (!"Python".equals(name)) {
-        packages.add(new PyPackage(name, version, location, requirements));
-      }
-    }
-    return packages;
   }
 }
